--- a/_columns/The_Big_Picture/zh-cn/2024-07-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-07-26.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Rallies After Inflation Report; Fed's Powell, Big Tech Earnings Tsunami Loom
+  Stock Market Rallies After Inflation Report; Fed's Powell, Big Tech Earnings Tsunami Loom	通胀报告发布后股市反弹;美联储鲍威尔和大型科技公司财报海啸迫在眉睫
 date: 2024-07-26 17:23 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,84 +10,106 @@ author: MICHAEL LARKIN
 
 
 
-The stock market ended a bruising week on a high note Friday following a favorable inflation report. Now the latest Federal Reserve interest rate decision and a slew of Big Tech earnings loom.
+The stock market ended a bruising week on a high note Friday following a favorable inflation report. Now the latest Federal Reserve interest rate decision and a slew of Big Tech earnings loom.  
+在有利的通胀报告发布后，股市周五以高调结束了伤痕累累的一周。现在，美联储的最新利率决定和一系列大型科技公司的收益迫在眉睫。
 
 
 
 
-The Nasdaq composite rallied 1%, though it wasn't enough to offset a weekly decline of 2.1%. This was its second weekly decline in a row as the index closed below a key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). On the bright side, the tech-heavy composite remains up nearly 16% in 2024.
+The Nasdaq composite rallied 1%, though it wasn't enough to offset a weekly decline of 2.1%. This was its second weekly decline in a row as the index closed below a key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). On the bright side, the tech-heavy composite remains up nearly 16% in 2024.  
+纳斯达克综合指数上涨 1%，但不足以抵消每周 2.1% 的跌幅。这是该指数连续第二周下跌，因为该指数收于关键的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)下方。从好的方面来看，以科技为主的复合材料在 2024 年仍上涨了近 16%。
 
 
-The S&P 500 popped 1.1% Friday, but ended the week down 0.8%. It is managing to hold above its 50-day line for now. The benchmark index retained a gain of 14.5% for the year so far.
+The S&P 500 popped 1.1% Friday, but ended the week down 0.8%. It is managing to hold above its 50-day line for now. The benchmark index retained a gain of 14.5% for the year so far.  
+标准普尔 500 指数周五上涨 1.1%，但本周收盘下跌 0.8%。目前，它设法守住了 50 日线上方。到目前为止，该基准指数今年保持了 14.5% 的涨幅。
 
 
-Advancers led decliners by around 4-to-1 on the New York Stock Exchange and nearly 3-to-1 on the Nasdaq. The June 20 distribution day on the S&P 500 elapsed on time.
+Advancers led decliners by around 4-to-1 on the New York Stock Exchange and nearly 3-to-1 on the Nasdaq. The June 20 distribution day on the S&P 500 elapsed on time.  
+纽约证券交易所的上涨股以约 4 比 1 的比分领先下跌的股票，在纳斯达克指数以近 3 比 1 的比分领先下跌的股票。标准普尔 500 指数 6 月 20 日的分发日准时过去。
 
 
-The Dow Jones Industrial Average fared best among the major indexes on the stock market, popping 1.6%. This helped it rise 0.8% for the week, its fourth weekly gain in a row. **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) was the star here, rocketing 23% following an earnings beat.
+The Dow Jones Industrial Average fared best among the major indexes on the stock market, popping 1.6%. This helped it rise 0.8% for the week, its fourth weekly gain in a row. **3M** ([MMM](https://research.investors.com/quote.aspx?symbol=MMM)) was the star here, rocketing 23% following an earnings beat.  
+道琼斯工业平均指数在股市的主要指数中表现最好，上涨 1.6%。这帮助其本周上涨 0.8%，连续第四周上涨。**3M** （[MMM）](https://research.investors.com/quote.aspx?symbol=MMM) 是这里的明星，在收益超出预期后飙升了 23%。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/07/MP072624-274x300.jpg)Small caps continued recent standout performance. The Russell 2000 jumped 1.7% Friday and nailed down a 3.5% weekly lift. By contrast, the Innovator IBD 50 exchange traded fund ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell for the second week in a row despite notching a daily gain of 1.4%. The midcap S&P 400 rose 2% for the week.
+![](https://www.investors.com/wp-content/uploads/2024/07/MP072624-274x300.jpg)Small caps continued recent standout performance. The Russell 2000 jumped 1.7% Friday and nailed down a 3.5% weekly lift. By contrast, the Innovator IBD 50 exchange traded fund ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) fell for the second week in a row despite notching a daily gain of 1.4%. The midcap S&P 400 rose 2% for the week.  
+小盘股延续了近期的出色表现。罗素 2000 指数周五上涨 1.7%，周涨幅为 3.5%。相比之下，Innovator IBD 50 交易所交易基金 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 尽管单日上涨 1.4%，但连续第二周下跌。中型股标准普尔 400 指数本周上涨 2%。
 
 
-While Friday's bounce was encouraging, it was not enough to stave off painful weekly losses for the S&P 500 and Nasdaq. With some noteworthy events in the coming week, including a slew of tech earnings, it remains prudent to hold exposure to the 40% to 60% level for now.
+While Friday's bounce was encouraging, it was not enough to stave off painful weekly losses for the S&P 500 and Nasdaq. With some noteworthy events in the coming week, including a slew of tech earnings, it remains prudent to hold exposure to the 40% to 60% level for now.  
+虽然周五的反弹令人鼓舞，但这不足以避免标准普尔 500 指数和纳斯达克指数的每周痛苦下跌。由于未来一周将发生一些值得注意的事件，包括一系列科技股收益，目前将敞口保持在 40% 至 60% 的水平仍然是谨慎的。
 
 
-PCE Boosts Stocks; Powell, Big Tech Earnings Next
--------------------------------------------------
+PCE Boosts Stocks; Powell, Big Tech Earnings NextPCE 提振股市;Powell，大型科技公司财报 接下来
+-----------------------------------------------------------------------------
 
 
-Stocks were able to trim some weekly losses following the latest Personal Consumption Expenditures Price Index reading. Core PCE rose 2.6% vs. last year, slightly above views for a 2.5% lift according to Econoday. Headline PCE rose 2.5% year over year, matching expectations. The fact it was largely as expected soothed investors.
+Stocks were able to trim some weekly losses following the latest Personal Consumption Expenditures Price Index reading. Core PCE rose 2.6% vs. last year, slightly above views for a 2.5% lift according to Econoday. Headline PCE rose 2.5% year over year, matching expectations. The fact it was largely as expected soothed investors.  
+在最新的个人消费支出价格指数读数之后，股市能够收复一些周跌幅。根据 Econoday 的数据，核心 PCE 与去年相比增长 2.6%，略高于预期增长 2.5%。整体 PCE 同比增长 2.5%，符合预期。事实上，这在很大程度上符合预期，这让投资者感到安抚。
 
 
-The coming week could be make-or-break, with a slew of economic events and key earnings reports on the horizon. Chief among them is the latest Federal Open Market Committee meeting on interest rates, which takes place Tuesday and Wednesday. With hopes rising for a potential rate cut in September, post-meeting comments from Fed Chair Jerome Powell could provide more clarity and potentially move the stock market as a result.
+The coming week could be make-or-break, with a slew of economic events and key earnings reports on the horizon. Chief among them is the latest Federal Open Market Committee meeting on interest rates, which takes place Tuesday and Wednesday. With hopes rising for a potential rate cut in September, post-meeting comments from Fed Chair Jerome Powell could provide more clarity and potentially move the stock market as a result.  
+未来一周可能是成败攸关的一周，一系列经济事件和关键收益报告即将出炉。其中最主要的是最新的联邦公开市场委员会利率会议，该会议将于周二和周三举行。随着对 9 月可能降息的希望上升，美联储主席杰罗姆鲍威尔在会后的评论可能会提供更清晰的信息，并可能因此影响股市。
 
 
-A slew of labor readings are also due to drop, including job openings data on Tuesday and the ADP employment report on Wednesday. Friday's U.S. employment report from the Bureau of Labor Statistics is the critical data point though. Economists expect the American economy will have added 206,000 nonfarm jobs in July, [according to Econoday](https://research.investors.com/economic-calendar/).
+A slew of labor readings are also due to drop, including job openings data on Tuesday and the ADP employment report on Wednesday. Friday's U.S. employment report from the Bureau of Labor Statistics is the critical data point though. Economists expect the American economy will have added 206,000 nonfarm jobs in July, [according to Econoday](https://research.investors.com/economic-calendar/).  
+大量劳动力数据也将下降，包括周二的职位空缺数据和周三的 ADP 就业报告。不过，美国劳工统计局周五的美国就业报告是关键数据点。[据 Econoday 称](https://research.investors.com/economic-calendar/)，经济学家预计美国经济将在 7 月份增加 206,000 个非农工作岗位。
 
 
-As if that wasn't enough, [some major tech players are set to post results](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-apple-meta-amazon-microsoft/) in the coming week. **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) are among the companies set to provide quarterly updates.
+As if that wasn't enough, [some major tech players are set to post results](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-apple-meta-amazon-microsoft/) in the coming week. **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)), **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) and **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) are among the companies set to provide quarterly updates.  
+似乎这还不够，[一些主要的科技公司将在未来一周公布业绩](https://www.investors.com/research/earnings-preview/earnings-calendar-spotlight-apple-meta-amazon-microsoft/)。**Microsoft** （[MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)）、**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 和 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 等公司将提供季度更新。
 
 
-Dexcom Dive Hits This Stock Market Group
-----------------------------------------
+Dexcom Dive Hits This Stock Market GroupDexcom Dive 登陆这个股票市场集团
+--------------------------------------------------------------
 
 
-The [S&P 500 sectors ended Friday](https://www.investors.com/category/etfs-and-funds/sectors/) in positive territory. Industrials and materials fared best while health care and energy struggled.
+The [S&P 500 sectors ended Friday](https://www.investors.com/category/etfs-and-funds/sectors/) in positive territory. Industrials and materials fared best while health care and energy struggled.  
+[标准普尔 500 板块周五收](https://www.investors.com/category/etfs-and-funds/sectors/)盘上涨。工业和材料表现最好，而医疗保健和能源则举步维艰。
 
 
 
-The relative performance of the of the Investor's Business Daily industry groups offered another perspective on the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
+The relative performance of the of the Investor's Business Daily industry groups offered another perspective on the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
+投资者商业日报行业团体的相对表现为[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的行动提供了另一种视角。
 
 
-Integrated telecom plays, cable stocks, tire firms and database software companies were among the best-performing groups.
+Integrated telecom plays, cable stocks, tire firms and database software companies were among the best-performing groups.  
+综合电信公司、有线电视股、轮胎公司和数据库软件公司是表现最好的板块。
 
 
-By contrast, airlines, trucking and consumer loan stocks lagged. The medical products group also struggled amid a post-earnings plunge from **Dexcom** ([DXCM](https://research.investors.com/quote.aspx?symbol=DXCM)). The glucose monitor maker suffered its worst day on record after falling 40.7% amid weak earnings and guidance.
+By contrast, airlines, trucking and consumer loan stocks lagged. The medical products group also struggled amid a post-earnings plunge from **Dexcom** ([DXCM](https://research.investors.com/quote.aspx?symbol=DXCM)). The glucose monitor maker suffered its worst day on record after falling 40.7% amid weak earnings and guidance.  
+相比之下，航空公司、卡车运输和消费贷款股票表现落后。医疗产品集团也在 **Dexcom** （[DXCM）](https://research.investors.com/quote.aspx?symbol=DXCM) 财报后暴跌中苦苦挣扎。这家血糖监测仪制造商在收益和指引疲软的情况下下跌 40.7%，创下有记录以来最糟糕的一天。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_072624.pdf).
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_072624.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_072624.pdf)。
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Nike Is Out, These Apparel Retailers 'Seek Religion' On Inventory](https://www.investors.com/news/nike-stock-abercrombie-crocs-lulu-apparel-footwear-stocks/)
+[Nike Is Out, These Apparel Retailers 'Seek Religion' On Inventory  
+耐克出局，这些服装零售商在库存上“寻求宗教”](https://www.investors.com/news/nike-stock-abercrombie-crocs-lulu-apparel-footwear-stocks/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions  
+股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
