--- a/_columns/The_Big_Picture/zh-cn/2024-07-30.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-07-30.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Falls As Bears Bash Techs; S&P 500 Tests Key Level Ahead Of Fed
+  Stock Market Falls As Bears Bash Techs; S&P 500 Tests Key Level Ahead Of Fed	股市下跌，空头重创科技股;标准普尔 500 指数在美联储之前测试关键水平
 date: 2024-07-30 18:15 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,56 +10,70 @@ author: MICHAEL LARKIN
 
 
 
-The stock market was punched lower as the bears took a big bite out of tech stocks. Wednesday's conclusion of the latest Federal Open Market Committee meeting, and the post-event musings of Fed Chair Jerome Powell, now look key to the health of the current market.
+The stock market was punched lower as the bears took a big bite out of tech stocks. Wednesday's conclusion of the latest Federal Open Market Committee meeting, and the post-event musings of Fed Chair Jerome Powell, now look key to the health of the current market.  
+由于空头大肆打击科技股，股市走低。周三结束的最新联邦公开市场委员会会议，以及美联储主席杰罗姆鲍威尔在事后的沉思，现在看起来对当前市场的健康状况至关重要。
 
 
 
 
-The Nasdaq composite tumbled 1.3% and is now down 1.2% for the week so far. The index now sits more than 2% below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). And while that retains a strong gain for the year so far, the composite is on track to end July down 3.3% with just one trading day remaining.
+The Nasdaq composite tumbled 1.3% and is now down 1.2% for the week so far. The index now sits more than 2% below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). And while that retains a strong gain for the year so far, the composite is on track to end July down 3.3% with just one trading day remaining.  
+纳斯达克综合指数下跌 1.3%，本周迄今下跌 1.2%。该指数现在比 [2 天移动平均线低 50](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)% 以上。虽然今年迄今仍保持强劲涨幅，但该综合指数有望在 7 月底下跌 3.3%，仅剩一个交易日。
 
 
-The S&P 500 fell 0.5% Tuesday and is now nursing a weekly decline of 0.4%. It closed a hair below its 50-day line as it makes a fresh test of that critical level. The benchmark index is down 0.4% so far this month.
+The S&P 500 fell 0.5% Tuesday and is now nursing a weekly decline of 0.4%. It closed a hair below its 50-day line as it makes a fresh test of that critical level. The benchmark index is down 0.4% so far this month.  
+标准普尔 500 指数周二下跌 0.5%，目前每周下跌 0.4%。它收于 50 日线下方，因为它对该关键水平进行了新的测试。本月迄今，该基准指数下跌了 0.4%。
 
 
-More Distribution, But A Ray Of Sunshine
-----------------------------------------
+More Distribution, But A Ray Of Sunshine更多的分发，但一缕阳光
+---------------------------------------------------
 
 
-Despite the negative action at the index level, advancers actually held a near 2-1 advantage on decliners on the New York Stock Exchange. In contrast, decliners held a slight edge on advancers on the Nasdaq. Nevertheless, both the S&P 500 and the Nasdaq composite added [a distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) amid higher volume.
+Despite the negative action at the index level, advancers actually held a near 2-1 advantage on decliners on the New York Stock Exchange. In contrast, decliners held a slight edge on advancers on the Nasdaq. Nevertheless, both the S&P 500 and the Nasdaq composite added [a distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) amid higher volume.  
+尽管指数层面出现负面行动，但纽约证券交易所的上涨股票实际上比下跌的股票具有近 2-1 的优势。相比之下，下跌的股票略高于纳斯达克的上涨股票。尽管如此，标准普尔 500 指数和纳斯达克综合指数在成交量增加的情况下都增加了[一个发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/07/MP073024-209x300.jpg)The broader stock market rotation was illustrated by the fact that the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) rose 0.5% today. It's on track for an eye-catching monthly gain of 4% and sits clear of all its major and short-term moving averages.
+![](https://www.investors.com/wp-content/uploads/2024/07/MP073024-209x300.jpg)The broader stock market rotation was illustrated by the fact that the Invesco S&P 500 Equal Weight ETF ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) rose 0.5% today. It's on track for an eye-catching monthly gain of 4% and sits clear of all its major and short-term moving averages.  
+景顺标准普尔 500 等权重 ETF （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 今天上涨 0.5% 的事实说明了更广泛的股市轮动。它有望实现 4% 的引人注目的月度收益，并避开其所有主要和短期移动平均线。
 
 
-Investors looking for an added ray of sunshine would find it at the number of issues at 52-week highs vs. new lows. There were 218 issues reaching fresh heights on the NYSE vs. just 25 plumbing depths not seen in at least a year.
+Investors looking for an added ray of sunshine would find it at the number of issues at 52-week highs vs. new lows. There were 218 issues reaching fresh heights on the NYSE vs. just 25 plumbing depths not seen in at least a year.  
+寻找额外阳光的投资者会在 52 周高点与新低的发行数量中找到它。纽约证券交易所有 218 个问题达到新高度，而只有 25 个管道深度至少一年来没有出现。
 
 
-Big caps also had a reason to smile, for the Dow Jones Industrial Average turned in a gain of 0.5%. The index is also kicking sand in the faces of the S&P and Nasdaq with a monthly gain so far of 4.2%. Some gains could diminish after **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) posted disappointing results after the close and fell more than 6%.
+Big caps also had a reason to smile, for the Dow Jones Industrial Average turned in a gain of 0.5%. The index is also kicking sand in the faces of the S&P and Nasdaq with a monthly gain so far of 4.2%. Some gains could diminish after **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)) posted disappointing results after the close and fell more than 6%.  
+大盘股也有理由微笑，因为道琼斯工业平均指数上涨了 0.5%。该指数也打在标准普尔和纳斯达克的脸上，迄今每月上涨 4.2%。**Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 收盘后公布令人失望的业绩后，一些涨幅可能会减少，并下跌超过 6%。
 
 
-**Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) and **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) fared best in the Dow during the regular session, contributing more than 125 of the Dow's 203-point gain.
+**Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) and **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) fared best in the Dow during the regular session, contributing more than 125 of the Dow's 203-point gain.  
+**旅行者** （[TRV](https://research.investors.com/quote.aspx?symbol=TRV)） 和高**盛** （[GS）](https://research.investors.com/quote.aspx?symbol=GS) 在常规交易时段在道琼斯指数中表现最佳，在道琼斯指数 203 点的涨幅中贡献了超过 125 点。
 
 
-Small caps managed to squeeze out a gain, with the Russell 2000 ending the session up 0.4%. The same could not be said for growth stocks, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 0.9%. The midcap S&P 400 was modestly positive, rising 0.3% Tuesday.
+Small caps managed to squeeze out a gain, with the Russell 2000 ending the session up 0.4%. The same could not be said for growth stocks, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 0.9%. The midcap S&P 400 was modestly positive, rising 0.3% Tuesday.  
+小盘股成功挤出涨幅，罗素 2000 指数收盘上涨 0.4%。成长型股票则不然，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 0.9%。中型标准普尔 400 指数小幅上涨，周二上涨 0.3%。
 
 
-There should be further clarity on the direction of the current uptrend at this time Wednesday. Given the uncertainty surrounding the stock market at the moment, we are holding our recommended exposure level at the 40%-60% level.
+There should be further clarity on the direction of the current uptrend at this time Wednesday. Given the uncertainty surrounding the stock market at the moment, we are holding our recommended exposure level at the 40%-60% level.  
+周三此时，当前上升趋势的方向应该会进一步明确。鉴于目前股市的不确定性，我们将建议的风险敞口水平维持在 40%-60% 的水平。
 
 
-Fed Meeting Kicks Off; Job Openings Fall
-----------------------------------------
+Fed Meeting Kicks Off; Job Openings Fall美联储会议开始;职位空缺 秋季
+-------------------------------------------------------
 
 
-Investors have no shortage of economic data this week, with Tuesday seeing the release of the latest Job Openings and Labor Turnover Survey. Job postings fell to 8.18 million in June from the upwardly revised 8.23 million in May, the Labor Department reported. This was slightly above the consensus range for 7.8 million to 8.1 million, according to Econoday. The main release comes Friday, though, when the July jobs report drops.
+Investors have no shortage of economic data this week, with Tuesday seeing the release of the latest Job Openings and Labor Turnover Survey. Job postings fell to 8.18 million in June from the upwardly revised 8.23 million in May, the Labor Department reported. This was slightly above the consensus range for 7.8 million to 8.1 million, according to Econoday. The main release comes Friday, though, when the July jobs report drops.  
+投资者本周不乏经济数据，周二将发布最新的职位空缺和劳动力流动率调查。美国劳工部报告称，6 月份的招聘信息从 5 月份上调的 823 万个下降到 6 月份的 818 万个。据 Econoday 称，这略高于 780 万至 810 万的共识范围。不过，主要版本将于周五发布，届时 7 月就业报告将发布。
 
 
-Meanwhile, central bankers gathered for the latest Federal Open Market Committee meeting Tuesday. The event concludes tomorrow, and investors will be looking for details on future interest rate policy. This will come both from the post-meeting statement and from Powell's media conference.
+Meanwhile, central bankers gathered for the latest Federal Open Market Committee meeting Tuesday. The event concludes tomorrow, and investors will be looking for details on future interest rate policy. This will come both from the post-meeting statement and from Powell's media conference.  
+与此同时，央行行长们周二齐聚一堂，参加最新的联邦公开市场委员会会议。该活动将于明天结束，投资者将寻找有关未来利率政策的详细信息。这将来自会后声明和鲍威尔的新闻发布会。
 
 
-[The CME FedWatch tool](https://www.cmegroup.com/trading/interest-rates/countdown-to-fomc.html) has the likelihood of rates holding steady during this week's meeting at 96%. It then suggests there is an 86% likelihood of a 25-basis-point cut during the September meeting. It also rates a 50-basis-point cut as possible, though the 14% likelihood means it remains an outside bet.
+[The CME FedWatch tool](https://www.cmegroup.com/trading/interest-rates/countdown-to-fomc.html) has the likelihood of rates holding steady during this week's meeting at 96%. It then suggests there is an 86% likelihood of a 25-basis-point cut during the September meeting. It also rates a 50-basis-point cut as possible, though the 14% likelihood means it remains an outside bet.  
+[CME FedWatch 工具](https://www.cmegroup.com/trading/interest-rates/countdown-to-fomc.html)显示，在本周的会议上，利率有可能稳定在 96%。然后，它表明在 9 月会议期间降息 25 个基点的可能性为 86%。它还认为美联储将尽可能降息 50 个基点，但 14% 的可能性意味着它仍然是一个外部押注。
 
 
-Treasury yields ended the day lower. The much-watched 10-year Treasury note yield fell four basis points to 4.14%, while the two-year dipped three basis points to 4.36%.
+Treasury yields ended the day lower. The much-watched 10-year Treasury note yield fell four basis points to 4.14%, while the two-year dipped three basis points to 4.36%.  
+美国国债收益率当天收低。备受关注的 10 年期美国国债收益率下跌 4 个基点至 4.14%，而 2 年期美国国债收益率下跌 3 个基点至 4.36%。
 
 
 
@@ -67,7 +81,8 @@ Treasury yields ended the day lower. The much-watched 10-year Treasury note yiel
 ---
 
 
-[**Futures Mixed; Microsoft Skids, But AI Chip Giant Jumps**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-cloud-amd-nvidia-fed-pivot/)
+[**Futures Mixed; Microsoft Skids, But AI Chip Giant Jumps  
+期货涨跌互现;Microsoft 滑坡，但 AI Chip 巨头跳跃**](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-microsoft-cloud-amd-nvidia-fed-pivot/)
 
 
 
@@ -75,45 +90,56 @@ Treasury yields ended the day lower. The much-watched 10-year Treasury note yiel
 ---
 
 
-Some Stock Market Groups Struggle
----------------------------------
+Some Stock Market Groups Struggle一些股票市场团体苦苦挣扎
+---------------------------------------------
 
 
-The [S&P 500 sectors ended mixed Tuesday](https://www.investors.com/category/etfs-and-funds/sectors/), though there was a slight positive bias. Energy and financials were the strongest performers, while technology lagged the most by far.
+The [S&P 500 sectors ended mixed Tuesday](https://www.investors.com/category/etfs-and-funds/sectors/), though there was a slight positive bias. Energy and financials were the strongest performers, while technology lagged the most by far.  
+[标准普尔 500 指数板块周二收盘涨跌互现](https://www.investors.com/category/etfs-and-funds/sectors/)，但略有积极偏见。能源和金融板块表现最强劲，而科技板块迄今表现最落后。
 
 
 
-Once again, traders looking for more insight into the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it from the relative performance of the 197 Investor's Business Daily industry groups. Internet network firms, tire makers, food wholesalers and trucking firms were among the strongest performers.
+Once again, traders looking for more insight into the action [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it from the relative performance of the 197 Investor's Business Daily industry groups. Internet network firms, tire makers, food wholesalers and trucking firms were among the strongest performers.  
+再一次，寻求对[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)走势有更多见解的交易员可以从 197 个投资者商业日报行业团体的相对表现中获得信息。互联网网络公司、轮胎制造商、食品批发商和卡车运输公司表现最为强劲。
 
 
-On the flip side, cleaning products makers, computer hardware plays, electronic parts makers and auto stocks all lagged. Fabless chip stocks also had a tough time, with AI darling **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) losing ground on its 50-day line amid a 7% pounding.
+On the flip side, cleaning products makers, computer hardware plays, electronic parts makers and auto stocks all lagged. Fabless chip stocks also had a tough time, with AI darling **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) losing ground on its 50-day line amid a 7% pounding.  
+另一方面，清洁产品制造商、计算机硬件公司、电子零件制造商和汽车股都表现落后。无晶圆厂芯片股也经历了一段艰难的时期，人工智能宠儿**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 在其 50 天线下跌 7% 中下跌。
 
 
-While Nvidia stock [remains up 109.5% for the year so far](https://research.investors.com/stock-quotes/nasdaq-nvidia-nvda.htm), it has fallen an eye-watering 26.3% from its June high and closed Tuesday at the lowest level since May 24. Nvidia is a member of the [prestigious IBD Leaderboard list of top stocks](https://get.investors.com/leaderboard/), but the position is hedged right now.
+While Nvidia stock [remains up 109.5% for the year so far](https://research.investors.com/stock-quotes/nasdaq-nvidia-nvda.htm), it has fallen an eye-watering 26.3% from its June high and closed Tuesday at the lowest level since May 24. Nvidia is a member of the [prestigious IBD Leaderboard list of top stocks](https://get.investors.com/leaderboard/), but the position is hedged right now.  
+虽然英伟达股价[今年迄今仍上涨 109.5%，](https://research.investors.com/stock-quotes/nasdaq-nvidia-nvda.htm)但已从 6 月的高点下跌了 26.3%，周二收于 5 月 24 日以来的最低水平。Nvidia 是[享有盛誉的 IBD 排行榜顶级股票名单](https://get.investors.com/leaderboard/)的成员，但该头寸现在处于对冲状态。
 
 
-[View the General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_073024.pdf)
+[View the General Market Indicators chart page here.  
+在此处查看 General Market Indicators 图表页面。](https://www.investors.com/wp-content/uploads/2024/07/DailyGMI_073024.pdf)
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Nike Is Out, These Apparel Retailers 'Seek Religion' On Inventory](https://www.investors.com/news/nike-stock-abercrombie-crocs-lulu-apparel-footwear-stocks/)
+[Nike Is Out, These Apparel Retailers 'Seek Religion' On Inventory  
+耐克出局，这些服装零售商在库存上“寻求宗教”](https://www.investors.com/news/nike-stock-abercrombie-crocs-lulu-apparel-footwear-stocks/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions  
+股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
