--- a/_columns/The_Big_Picture/zh-cn/2024-08-02.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-02.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Walloped After Jobs Report; Berkshire Hathaway, Palantir Earnings Due
+  Stock Market Walloped After Jobs Report; Berkshire Hathaway, Palantir Earnings Due	就业报告发布后股市重创;Berkshire Hathaway， Palantir 到期收益
 date: 2024-08-02 17:34 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,34 +10,42 @@ author: MICHAEL LARKIN
 
 
 
-The bears ran amok on the stock market Friday after a weak jobs report raised new recession fears. Now, **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) and **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) earnings are among the noteworthy events in the coming week.
+The bears ran amok on the stock market Friday after a weak jobs report raised new recession fears. Now, **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) and **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) earnings are among the noteworthy events in the coming week.  
+周五，疲软的就业报告引发了对经济衰退的新担忧，空头在股市上大跌。现在，**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 和 **Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 的收益是未来一周值得注意的事件之一。
 
 
 
 
-The Nasdaq composite dived 2.4%, helping it end a wild week where it fell 3.4%. The index has now dropped around 5% below the key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and is more than 10% off its July 11 high. While gains have faded substantially, the tech-heavy composite still remains up nearly 12% for the year so far.
+The Nasdaq composite dived 2.4%, helping it end a wild week where it fell 3.4%. The index has now dropped around 5% below the key [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/) and is more than 10% off its July 11 high. While gains have faded substantially, the tech-heavy composite still remains up nearly 12% for the year so far.  
+纳斯达克综合指数下跌 2.4%，帮助其结束了下跌 3.4% 的疯狂一周。该指数目前已比关键的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)低约 5%，较 7 月 11 日的高点下跌了 10% 以上。虽然涨幅已大幅回落，但今年迄今以科技股为主的综合指数仍上涨了近 12%。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP080224.jpg)The S&P 500 was punched 1.8% lower Friday, booking a 2.1% dip for the week in the process. It gapped below the 50-day line, a distinctly bearish look. The benchmark index now has a slightly better year-to-date gain than the Nasdaq; it is up 12.1%.
+![](https://www.investors.com/wp-content/uploads/2024/08/MP080224.jpg)The S&P 500 was punched 1.8% lower Friday, booking a 2.1% dip for the week in the process. It gapped below the 50-day line, a distinctly bearish look. The benchmark index now has a slightly better year-to-date gain than the Nasdaq; it is up 12.1%.  
+标准普尔 500 指数周五下跌 1.8%，一周下跌 2.1%。它跳空跌破 50 日线，明显看跌。该基准指数今年迄今的涨幅略好于纳斯达克指数;它上涨了 12.1%。
 
 
-Decliners led advancers by around 2-to-1 on the New York Stock Exchange and more than 4-to-1 on the Nasdaq.
+Decliners led advancers by around 2-to-1 on the New York Stock Exchange and more than 4-to-1 on the Nasdaq.  
+纽约证券交易所的下跌股以约 2 比 1 的比分领先，在纳斯达克的跌幅超过 4 比 1。
 
 
-Market Weakness Triggers This Switch
-------------------------------------
+Market Weakness Triggers This Switch市场疲软触发了这种转变
+-----------------------------------------------
 
 
-The Dow Jones Industrial Average fared best among the major indexes on the stock market. But this was nothing to boast about, given it tumbled 1.5%. **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) outperformed here while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) lagged following results.
+The Dow Jones Industrial Average fared best among the major indexes on the stock market. But this was nothing to boast about, given it tumbled 1.5%. **UnitedHealth** ([UNH](https://research.investors.com/quote.aspx?symbol=UNH)) outperformed here while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) and **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) lagged following results.  
+道琼斯工业平均指数在股市的主要指数中表现最好。但这没什么好夸耀的，因为它下跌了 1.5%。**UnitedHealth** （[UNH](https://research.investors.com/quote.aspx?symbol=UNH)） 在这里表现出色，而 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 和**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 在结果之后落后。
 
 
-Small caps were given a harsh spanking by the bears. The Russell 2000 dived 3.5% Friday and has ceded all the rally gains it's had since July 11. Growth stocks also suffered, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 3.9%. It now sits below its 200-day moving average and has fallen more than 13% over the past four weeks.
+Small caps were given a harsh spanking by the bears. The Russell 2000 dived 3.5% Friday and has ceded all the rally gains it's had since July 11. Growth stocks also suffered, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 3.9%. It now sits below its 200-day moving average and has fallen more than 13% over the past four weeks.  
+小盘股被空头狠狠地打了一巴掌。罗素 2000 指数周五下跌 3.5%，回吐了自 7 月 11 日以来的所有涨幅。成长型股票也遭受重创，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌 3.9%。它现在低于其 200 天移动平均线，并且在过去 4 周内下跌了 13% 以上。
 
 
-Due to Friday's sharp pullback, Investor's Business Daily is reducing its recommended market exposure to the 20%-to-40% level. Be sure to trim back exposure in a measured fashion, and cut the weakest stocks in your portfolio first. Look for stocks falling 7% to 8% below your purchase price or those making sharp breaks below the 50-day moving average.
+Due to Friday's sharp pullback, Investor's Business Daily is reducing its recommended market exposure to the 20%-to-40% level. Be sure to trim back exposure in a measured fashion, and cut the weakest stocks in your portfolio first. Look for stocks falling 7% to 8% below your purchase price or those making sharp breaks below the 50-day moving average.  
+由于周五的大幅回调，Investor's Business Daily 将其建议的市场敞口降至 20% 至 40% 的水平。请务必以有节制的方式削减风险敞口，并首先削减投资组合中最弱的股票。寻找比您的购买价格低 7% 至 8% 的股票，或者那些急剧跌破 50 天移动平均线的股票。
 
 
-The stock market is now in a correction. Due to this our attention will turn to looking for a new rally attempt and follow-through day. The distribution day count will be reset for beginning of the next uptrend.
+The stock market is now in a correction. Due to this our attention will turn to looking for a new rally attempt and follow-through day. The distribution day count will be reset for beginning of the next uptrend.  
+股市现在处于调整中。因此，我们的注意力将转向寻找新的集会尝试和后续日。分配日计数将在下一个上升趋势开始时重置。
 
 
 
@@ -45,7 +53,8 @@ The stock market is now in a correction. Due to this our attention will turn to 
 ---
 
 
-**[How Will Market React To Nvidia AI Chip News?](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-ai-chip-delay-buffett-apple-stock/)**
+**[How Will Market React To Nvidia AI Chip News?  
+市场对 Nvidia AI 芯片的消息有何反应？](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-ai-chip-delay-buffett-apple-stock/)**
 
 
 
@@ -53,61 +62,76 @@ The stock market is now in a correction. Due to this our attention will turn to 
 ---
 
 
-Jobs Report Disappoints; Berkshire, Palantir Earnings Next
-----------------------------------------------------------
+Jobs Report Disappoints; Berkshire, Palantir Earnings Next就业报告令人失望;Berkshire， Palantir 财报 下一篇
+---------------------------------------------------------------------------------------------
 
 
-Stocks were mauled after the July jobs report showed the U.S. economy added 114,000 nonfarm jobs last month, well shy of economist estimates for 180,000. Additionally, the unemployment rate popped to 4.3% while economists saw it holding steady at 4.1%.
+Stocks were mauled after the July jobs report showed the U.S. economy added 114,000 nonfarm jobs last month, well shy of economist estimates for 180,000. Additionally, the unemployment rate popped to 4.3% while economists saw it holding steady at 4.1%.  
+7 月就业报告显示，美国经济上个月增加了 114,000 个非农就业岗位，远低于经济学家估计的 180,000 个，此后股市遭受重创。此外，失业率飙升至 4.3%，而经济学家认为失业率稳定在 4.1%。
 
 
-Rising fears of a recession spurred a flight to safety. The 10-year Treasury note dived 18 basis points to 3.8% while the two-year sank 28 basis point to 3.88%. It also raised questions on whether Fed officials had been right to hold off on cutting interest rates at this week's Federal Open Market Committee meeting.
+Rising fears of a recession spurred a flight to safety. The 10-year Treasury note dived 18 basis points to 3.8% while the two-year sank 28 basis point to 3.88%. It also raised questions on whether Fed officials had been right to hold off on cutting interest rates at this week's Federal Open Market Committee meeting.  
+对经济衰退的担忧日益加剧，促使人们逃往避险的地方。10 年期美国国债下跌 18 个基点至 3.8%，而 2 年期美国国债下跌 28 个基点至 3.88%。它还引发了人们对美联储官员在本周联邦公开市场委员会会议上推迟降息是否正确的质疑。
 
 
-The coming week will be lighter on economic data, something of a relief after the past week. The S&P final U.S. services PMI reading for July comes Monday while U.S. trade deficit data for June comes Tuesday. Initial jobless claims figures will be under even more scrutiny than usual Thursday. There will also be some Fedspeak, with Richmond Fed President Tom Barkin making an appearance Thursday.
+The coming week will be lighter on economic data, something of a relief after the past week. The S&P final U.S. services PMI reading for July comes Monday while U.S. trade deficit data for June comes Tuesday. Initial jobless claims figures will be under even more scrutiny than usual Thursday. There will also be some Fedspeak, with Richmond Fed President Tom Barkin making an appearance Thursday.  
+未来一周的经济数据将趋于轻松，在上周之后，这让人松了一口气。标准普尔 7 月美国服务业采购经理人指数终值将于周一公布，而美国 6 月贸易逆差数据将于周二公布。周四，首次申请失业救济人数将受到比平时更严格的审查。还将有一些 Fedspeak，里士满联储主席 Tom Barkin 周四将露面。
 
 
-There will be some [noteworthy earnings reports though](https://www.investors.com/research/earnings-preview/dow-jones-companies-earnings-calendar/). **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)), led by legendary investor Warren Buffett, posts second-quarter results on Saturday. In the days that follow, **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)), **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) are among noteworthy firms posting results.
+There will be some [noteworthy earnings reports though](https://www.investors.com/research/earnings-preview/dow-jones-companies-earnings-calendar/). **Berkshire Hathaway** ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)), led by legendary investor Warren Buffett, posts second-quarter results on Saturday. In the days that follow, **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)), **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)) and **Caterpillar** ([CAT](https://research.investors.com/quote.aspx?symbol=CAT)) are among noteworthy firms posting results.  
+不过，会有一些[值得注意的收益报告](https://www.investors.com/research/earnings-preview/dow-jones-companies-earnings-calendar/)。由传奇投资者沃伦·巴菲特 （Warren Buffett） 领导的**伯克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 周六公布了第二季度业绩。在接下来的几天里，**Palantir Technologies** （[PLTR）、](https://research.investors.com/quote.aspx?symbol=PLTR)**Walt Disney** （[DIS](https://research.investors.com/quote.aspx?symbol=DIS)） 和 **Caterpillar** （[CAT）](https://research.investors.com/quote.aspx?symbol=CAT) 等值得注意的公司都公布了业绩。
 
 
-Apple Earnings Help This Stock Market Group
--------------------------------------------
+Apple Earnings Help This Stock Market Group苹果财报帮助这个股市组
+------------------------------------------------------
 
 
-The [S&P 500 sectors closed Friday](https://www.investors.com/category/etfs-and-funds/sectors/) mostly negative. Consumer staples and utilities, both defensive areas, fared best. In contrast, financials and consumer discretionary took the worst shellacking.
+The [S&P 500 sectors closed Friday](https://www.investors.com/category/etfs-and-funds/sectors/) mostly negative. Consumer staples and utilities, both defensive areas, fared best. In contrast, financials and consumer discretionary took the worst shellacking.  
+[标准普尔 500 板块周五收](https://www.investors.com/category/etfs-and-funds/sectors/)盘大多为负面。必需消费品和公用事业这两个防御性板块表现最好。相比之下，金融和非必需消费品受到的打击最为严重。
 
 
 
-Those looking for an alternate viewpoint [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it by examining the relative performance of the Investor's Business Daily industry groups.
+Those looking for an alternate viewpoint [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) could get it by examining the relative performance of the Investor's Business Daily industry groups.  
+那些在[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)上寻找不同观点的人可以通过研究 Investor's Business Daily 行业团体的相对表现来了解它。
 
 
-Nonalcoholic beverage firms, auto parts plays and cleaning products companies were among the best performers. And while **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) ended off highs after rallying on earnings, it still helped the telecom consumer products group outperform.
+Nonalcoholic beverage firms, auto parts plays and cleaning products companies were among the best performers. And while **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) ended off highs after rallying on earnings, it still helped the telecom consumer products group outperform.  
+非酒精饮料公司、汽车零部件公司和清洁产品公司表现最佳。尽管**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在财报反弹后收于高点，但仍帮助电信消费产品集团跑赢大盘。
 
 
-Oil-and-gas machinery plays, travel booking stocks, media periodicals and chip equipment firms all lagged. Semiconductor manufacturing firms also struggled amid Intel's 26% dive following its poor results and move to lay off more than 15,000 employees.
+Oil-and-gas machinery plays, travel booking stocks, media periodicals and chip equipment firms all lagged. Semiconductor manufacturing firms also struggled amid Intel's 26% dive following its poor results and move to lay off more than 15,000 employees.  
+石油和天然气机械公司、旅游预订股票、媒体期刊和芯片设备公司都落后了。半导体制造公司也在英特尔因业绩不佳而暴跌 26% 并裁员 15,000 多名员工的情况下苦苦挣扎。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080224.pdf).
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080224.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080224.pdf)。
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[This Chip Stock Called 'Shining Beacon Of Light'](https://www.investors.com/news/technology/mpwr-stock-monolithic-power-semiconductor-stocks-q2/)
+[This Chip Stock Called 'Shining Beacon Of Light'  
+这种芯片股票被称为“Shining Beacon Of Light”](https://www.investors.com/news/technology/mpwr-stock-monolithic-power-semiconductor-stocks-q2/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions  
+股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
