--- a/_columns/The_Big_Picture/zh-cn/2024-08-05.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-05.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Plunge Prompts This Shift; Apple Crumbles After Warren Buffett Move
+  Stock Market Plunge Prompts This Shift; Apple Crumbles After Warren Buffett Move	股市暴跌促使了这种转变;沃伦·巴菲特 （Warren Buffett） 搬迁后苹果倒闭
 date: 2024-08-05 18:10 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,109 +10,138 @@ author: MICHAEL LARKIN
 
 
 
-Bears attacked again Monday, causing stocks to plunge around the globe and spurring a change in IBD's recommended stock market exposure. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) was among tech names mauled after legendary investor Warren Buffett slashed **Berkshire Hathaway**'s ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) holdings in the firm.
+Bears attacked again Monday, causing stocks to plunge around the globe and spurring a change in IBD's recommended stock market exposure. **Apple** ([AAPL](https://research.investors.com/quote.aspx?symbol=AAPL)) was among tech names mauled after legendary investor Warren Buffett slashed **Berkshire Hathaway**'s ([BRKB](https://research.investors.com/quote.aspx?symbol=BRKB)) holdings in the firm.  
+空头周一再次发动攻击，导致全球股市暴跌，并刺激 IBD 建议的股市敞口发生变化。**苹果** （[AAPL）](https://research.investors.com/quote.aspx?symbol=AAPL) 在传奇投资者沃伦·巴菲特 （Warren Buffett） 大幅削减伯**克希尔哈撒韦**公司 （[BRKB）](https://research.investors.com/quote.aspx?symbol=BRKB) 在该公司的持股后受到重创。
 
 
 
 
-The U.S. market was the last domino to fall amid a global sell-off that saw the Japanese Topix index suffer its worst day since Black Monday in October 1987. It wiped out all its gains for the year amid a 12.2% decline. The Nikkei 225 index fell 12.4%.
+The U.S. market was the last domino to fall amid a global sell-off that saw the Japanese Topix index suffer its worst day since Black Monday in October 1987. It wiped out all its gains for the year amid a 12.2% decline. The Nikkei 225 index fell 12.4%.  
+美国市场是在全球抛售中倒下的最后一张多米诺骨牌，日本东证指数遭遇了自 1987 年 10 月黑色星期一以来最糟糕的一天。它在 12.2% 的下跌中抹去了今年的所有收益。日经 225 指数下跌 12.4%。
 
 
-Things were not quite so bad in the U.S., but Wall Street was awash with red ink nevertheless. The Nasdaq composite dived 3.4%, causing it to lose more ground on its 50-day line. But the fact it found support at its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-use-200-day-moving-average/) will give some encouragement to the bulls. It now sits more than 13% below its July 11 high. The tech-heavy composite is now up less than 8% in 2024 as once-hefty gains continue to shrink.
+Things were not quite so bad in the U.S., but Wall Street was awash with red ink nevertheless. The Nasdaq composite dived 3.4%, causing it to lose more ground on its 50-day line. But the fact it found support at its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-use-200-day-moving-average/) will give some encouragement to the bulls. It now sits more than 13% below its July 11 high. The tech-heavy composite is now up less than 8% in 2024 as once-hefty gains continue to shrink.  
+美国的情况并没有那么糟糕，但华尔街仍然充斥着红色墨水。纳斯达克综合指数下跌 3.4%，导致其在 50 日线上下跌更多。但事实上，它在 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-use-200-day-moving-average/)处找到支撑，这将给多头带来一些鼓舞。它现在比 7 月 11 日的高点低 13% 以上。随着曾经的大幅上涨继续萎缩，以科技股为主的综合指数目前在 2024 年的涨幅不到 8%。
 
 
-The S&P 500 suffered its worst day since June 14, 2022, as it plunged 3%. It suffered its second gap down in succession and now sits 5.1% below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The benchmark index has already fallen 6.1% in August but retains a solid year-to-date gain of nearly 9%.
+The S&P 500 suffered its worst day since June 14, 2022, as it plunged 3%. It suffered its second gap down in succession and now sits 5.1% below the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). The benchmark index has already fallen 6.1% in August but retains a solid year-to-date gain of nearly 9%.  
+标准普尔 500 指数遭遇了自 2022 年 6 月 14 日以来最糟糕的一天，暴跌 3%。它连续第二次跳空下跌，目前比 [50 天移动平均线低 5.1](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)%。该基准指数在 8 月份已经下跌了 6.1%，但年初至今仍保持了近 9% 的稳健涨幅。
 
 
-Decliners led advancers by around 13-to-1 on the New York Stock Exchange and more than 6-to-1 on the Nasdaq. Volume ran higher on both main indexes, further underlining the negative action.
+Decliners led advancers by around 13-to-1 on the New York Stock Exchange and more than 6-to-1 on the Nasdaq. Volume ran higher on both main indexes, further underlining the negative action.  
+纽约证券交易所的下跌股以约 13 比 1 的比分领先上涨的股票，在纳斯达克以超过 6 比 1 的比分领先上涨的股票。两个主要指数的成交量都走高，进一步凸显了负面行动。
 
 
-Apple Crushed On Buffett Move
------------------------------
+Apple Crushed On Buffett Move苹果对巴菲特的举动感到沮丧
+------------------------------------------
 
 
-The Dow Jones Industrial Average may have performed better than the other major indexes, but it still got walloped. It undercut the 50-day line as it dived 1,034 points, or 2.6%.
+The Dow Jones Industrial Average may have performed better than the other major indexes, but it still got walloped. It undercut the 50-day line as it dived 1,034 points, or 2.6%.  
+道琼斯工业平均指数的表现可能优于其他主要指数，但它仍然受到了重创。它跌破 50 日线，下跌 1,034 点，或 2.6%。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP080524-243x300.jpg)Not a single Dow component ended in positive territory. Apple was among the worst performers as it fell 4.8%, though it finished well off lows, amid the news Buffett's Berkshire had slashed its Apple holdings by roughly 50%. This was its worst day since Sept. 29, 2022. **Intel**'s ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) sell-off also continued, the chip giant diving 6.4%. Berkshire itself, which is not a Dow Jones component, fell 3.4% despite an earnings beat.
+![](https://www.investors.com/wp-content/uploads/2024/08/MP080524-243x300.jpg)Not a single Dow component ended in positive territory. Apple was among the worst performers as it fell 4.8%, though it finished well off lows, amid the news Buffett's Berkshire had slashed its Apple holdings by roughly 50%. This was its worst day since Sept. 29, 2022. **Intel**'s ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) sell-off also continued, the chip giant diving 6.4%. Berkshire itself, which is not a Dow Jones component, fell 3.4% despite an earnings beat.  
+没有一个道琼斯指数成分股收于正值区域。苹果是表现最差的股票之一，下跌 4.8%，尽管在巴菲特的伯克希尔将其持有的苹果股票削减约 50% 的消息传出后，它收盘远低于低点。这是自 2022 年 9 月 29 日以来最糟糕的一天。**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 的抛售也在继续，这家芯片巨头暴跌 6.4%。伯克希尔本身不是道琼斯的成分股，尽管收益超出预期，但仍下跌 3.4%。
 
 
-Bears gave small caps a painful beatdown, too. The Russell 2000 ended the day down 3.3% after getting support at the 200-day line. Growth stocks also suffered, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 2%. It is lagging all its moving averages and is now nearly flat for the year.
+Bears gave small caps a painful beatdown, too. The Russell 2000 ended the day down 3.3% after getting support at the 200-day line. Growth stocks also suffered, with the Innovator IBD 50 ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) exchange traded fund falling 2%. It is lagging all its moving averages and is now nearly flat for the year.  
+空头也给了小盘股一个痛苦的打击。罗素 2000 指数在 200 日线获得支撑后收盘下跌 3.3%。成长型股票也遭受了损失，Innovator IBD 50 （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 交易所交易基金下跌了 2%。它落后于所有移动平均线，现在今年几乎持平。
 
 
-In fact, there was nowhere for stock market investors to hide amid Monday's carnage, with the midcap S&P 400 index tumbling 2.7%. It ended off lows after testing its 200-day line.
+In fact, there was nowhere for stock market investors to hide amid Monday's carnage, with the midcap S&P 400 index tumbling 2.7%. It ended off lows after testing its 200-day line.  
+事实上，在周一的大屠杀中，股市投资者无处可藏，中型标准普尔 400 指数下跌 2.7%。它在测试 200 日线后收于低点。
 
 
-Monday's sharply negative action, which came after already painful drawdowns, means Investor's Business Daily is once again reducing its recommended market exposure. It has now been set to the 0%-to-20% range.
+Monday's sharply negative action, which came after already painful drawdowns, means Investor's Business Daily is once again reducing its recommended market exposure. It has now been set to the 0%-to-20% range.  
+周一的急剧负面行动是在已经痛苦的回撤之后发生的，这意味着 Investor's Business Daily 再次减少其推荐的市场敞口。它现在已设置为 0% 到 20% 的范围。
 
 
-It is advisable to continue to pare back positions in a measured fashion. Locking in profits in stocks that have rallied more than 20% above entries and jettisoning any issues that are flashing sell signals should take priority.
+It is advisable to continue to pare back positions in a measured fashion. Locking in profits in stocks that have rallied more than 20% above entries and jettisoning any issues that are flashing sell signals should take priority.  
+建议继续以有节制的方式减少后退位置。应优先考虑锁定上涨超过 20% 的股票的利润，并抛弃任何闪烁卖出信号的问题。
 
 
-Fed's Goolsbee Speaks Out; ISM Reading Cools Fears
+Fed's Goolsbee Speaks Out; ISM Reading Cools Fears美联储的 Goolsbee 发声;ISM 读数冷却恐惧
+-----------------------------------------------------------------------------
+
+
+Underlining the pessimism on Monday was the performance of the [Cboe Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), which is seen as a psychological indicator of fear in the markets. The gauge, which serves as a measure of the S&P 500's future volatility, ended the session up 64.9%. At one point it had risen as much as 181% – the biggest intraday increase in history. It was also the highest level since the 2020 Covid bear market.  
+周一 [Cboe 波动率指数](https://research.investors.com/psychological-market-indicators/chart?type=volatility)的表现凸显了悲观情绪，该指数被视为市场恐惧的心理指标。该指标用于衡量标准普尔 500 指数未来波动性，收盘上涨 64.9%。它一度上涨了 181%，这是历史上最大的盘中涨幅。这也是自 2020 年 Covid 熊市以来的最高水平。
+
+
+With fears growing that the Federal Reserve may have made a policy mistake by holding rates steady too long, Chicago Federal Reserve President Austan Goolsbee made a surprise [appearance on CNBC Monday](https://www.cnbc.com/2024/08/05/chicago-fed-president-goolsbee-says-if-economy-deteriorates-fed-will-fix-it.html).  
+随着人们越来越担心美联储可能因保持利率稳定时间过长而犯了政策错误，芝加哥联邦储备银行行长奥斯坦·古尔斯比（Austan Goolsbee）周一在 [CNBC 上](https://www.cnbc.com/2024/08/05/chicago-fed-president-goolsbee-says-if-economy-deteriorates-fed-will-fix-it.html)出人意料地露面。
+
+
+He reiterated that the Fed is focused on maximizing employment, stabilizing prices and maintaining financial stability. He said that if there is any deterioration in conditions that they are "going to fix it."  
+他重申，美联储专注于最大限度地提高就业、稳定物价和维护金融稳定。他说，如果情况有任何恶化，他们“会解决”。
+
+
+Meanwhile, the Institute for Supply Management's service index offered some crumbs of comfort for worried stock market investors. It showed the economy is still growing, jumping to 51.4% in July from 48.8% in June. This was better than expected. A 50 reading is considered neutral.  
+与此同时，美国供应管理协会（Institute for Supply Management）的服务业指数为忧心忡忡的股市投资者提供了一些安慰。它显示经济仍在增长，从 6 月份的 48.8% 跃升至 7 月份的 51.4%。这比预期的要好。50 的读数被认为是中性的。
+
+
+Economic data is sparse on Tuesday, which may help soothe skittish traders. U.S. trade deficit data for June will be the main data point, with economists expecting a reading of minus $72.5 billion.  
+周二的经济数据稀疏，这可能有助于安抚紧张的交易者。美国 6 月份的贸易逆差数据将是主要数据点，经济学家预计该数据为负 725 亿美元。
+
+
+Nvidia Hurts This Stock Market Group英伟达伤害了这个股票市场集团
 --------------------------------------------------
 
 
-Underlining the pessimism on Monday was the performance of the [Cboe Volatility Index](https://research.investors.com/psychological-market-indicators/chart?type=volatility), which is seen as a psychological indicator of fear in the markets. The gauge, which serves as a measure of the S&P 500's future volatility, ended the session up 64.9%. At one point it had risen as much as 181% – the biggest intraday increase in history. It was also the highest level since the 2020 Covid bear market.
-
-
-With fears growing that the Federal Reserve may have made a policy mistake by holding rates steady too long, Chicago Federal Reserve President Austan Goolsbee made a surprise [appearance on CNBC Monday](https://www.cnbc.com/2024/08/05/chicago-fed-president-goolsbee-says-if-economy-deteriorates-fed-will-fix-it.html).
-
-
-He reiterated that the Fed is focused on maximizing employment, stabilizing prices and maintaining financial stability. He said that if there is any deterioration in conditions that they are "going to fix it."
-
-
-Meanwhile, the Institute for Supply Management's service index offered some crumbs of comfort for worried stock market investors. It showed the economy is still growing, jumping to 51.4% in July from 48.8% in June. This was better than expected. A 50 reading is considered neutral.
-
-
-Economic data is sparse on Tuesday, which may help soothe skittish traders. U.S. trade deficit data for June will be the main data point, with economists expecting a reading of minus $72.5 billion.
-
-
-Nvidia Hurts This Stock Market Group
-------------------------------------
-
-
-The [S&P 500 sectors all ended red Monday](https://www.investors.com/category/etfs-and-funds/sectors/). In fact, it was the first time since Nov. 2, 2022, that all 11 sector lost more than 1%. Technology, communication services and consumer discretionary were down the most. Industrials held up the best, but still fell sharply.
+The [S&P 500 sectors all ended red Monday](https://www.investors.com/category/etfs-and-funds/sectors/). In fact, it was the first time since Nov. 2, 2022, that all 11 sector lost more than 1%. Technology, communication services and consumer discretionary were down the most. Industrials held up the best, but still fell sharply.  
+[标准普尔 500 指数板块周一全部收盘下跌](https://www.investors.com/category/etfs-and-funds/sectors/)。事实上，这是自 2022 年 11 月 2 日以来，所有 11 个板块首次跌幅超过 1%。科技、通信服务和非必需消费品跌幅最大。工业板块表现最好，但仍大幅下跌。
 
 
 
-Once again, the relative performance of the Investor's Business Daily industry groups served as a useful alternative perspective [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).
+Once again, the relative performance of the Investor's Business Daily industry groups served as a useful alternative perspective [on the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/).  
+投资者商业日报行业组的相对表现再次成为[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的有用替代视角。
 
 
-Media periodicals, cable stocks, chip equipment plays, blank check finance stocks and travel booking firms were among the few areas of strength. Each of these managed to close in positive territory.
+Media periodicals, cable stocks, chip equipment plays, blank check finance stocks and travel booking firms were among the few areas of strength. Each of these managed to close in positive territory.  
+媒体期刊、有线电视股、芯片设备公司、空白支票金融股和旅游预订公司是少数几个表现强劲的领域。这些都设法以正值收盘。
 
 
-In contrast, database software firms, drugstores, electronic consumer electronics plays and tire stocks were among the worst performers on the stock market today.
+In contrast, database software firms, drugstores, electronic consumer electronics plays and tire stocks were among the worst performers on the stock market today.  
+相比之下，数据库软件公司、药店、电子消费电子产品公司和轮胎股是当今股市表现最差的股票之一。
 
 
-Fabless chip stocks also struggled. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) dived 6.4% [amid reports the firm is delaying its next-generation Blackwell artificial intelligence chips](https://www.investors.com/news/technology/nvidia-delays-blackwell-ai-chip/) by at least three months.
+Fabless chip stocks also struggled. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) dived 6.4% [amid reports the firm is delaying its next-generation Blackwell artificial intelligence chips](https://www.investors.com/news/technology/nvidia-delays-blackwell-ai-chip/) by at least three months.  
+无晶圆厂芯片股票也陷入困境。**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 暴跌 6.4%，[因为有报道称该公司将其下一代 Blackwell 人工智能芯片推迟](https://www.investors.com/news/technology/nvidia-delays-blackwell-ai-chip/)了至少三个月。
 
 
-Nvidia is a member of the [prestigious IBD Leaderboard list](https://get.investors.com/leaderboard/) of top stocks, but the position is hedged.
+Nvidia is a member of the [prestigious IBD Leaderboard list](https://get.investors.com/leaderboard/) of top stocks, but the position is hedged.  
+Nvidia 是[著名的 IBD 排行榜](https://get.investors.com/leaderboard/)顶级股票名单的成员，但该头寸是对冲的。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080524.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080524.pdf)
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[This Financial Company Is Holding Up On A Rough Day](https://www.investors.com/research/houlihan-lokey-stock-hli-financial-company/)
+[This Financial Company Is Holding Up On A Rough Day  
+这家金融公司在艰难的一天中坚持](https://www.investors.com/research/houlihan-lokey-stock-hli-financial-company/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions  
+股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
