--- a/_columns/The_Big_Picture/zh-cn/2024-08-07.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-07.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Fades Badly As Dow Jones Index Turns Back At This Critical Level
+  Stock Market Fades Badly As Dow Jones Index Turns Back At This Critical Level	随着道琼斯指数回到这个关键水平，股市严重衰落
 date: 2024-08-07 17:41 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,80 +10,101 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market reversed lower Wednesday, leaving a rebound in doubt but a rally attempt remains in play.
+The stock market reversed lower Wednesday, leaving a rebound in doubt but a rally attempt remains in play.  
+股市周三反转走低，反弹存疑，但反弹尝试仍在进行中。
 
 
 
 
-The Nasdaq composite was up as much as 2.1% in morning trading but closed nearly 1.1% lower. The S&P 500 went from a 1.7% rally to a loss of 0.8%. The Dow Jones Industrial Average lost 0.6%.
+The Nasdaq composite was up as much as 2.1% in morning trading but closed nearly 1.1% lower. The S&P 500 went from a 1.7% rally to a loss of 0.8%. The Dow Jones Industrial Average lost 0.6%.  
+纳斯达克综合指数在早盘交易中上涨了 2.1%，但收盘下跌了近 1.1%。标准普尔 500 指数从 1.7% 的涨幅变为 0.8% 的跌幅。道琼斯工业平均指数下跌 0.6%。
 
 
-While a one-day reversal doesn't doom the market's rally attempt, the way it happened was disheartening. The Dow met resistance at its 50-day moving average for a second straight day. The Russell 2000, down 1.4% Wednesday, met resistance at its own 50-day line. And other important indexes displayed similar action.
+While a one-day reversal doesn't doom the market's rally attempt, the way it happened was disheartening. The Dow met resistance at its 50-day moving average for a second straight day. The Russell 2000, down 1.4% Wednesday, met resistance at its own 50-day line. And other important indexes displayed similar action.  
+虽然一天的反转并不会阻止市场的反弹尝试，但它发生的方式令人沮丧。道琼斯指数连续第二天在 50 天移动平均线处遇到阻力。罗素 2000 指数周三下跌 1.4%，在自己的 50 日线遇到阻力。其他重要指标也表现出类似的动作。
 
 
-Among exchange traded funds, Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) met resistance at the 50-day line for a second straight day. Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) rose near its 200-day moving average before it turned lower.
+Among exchange traded funds, Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) met resistance at the 50-day line for a second straight day. Direxion Nasdaq 100 Equal Weight ETF ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) rose near its 200-day moving average before it turned lower.  
+在交易所交易基金中，景顺标准普尔 500 等权重 （[RSP）](https://research.investors.com/quote.aspx?symbol=RSP) 连续第二天在 50 日线遇到阻力。Direxion 纳斯达克 100 等权重 ETF （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 在其 200 天移动平均线附近上涨，然后转跌。
 
 
-Volume was little changed from Tuesday's totals. But breadth was bearish, with declining stocks over advancers by about 2-to-1 on the Nasdaq and nearly 7-to-5 on the New York Stock Exchange, according to FactSet.
+Volume was little changed from Tuesday's totals. But breadth was bearish, with declining stocks over advancers by about 2-to-1 on the Nasdaq and nearly 7-to-5 on the New York Stock Exchange, according to FactSet.  
+与周二的总数相比，成交量变化不大。但广度是看跌的，根据 FactSet 的数据，纳斯达克股票的跌幅约为 2 比 1，纽约证券交易所的跌幅接近 7 比 5。
 
 
-While the Nasdaq and S&P 500 showed poor action, both held above their Tuesday lows. That was [the first day of a rally attempt](https://www.investors.com/market-trend/the-big-picture/stock-market-snaps-3-session-losing-streak-gains-fade-risks-remain-palantir-earnings/). As long as indexes stay above those levels, the stock market has a chance at a [follow-through rally confirmation](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/).
+While the Nasdaq and S&P 500 showed poor action, both held above their Tuesday lows. That was [the first day of a rally attempt](https://www.investors.com/market-trend/the-big-picture/stock-market-snaps-3-session-losing-streak-gains-fade-risks-remain-palantir-earnings/). As long as indexes stay above those levels, the stock market has a chance at a [follow-through rally confirmation](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/).  
+虽然纳斯达克和标准普尔 500 指数表现不佳，但均保持在周二低点上方。那是[拉力赛尝试的第一天](https://www.investors.com/market-trend/the-big-picture/stock-market-snaps-3-session-losing-streak-gains-fade-risks-remain-palantir-earnings/)。只要指数保持在这些水平之上，股市就有机会获得[后续反弹确认](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)。
 
 
-Stock Market Volatility
------------------------
+Stock Market Volatility 股市波动性
+-----------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP080724_2.jpg)Just like a major earthquake is followed by a series of aftershocks, the stock market's [Aug. 1-5 rout was severe enough](https://www.investors.com/research/stock-market-vertical-violation/) that it could leave the market unsettled for weeks. Already, index swings have been unusually wide.
+![](https://www.investors.com/wp-content/uploads/2024/08/MP080724_2.jpg)Just like a major earthquake is followed by a series of aftershocks, the stock market's [Aug. 1-5 rout was severe enough](https://www.investors.com/research/stock-market-vertical-violation/) that it could leave the market unsettled for weeks. Already, index swings have been unusually wide.  
+就像大地震之后会接连不断的余震一样，股市 [8 月 1 日至 5 日的暴跌严重到](https://www.investors.com/research/stock-market-vertical-violation/)足以让市场动荡数周。指数的波动已经异常大。
 
 
-The S&P 500's and Nasdaq's intraday spreads have been above 2% for three straight days. That's the longest stretch since March 2023, according to Dow Jones Market Data.
+The S&P 500's and Nasdaq's intraday spreads have been above 2% for three straight days. That's the longest stretch since March 2023, according to Dow Jones Market Data.  
+标准普尔 500 指数和纳斯达克的盘中利差已连续三天高于 2%。根据道琼斯市场数据，这是自 2023 年 3 月以来最长的持续时间。
 
 
-And August is starting out badly. The S&P 500 and Dow Jones industrials just had their worst five-day start to any month since January 2016. For the Nasdaq, it's the worst start for any month since August 2011.
+And August is starting out badly. The S&P 500 and Dow Jones industrials just had their worst five-day start to any month since January 2016. For the Nasdaq, it's the worst start for any month since August 2011.  
+而 8 月的开局很糟糕。标准普尔 500 指数和道琼斯工业指数刚刚创下自 2016 年 1 月以来最糟糕的五天开盘。对于纳斯达克来说，这是自 2011 年 8 月以来任何一个月最糟糕的开局。
 
 
-The stock market doesn't have much to work with as it attempts to rally.
+The stock market doesn't have much to work with as it attempts to rally.  
+股市在试图反弹时没有太多可处理的事情。
 
 
-The Nasdaq advance-decline line is at its lowest point in more than 12 months. But the NYSE short-term overbought-oversold oscillator — a tool in [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) — still has not reached oversold levels. However, the Nasdaq oscillator is at the most oversold level since April, when the index bottomed.
+The Nasdaq advance-decline line is at its lowest point in more than 12 months. But the NYSE short-term overbought-oversold oscillator — a tool in [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) — still has not reached oversold levels. However, the Nasdaq oscillator is at the most oversold level since April, when the index bottomed.  
+纳斯达克涨跌线处于 12 个多月以来的最低点。但纽约证券交易所短期超买超卖震荡指标（[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 中的工具）仍未达到超卖水平。然而，纳斯达克震荡指标处于自 4 月该指数触底以来的最高超卖水平。
 
 
-One hopeful sign in July was the high number of [stocks making 52-week highs](https://www.investors.com/data-tables/new-high-list-aug-06-2024/) as a rotation out of growth and into value, while other stocks unfolded. But that trend has reversed, with new lows outnumbering new highs this week.
+One hopeful sign in July was the high number of [stocks making 52-week highs](https://www.investors.com/data-tables/new-high-list-aug-06-2024/) as a rotation out of growth and into value, while other stocks unfolded. But that trend has reversed, with new lows outnumbering new highs this week.  
+7 月份的一个充满希望的迹象是，大量[股票创下 52 周高](https://www.investors.com/data-tables/new-high-list-aug-06-2024/)点，从成长股转向价值股，而其他股票则展开。但这一趋势已经逆转，本周新低数量超过新高。
 
 
-Growth stocks still struggle. The IBD 50 reversed lower, but to its credit it lost less than 0.1%.
+Growth stocks still struggle. The IBD 50 reversed lower, but to its credit it lost less than 0.1%.  
+成长型股票仍在苦苦挣扎。IBD 50 指数反转走低，但值得称赞的是，它的跌幅不到 0.1%。
 
 
-Japan Impacts U.S. Markets
---------------------------
+Japan Impacts U.S. Markets日本影响美国市场
+----------------------------------
 
 
-U.S. investors don't normally watch the Tokyo stock market much, but now it's a factor. The Nikkei 225 index crashed more than 12% Monday after the Bank of Japan lifted its policy interest rate to 0.25% on July 31 and a top official made hawkish comments.
+U.S. investors don't normally watch the Tokyo stock market much, but now it's a factor. The Nikkei 225 index crashed more than 12% Monday after the Bank of Japan lifted its policy interest rate to 0.25% on July 31 and a top official made hawkish comments.  
+美国投资者通常不怎么关注东京股市，但现在这是一个因素。日经 225 指数周一暴跌超过 12%，此前日本央行于 7 月 31 日将政策利率上调至 0.25%，一名高级官员发表了鹰派言论。
 
 
-That sent the yen higher, and caused a knock-on effect on U.S. stocks because of what's known as the carry trade. That's a strategy in which investors borrow at super-low Japanese interest rates to purchase U.S. equities.
+That sent the yen higher, and caused a knock-on effect on U.S. stocks because of what's known as the carry trade. That's a strategy in which investors borrow at super-low Japanese interest rates to purchase U.S. equities.  
+这导致日元走高，并因所谓的套利交易而对美国股市造成连锁反应。这是一种投资者以超低的日本利率借款购买美国股票的策略。
 
 
-On Wednesday, a Japan central bank official [tempered expectations of rate hikes](https://www.wsj.com/economy/central-banking/boj-wont-raise-rates-when-markets-are-unstable-deputy-gov-says-6f4bf962?mod=economy_lead_story). On Wednesday, the Nikkei 225 rose 1.2%, and jumped a total 11.5% over the last two trading days. It's the best two-day gain since March 25, 2020.
+On Wednesday, a Japan central bank official [tempered expectations of rate hikes](https://www.wsj.com/economy/central-banking/boj-wont-raise-rates-when-markets-are-unstable-deputy-gov-says-6f4bf962?mod=economy_lead_story). On Wednesday, the Nikkei 225 rose 1.2%, and jumped a total 11.5% over the last two trading days. It's the best two-day gain since March 25, 2020.  
+周三，日本央行官员[缓和了对加息的预期](https://www.wsj.com/economy/central-banking/boj-wont-raise-rates-when-markets-are-unstable-deputy-gov-says-6f4bf962?mod=economy_lead_story)。周三，日经 225 指数上涨 1.2%，过去两个交易日共上涨 11.5%。这是自 2020 年 3 月 25 日以来的最佳两天涨幅。
 
 
-Also, the iShares MSCI Japan ETF ([EWJ](https://research.investors.com/quote.aspx?symbol=EWJ)) bounced 1.7% but spent a fourth straight day below the 200-day moving average.
+Also, the iShares MSCI Japan ETF ([EWJ](https://research.investors.com/quote.aspx?symbol=EWJ)) bounced 1.7% but spent a fourth straight day below the 200-day moving average.  
+此外，iShares MSCI 日本 ETF （[EWJ](https://research.investors.com/quote.aspx?symbol=EWJ)） 反弹 1.7%，但连续第四天低于 200 天移动平均线。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080724.pdf).
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080724.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_080724.pdf)。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Stock Market Forecast For The Next Six Months Is Stacking Up Well. But Don't Ignore These Risks.](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+[Stock Market Forecast For The Next Six Months Is Stacking Up Well. But Don't Ignore These Risks.  
+对未来六个月的股市预测进展顺利。但不要忽视这些风险。](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
+[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest  
+获取免费的 IBD 时事通讯：市场准备 |技术报告 |如何投资](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
 
