--- a/_columns/The_Big_Picture/zh-cn/2024-08-14.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-14.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  After Bullish Signal, Stocks Already Tested As These Indexes Face Potential Resistance
+  After Bullish Signal, Stocks Already Tested As These Indexes Face Potential Resistance	在看涨信号之后，由于这些指数面临潜在阻力，股票已经受到考验
 date: 2024-08-14 17:31 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,100 +10,125 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-A day after making a bullish signal, the stock market followed up with gains in most indexes Wednesday as new inflation data boosted the case for interest-rate cuts.
+A day after making a bullish signal, the stock market followed up with gains in most indexes Wednesday as new inflation data boosted the case for interest-rate cuts.  
+在发出看涨信号的一天后，股市周三紧随其后，大多数指数上涨，因为新的通胀数据提振了降息的理由。
 
 
 
 
-The S&P 500 added 0.4% but faces a test of resistance at its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index closed almost exactly at the line.
+The S&P 500 added 0.4% but faces a test of resistance at its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/). The index closed almost exactly at the line.  
+标准普尔 500 指数上涨 0.4%，但在其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)面临阻力测试。该指数几乎正好收盘于该线。
 
 
-In a similar test of resistance, the Russell 2000 performed poorly. The small-cap benchmark reversed lower after topping its 50-day line and closed 0.5% lower.
+In a similar test of resistance, the Russell 2000 performed poorly. The small-cap benchmark reversed lower after topping its 50-day line and closed 0.5% lower.  
+在类似的阻力测试中，罗素 2000 指数表现不佳。小盘股基准指数在突破 50 日线后反转走低，收盘下跌 0.5%。
 
 
-Other market gauges testing their 50-day lines include the S&P MidCap 400, iShares Core S&P Total U.S. Market ([ITOT](https://research.investors.com/quote.aspx?symbol=ITOT)) and Vanguard Megacap ([MGC](https://research.investors.com/quote.aspx?symbol=MGC)) exchange traded fund. That means a cross section of the market is either on the edge of a pullback or poised to extend gains.
+Other market gauges testing their 50-day lines include the S&P MidCap 400, iShares Core S&P Total U.S. Market ([ITOT](https://research.investors.com/quote.aspx?symbol=ITOT)) and Vanguard Megacap ([MGC](https://research.investors.com/quote.aspx?symbol=MGC)) exchange traded fund. That means a cross section of the market is either on the edge of a pullback or poised to extend gains.  
+其他测试其 50 天线的市场指标包括 S&P MidCap 400、iShares Core S&P Total U.S. Market （[ITOT](https://research.investors.com/quote.aspx?symbol=ITOT)） 和 Vanguard Megacap （[MGC](https://research.investors.com/quote.aspx?symbol=MGC)） 交易所交易基金。这意味着市场的横截面要么处于回调的边缘，要么准备扩大涨幅。
 
 
-The Nasdaq composite erased losses in the final minutes of stock market action and eked out a minimal gain, extending a win streak to five days. The index is making a technical test of its own, this one at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).
+The Nasdaq composite erased losses in the final minutes of stock market action and eked out a minimal gain, extending a win streak to five days. The index is making a technical test of its own, this one at its [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/).  
+纳斯达克综合指数在股市行动的最后几分钟抹去了损失，并勉强获得了微弱的涨幅，将连胜纪录延长至五天。该指数正在进行自己的技术测试，这次是在其 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/how-to-trade-stocks-using-21-day-exponential-moving-average/)。
 
 
-Google, Megacaps Hurt The Nasdaq
---------------------------------
+Google, Megacaps Hurt The Nasdaq谷歌、大型股伤害纳斯达克
+--------------------------------------------
 
 
-**Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) was a drag on the Nasdaq — and the S&P 500 to a lesser extent — as shares slid 2.3%. Bloomberg reported that the U.S. Justice Department is [considering breaking up the company](https://www.bloomberg.com/news/articles/2024-08-13/doj-considers-seeking-google-goog-breakup-after-major-antitrust-win?sref=FwsjHXQj) after a court ruled on Aug. 5 that Google acts as a monopoly in the online search market.
+**Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) was a drag on the Nasdaq — and the S&P 500 to a lesser extent — as shares slid 2.3%. Bloomberg reported that the U.S. Justice Department is [considering breaking up the company](https://www.bloomberg.com/news/articles/2024-08-13/doj-considers-seeking-google-goog-breakup-after-major-antitrust-win?sref=FwsjHXQj) after a court ruled on Aug. 5 that Google acts as a monopoly in the online search market.  
+**Alphabet** （[GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)） 拖累了纳斯达克指数——标准普尔 500 指数的阻力较小——股价下跌了 2.3%。彭博社报道称，在法院于 8 月 5 日裁定谷歌垄断在线搜索市场后，美国司法部正在[考虑拆分该公司](https://www.bloomberg.com/news/articles/2024-08-13/doj-considers-seeking-google-goog-breakup-after-major-antitrust-win?sref=FwsjHXQj)。
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP081424.jpg)Other megacaps also hurt the Nasdaq. Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) fell 0.7%.
+![](https://www.investors.com/wp-content/uploads/2024/08/MP081424.jpg)Other megacaps also hurt the Nasdaq. Roundhill Magnificent Seven ETF ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) fell 0.7%.  
+其他大型股也损害了纳斯达克指数。Roundhill Magnificent Seven ETF （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 下跌 0.7%。
 
 
-The Dow Jones Industrial Average led the stock market with a 0.6% increase and closed back above the 40,000 mark.
+The Dow Jones Industrial Average led the stock market with a 0.6% increase and closed back above the 40,000 mark.  
+道琼斯工业平均指数以 0.6% 的涨幅领跑股市，收于 40,000 点大关上方。
 
 
-Volume fell on the Nasdaq and New York Stock Exchange from Tuesday's levels. Advancers topped decliners by about a 7-5 ratio on the NYSE. But losers topped winners by nearly the same ratio on the Nasdaq exchange, according to FactSet.
+Volume fell on the Nasdaq and New York Stock Exchange from Tuesday's levels. Advancers topped decliners by about a 7-5 ratio on the NYSE. But losers topped winners by nearly the same ratio on the Nasdaq exchange, according to FactSet.  
+纳斯达克和纽约证券交易所的成交量从周二的水平下降。在纽约证券交易所，上涨股以约 7：5 的比率领先于下跌股。但根据 FactSet 的数据，在纳斯达克交易所，输家与赢家的比例几乎相同。
 
 
-Breadth is improving by some measures. The NYSE advance-decline line is back above its 10-day moving average and has moved basically sideways since mid-July. The Nasdaq A-D line is still trending lower, however.
+Breadth is improving by some measures. The NYSE advance-decline line is back above its 10-day moving average and has moved basically sideways since mid-July. The Nasdaq A-D line is still trending lower, however.  
+广度在某些方面正在改善。纽约证券交易所的涨跌线回到其 10 天移动平均线上方，自 7 月中旬以来基本上呈横盘整理。然而，纳斯达克 A-D 线仍呈走低趋势。
 
 
-Stock Market Uptrend Already Tested
------------------------------------
+Stock Market Uptrend Already Tested股市上升趋势已经受考验
+----------------------------------------------
 
 
-Wednesday's market seemed like a proper day-after response to Tuesday's rally, which triggered a [follow-through rally confirmation](https://www.investors.com/market-trend/the-big-picture/stock-market-dow-jones-sp500-nasdaq-inflation-starbucks-chipotle/). That opened up investors to higher stock exposure of 20%-40%.
+Wednesday's market seemed like a proper day-after response to Tuesday's rally, which triggered a [follow-through rally confirmation](https://www.investors.com/market-trend/the-big-picture/stock-market-dow-jones-sp500-nasdaq-inflation-starbucks-chipotle/). That opened up investors to higher stock exposure of 20%-40%.  
+周三的市场似乎是对周二反弹的适当回应，周二的反弹引发了[后续反弹确认](https://www.investors.com/market-trend/the-big-picture/stock-market-dow-jones-sp500-nasdaq-inflation-starbucks-chipotle/)。这为投资者提供了 20%-40% 的更高股票敞口。
 
 
-Yet the new market uptrend is already being tested as some indexes come up against potential resistance levels.
+Yet the new market uptrend is already being tested as some indexes come up against potential resistance levels.  
+然而，随着一些指数面临潜在的阻力位，新的市场上升趋势已经受到考验。
 
 
-Tuesday's follow-through came at kind of an inconvenient time for the stock market. Up 6.5% from its Aug. 5 low, the S&P is at the point where some moderation or even a pullback would be entirely normal. The Nasdaq and S&P 500 have just made their best five-day rallies since late October-early November, according to Dow Jones Market Data.
+Tuesday's follow-through came at kind of an inconvenient time for the stock market. Up 6.5% from its Aug. 5 low, the S&P is at the point where some moderation or even a pullback would be entirely normal. The Nasdaq and S&P 500 have just made their best five-day rallies since late October-early November, according to Dow Jones Market Data.  
+周二的跟进行动对股市来说是一个不方便的时机。标准普尔指数从 8 月 5 日的低点上涨 6.5%，处于一些放缓甚至回调是完全正常的。根据道琼斯市场数据，纳斯达克和标准普尔 500 指数刚刚取得了自 10 月底至 11 月初以来最好的五天反弹。
 
 
-Keep in mind that the early-August market sell-off marked [an unusually sharp break](https://www.investors.com/research/stock-market-vertical-violation/), the type that has signaled long slumps in the stock market. While indexes have rebounded, their [Accumulation/Distribution Ratings](https://www.investors.com/how-to-invest/investors-corner/stocks-funds-are-buying/) remain at E or D-.
+Keep in mind that the early-August market sell-off marked [an unusually sharp break](https://www.investors.com/research/stock-market-vertical-violation/), the type that has signaled long slumps in the stock market. While indexes have rebounded, their [Accumulation/Distribution Ratings](https://www.investors.com/how-to-invest/investors-corner/stocks-funds-are-buying/) remain at E or D-.  
+请记住，8 月初的市场抛售标志着[异常急剧的突破](https://www.investors.com/research/stock-market-vertical-violation/)，这种突破预示着股市将长期低迷。虽然指数有所反弹，但其[累积/派发评级](https://www.investors.com/how-to-invest/investors-corner/stocks-funds-are-buying/)仍为 E 或 D-。
 
 
-Stock Market Reacts To CPI
---------------------------
+Stock Market Reacts To CPI股市对 CPI 的反应
+-------------------------------------
 
 
-The consumer price index for July [rose less than 3% on an annual basis](https://www.investors.com/news/economy/cpi-inflation-fed-rate-cut-sp-500/) and 0.2% from June, while core inflation was the lowest since April 2021. The data followed another encouraging producer price index on Tuesday that motivated stock buyers.
+The consumer price index for July [rose less than 3% on an annual basis](https://www.investors.com/news/economy/cpi-inflation-fed-rate-cut-sp-500/) and 0.2% from June, while core inflation was the lowest since April 2021. The data followed another encouraging producer price index on Tuesday that motivated stock buyers.  
+7 月份消费者价格指数按[年率计算上涨不到 3%，](https://www.investors.com/news/economy/cpi-inflation-fed-rate-cut-sp-500/)较 6 月上涨 0.2%，而核心通胀率为 2021 年 4 月以来的最低水平。该数据是在周二另一个令人鼓舞的生产者价格指数之后发布的，该指数激励了股票买家。
 
 
-Many strategists told IBD the latest data all but assures an interest-rate cut of at least 25 basis points next month. That's even if housing costs remained a cloud.
+Many strategists told IBD the latest data all but assures an interest-rate cut of at least 25 basis points next month. That's even if housing costs remained a cloud.  
+许多策略师告诉 IBD，最新数据几乎可以保证下个月至少降息 25 个基点。即使住房成本仍然笼罩着阴云。
 
 
-"The relay race to Fed cuts is on!" said Lindsay Rosner, Head of Multi-Sector Fixed Income at Goldman Sachs Asset Management. "Today's CPI print of a rounded 0.2% cleared the way for a 25 bp (basis point) cut in September while not completely shutting the door on the chance of a 50 bp cut."
+"The relay race to Fed cuts is on!" said Lindsay Rosner, Head of Multi-Sector Fixed Income at Goldman Sachs Asset Management. "Today's CPI print of a rounded 0.2% cleared the way for a 25 bp (basis point) cut in September while not completely shutting the door on the chance of a 50 bp cut."  
+高盛资产管理公司（Goldman Sachs Asset Management）多行业固定收益主管林赛·罗斯纳（Lindsay Rosner）表示：“美联储降息的接力赛已经开始。“今天 CPI 数据四舍五入 0.2%，为 9 月份降息 25 个基点扫清了道路，同时并没有完全关闭降息 50 个基点的可能性。”
 
 
-How The PCE Will Be Affected
-----------------------------
+How The PCE Will Be AffectedPCE 将如何受到影响
+---------------------------------------
 
 
-The combination of the CPI with PPI data suggests that core inflation measured by the personal consumption expenditures index, the Fed's preferred inflation measure, should rise 0.1% to 0.2% month over month, noted Brian Rose, senior U.S. economist at UBS Global Wealth Management.
+The combination of the CPI with PPI data suggests that core inflation measured by the personal consumption expenditures index, the Fed's preferred inflation measure, should rise 0.1% to 0.2% month over month, noted Brian Rose, senior U.S. economist at UBS Global Wealth Management.  
+瑞银全球财富管理高级美国经济学家布赖恩·罗斯 （Brian Rose） 指出，CPI 与 PPI 数据的组合表明，以个人消费支出指数（美联储首选的通胀指标）衡量的核心通胀应该会环比上涨 0.1% 至 0.2%。
 
 
-"The inflation data has been good enough to allow the Fed to start cutting rates in September, but does not give them a reason to cut aggressively," Rose added.
+"The inflation data has been good enough to allow the Fed to start cutting rates in September, but does not give them a reason to cut aggressively," Rose added.  
+“通胀数据已经足够好，让美联储可以在 9 月开始降息，但并没有给他们激进降息的理由，”罗斯补充道。
 
 
-He went on to say: "The decision whether to cut by 50 basis points instead of the usual 25 bps may come down to the August labor report (Sept. 6). Tomorrow's retail sales data for July is another critical release, as in our view the main downside risk to our base case scenario of a soft landing is a pullback in consumer spending."
+He went on to say: "The decision whether to cut by 50 basis points instead of the usual 25 bps may come down to the August labor report (Sept. 6). Tomorrow's retail sales data for July is another critical release, as in our view the main downside risk to our base case scenario of a soft landing is a pullback in consumer spending."  
+他继续说：“是否降息 50 个基点而不是通常的 25 个基点的决定可能取决于 8 月的劳动报告（9 月 6 日）。明天的 7 月零售销售数据是另一个关键数据，因为我们认为软着陆的基本情景的主要下行风险是消费者支出的回落。
 
 
-Bond traders are [betting more on a quarter-point rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html), with odds at 63.5%. The odds for a half-point cut stand at 36.5%.
+Bond traders are [betting more on a quarter-point rate cut](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html), with odds at 63.5%. The odds for a half-point cut stand at 36.5%.  
+债券交易员[更多地押注降息 25 个基点](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)，赔率为 63.5%。降息半个百分点的几率为 36.5%。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081424.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081424.pdf)
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
+[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest  
+获取免费的 IBD 时事通讯：市场准备 |技术报告 |如何投资](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
 
 
 [Futures Rise As Walmart, Cisco Jump On Earnings](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-rise-walmart-cisco-retail-sales-warren-buffett-buys-ulta/)
