--- a/_columns/The_Big_Picture/zh-cn/2024-08-19.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-19.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Advance Strengthens; These IPOs Stand Out, As Smaller Biotechs Surge
+  Stock Market Advance Strengthens; These IPOs Stand Out, As Smaller Biotechs Surge	股市上涨加强;随着小型生物技术公司激增，这些 IPO 脱颖而出
 date: 2024-08-19 20:55 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,24 +10,30 @@ author: DAVID SAITO-CHUNG
 
 
 
-Monday's stock market advance showed an increasingly bullish tenor, despite anticipation and anxiety developing over what the chairman of the Federal Reserve may or may not say at this week's annual confab of powerful bankers in the Rocky Mountains town of Jackson Hole, Wyo.
+Monday's stock market advance showed an increasingly bullish tenor, despite anticipation and anxiety developing over what the chairman of the Federal Reserve may or may not say at this week's annual confab of powerful bankers in the Rocky Mountains town of Jackson Hole, Wyo.  
+周一的股市上涨显示出越来越看涨的基调，尽管人们对美联储主席本周在怀俄明州落基山脉小镇杰克逊霍尔（Jackson Hole）举行的年度有权势的银行家会议上可能会说什么，也可能不会说什么，人们的期待和焦虑都在发展。
 
 
 
 
-Since 1972, the Kansas City Federal Reserve Bank has invited central bank chiefs from around the globe to Jackson Hole, home of the grand Teton peaks. There, these officials get together to share research and thoughts on what the right mix of monetary policy should be amid current economic conditions. Friday morning, slated for 10 a.m. ET that day, Fed chief Jerome Powell is slated to give a public statement. Expect it to be brief. Will Powell signal further clues that the bank will go ahead and begin reducing the cost of money?
+Since 1972, the Kansas City Federal Reserve Bank has invited central bank chiefs from around the globe to Jackson Hole, home of the grand Teton peaks. There, these officials get together to share research and thoughts on what the right mix of monetary policy should be amid current economic conditions. Friday morning, slated for 10 a.m. ET that day, Fed chief Jerome Powell is slated to give a public statement. Expect it to be brief. Will Powell signal further clues that the bank will go ahead and begin reducing the cost of money?  
+自 1972 年以来，堪萨斯城联邦储备银行 （Kansas City Federal Reserve Bank） 一直邀请来自世界各地的央行行长来到提顿山峰的所在地杰克逊霍尔 （Jackson Hole）。在那里，这些官员聚在一起分享关于在当前经济条件下应该如何正确组合货币政策的研究和想法。周五上午，即美国东部时间当天上午 10 点，美联储主席杰罗姆鲍威尔将发表公开声明。预计它会很简短。鲍威尔是否会发出进一步信号，表明该银行将继续并开始降低资金成本？
 
 
-Nobody knows. And that's why bullish gains by the [stock market on Monday](https://www.investors.com/news/stock-market-today-stock-market-news/) may have surprised some investors.
+Nobody knows. And that's why bullish gains by the [stock market on Monday](https://www.investors.com/news/stock-market-today-stock-market-news/) may have surprised some investors.  
+没有人知道。这就是为什么[周一股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的看涨可能让一些投资者感到惊讶。
 
 
-Meanwhile, crude oil futures sank sharply as the key near-expiration contract on light sweet crude fell 2.3% to $73.81 a barrel.
+Meanwhile, crude oil futures sank sharply as the key near-expiration contract on light sweet crude fell 2.3% to $73.81 a barrel.  
+与此同时，原油期货大幅下跌，因为关键的轻质低硫原油临近到期合约下跌 2.3% 至每桶 73.81 美元。
 
 
-Investors bought long-dated Treasury bonds, sending the benchmark 10-year bond yield down two basis points to 3.86%. The yield began the year at the same level: 3.86%.
+Investors bought long-dated Treasury bonds, sending the benchmark 10-year bond yield down two basis points to 3.86%. The yield began the year at the same level: 3.86%.  
+投资者购买了长期美国国债，导致基准 10 年期国债收益率下跌 2 个基点至 3.86%。年初的收益率为同一水平：3.86%。
 
 
-After solid gains last week, it came as no surprise for the major indexes to fall a bit after the open. But early-hour losses got quickly pushed aside, and the bulls stepped in for the rest of the session.
+After solid gains last week, it came as no surprise for the major indexes to fall a bit after the open. But early-hour losses got quickly pushed aside, and the bulls stepped in for the rest of the session.  
+在上周大幅上涨之后，主要股指在开盘后小幅下跌也就不足为奇了。但早盘的损失很快就被推到了一边，多头在剩下的时间里介入。
 
 
 
@@ -35,7 +41,8 @@ After solid gains last week, it came as no surprise for the major indexes to fal
 ---
 
 
-[**Also In The Big Picture: Why Lower Volatility Is Welcome**](https://www.investors.com/market-trend/the-big-picture/stock-market-mixed-sp500-dow-jones-nasdaq-small-caps/)
+[**Also In The Big Picture: Why Lower Volatility Is Welcome  
+Also In The Big Picture：为什么低波动性受到欢迎**](https://www.investors.com/market-trend/the-big-picture/stock-market-mixed-sp500-dow-jones-nasdaq-small-caps/)
 
 
 
@@ -43,129 +50,157 @@ After solid gains last week, it came as no surprise for the major indexes to fal
 ---
 
 
-Stock Market Strengthens Quickly
+Stock Market Strengthens Quickly股市迅速走强
+--------------------------------------
+
+
+![](https://www.investors.com/wp-content/uploads/2024/08/MP081924-232x300.jpg)After the Nasdaq edged 0.3% lower by around 10:20 a.m. ET, the composite index soon wiped out that drop and marched higher through the session's close. At 17,876, the Nasdaq led the stock market higher with a 1.4% gain. Since the start of the third quarter, the tech-bolstered index is now positive again, up 0.8% since July 1.  
+在美国东部时间上午 10：20 左右，纳斯达克指数小幅下跌 0.3% 后，综合指数很快抹去了跌幅，并在收盘时走高。纳斯达克指数以 17,876 点的涨幅领涨股市，涨幅为 1.4%。自第三季度开始以来，受科技股支撑的指数现在再次上涨，自 7 月 1 日以来上涨了 0.8%。
+
+
+The Nasdaq composite also closed well above the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/), which is rising again.  
+纳斯达克综合指数的收盘价也远高于 [50 天移动平均线，该移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)再次上涨。
+
+
+The Nasdaq 100 tracker, Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), rose 1.3%. The two indexes' gains affirmed good breadth. Early data showed 3,047 stocks on the Nasdaq rose while 1,182 fell. That comes to roughly a winning margin of 3-to-1.  
+纳斯达克 100 指数追踪器景顺 QQQ Trust （[QQQ）](https://research.investors.com/quote.aspx?symbol=QQQ) 上涨 1.3%。这两个指数的涨幅肯定了良好的广度。早期数据显示，纳斯达克有 3,047 只股票上涨，而 1,182 只股票下跌。这大约是 3 比 1 的胜率。
+
+
+Small caps performed well. The Russell 2000 rose 1.2%, edging out an almost 1% lift by the S&P 500.  
+小盘股表现良好。罗素 2000 指数上涨 1.2%，略高于标准普尔 500 指数近 1% 的涨幅。
+
+
+Sector indexes lagged. For instance, the Dow Jones Utility Average gained just 0.4%, trailing a nearly 0.9% move higher by the Dow Jones transportation average.  
+行业指数落后。例如，道琼斯公用事业平均指数仅上涨 0.4%，落后于道琼斯运输平均指数上涨近 0.9%。
+
+
+With no key economic news out on Monday and fewer corporations reporting earnings, volume in the stock market on Monday was understandably below average. Meanwhile, inside the IBD 50, [only 10 of the 50 companies](https://leaderboard.investors.com/#/ibd50/full) saw turnover go above their respective average over the past 50 sessions.  
+由于周一没有重要的经济新闻发布，公布财报的公司较少，周一股市的成交量低于平均水平是可以理解的。与此同时，在 IBD 50 中，[50 家公司中只有 10 家公司的](https://leaderboard.investors.com/#/ibd50/full)成交额在过去 50 个交易日高于各自的平均水平。
+
+
+Beyond the stock market, bond traders did not show much difference in opinion on the extent the Fed could lower short-term interest rates.  
+除了股市之外，债券交易员对美联储在多大程度上降低短期利率的看法没有太大分歧。
+
+
+
+
+---
+
+
+[**Stock Market Outlook For The Next 6 Months  
+未来 6 个月的股市展望**](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+
+
+
+
+---
+
+
+Rate Cuts Remain On The Table降息仍悬而未决
+------------------------------------
+
+
+At CME FedWatch, trading indicated a 77.5% probability that the U.S. central bank will lower the fed funds rate by a quarter point to a range of 5%-5.25%. The chance of a half-point trim has edged lower in recent days to 22.5%. Go back to Aug. 12, and it was a 50-50 bet that the fed funds interest rate would fall to a target zone of 4.75%-5%.  
+在 CME FedWatch 上，交易显示美国央行将联邦基金利率下调四分之一个百分点至 5%-5.25% 的可能性为 77.5%。最近几天，降息半个百分点的可能性小幅下降至 22.5%。回到 8 月 12 日，联邦基金利率将降至 4.75%-5% 的目标区域是 50-50 的赌注。
+
+
+Speculation over what the Fed will do remains fever-pitched.  
+关于美联储将采取什么行动的猜测仍然激烈。
+
+
+In an [interview with the Wall Street Journal](https://www.wsj.com/livecoverage/stock-market-today-dow-sp500-nasdaq-live-08-19-2024/card/fed-s-kashkari-weaker-job-market-should-open-the-door-to-a-september-cut-Hk1iDUIR0gmOdRVlZgHx?mod=Searchresults_pos1&page=1) Neel Kashkari, the head of the Minneapolis Federal Reserve Bank, hinted that he might favor cutting rates at the upcoming Sept. 18 FOMC meeting. The reason? A sharply weakening labor market could have serious consequences for the U.S. economy.  
+在[接受《华尔街日报》采访](https://www.wsj.com/livecoverage/stock-market-today-dow-sp500-nasdaq-live-08-19-2024/card/fed-s-kashkari-weaker-job-market-should-open-the-door-to-a-september-cut-Hk1iDUIR0gmOdRVlZgHx?mod=Searchresults_pos1&page=1)时，明尼阿波利斯联邦储备银行行长尼尔·卡什卡里 （Neel Kashkari） 暗示，他可能赞成在即将到来的 9 月 18 日联邦公开市场委员会会议上降息。原因是什么？劳动力市场的急剧疲软可能会对美国经济产生严重后果。
+
+
+
+"The balance of risks has shifted, so the debate about potentially cutting rates in September is an appropriate one to have," Kashkari was quoted as saying in an interview Friday. Back in June, Kashkari had apparently leaned toward no drop in short-term rates until the end of the year.  
+“风险的天平已经发生了变化，因此关于 9 月份可能降息的辩论是合适的，”卡什卡利周五在接受采访时被引述说。早在 6 月，Kashkari 显然倾向于在年底之前不会降低短期利率。
+
+
+
+On the other hand, Ryan Grabinski, managing director and investment strategist at the Baird-owned research firm Strategas, said in a note delivered to clients and IBD that based on market data, the stock market is now forecasting roughly nine rate cuts, by a quarter point each time, by the end of 2025. "That feels aggressive," Grabinski noted.  
+另一方面，贝尔德旗下的研究公司 Strategas 的董事总经理兼投资策略师 Ryan Grabinski 在发给客户和 IBD 的一份报告中表示，根据市场数据，股市现在预测到 2025 年底将降息大约 9 次，每次降息四分之一个百分点。“这感觉很激进，”格拉宾斯基指出。
+
+
+**To Cut Big Or To Cut Little大剪或小剪**
+------------------------------------
+
+
+"We expect that the Fed will cut rates next month and begin a gradual path in their cutting cycle. I think the more important thing to keep in mind is that when the Fed does begin cutting rates, we have to be thoughtful about what signal they're trying to send," Grabinski said. "If they are cutting because the economy is weak, that can be a bad sign." He points to the cuts in rates in both 2001 and 2007 as timely examples.  
+“我们预计美联储将在下个月降息，并开始逐步降息周期。我认为要记住的更重要一点是，当美联储真的开始降息时，我们必须仔细考虑他们试图发出什么信号，“Grabinski 说。“如果他们因为经济疲软而削减开支，那可能是一个坏兆头。”他指出，2001 年和 2007 年的降息就是及时的例子。
+
+
+Either way, the decision will be historic. The last time the Federal Reserve cut interest rates? March 2020, during the height of the Covid-19 pandemic.  
+无论哪种方式，这个决定都将是历史性的。美联储上一次降息是什么时候？2020 年 3 月，在 Covid-19 大流行的高峰期。
+
+
+Breadth, meanwhile, was also favorable on the NYSE. There, advancers outdistanced decliners by a 3-1 ratio.  
+与此同时，Breadth 在纽约证券交易所也受到青睐。在那里，上涨的股票以 3：1 的比例超过了下跌的股票。
+
+
+Looking at IBD's 197 industry groups, leadership on Monday was surely mixed. At the top, the very small dairy products group ran 7.4% higher. Another vastly shrunken group, media periodicals, strode 6.6% ahead.  
+纵观 IBD 的 197 个行业团体，周一的领导层肯定喜忧参半。在顶部，非常小的乳制品组上涨了 7.4%。另一个大幅萎缩的集团媒体期刊上涨 6.6%。
+
+
+But the true leadership came from industries such as biotech, gold and silver mining, oil and gas royalty trust, travel booking, movies, metal ores, homebuilding, ship transport, leisure services, generic drugs and security software. These groups and others gained 1.6% or more on the day. Virtually all of these industries hold at least a few companies with very good IBD ratings and excellent chart action.  
+但真正的领导来自生物技术、金银开采、石油和天然气特许权使用费信托、旅游预订、电影、金属矿石、住宅建筑、船舶运输、休闲服务、仿制药和安全软件等行业。这些群体和其他群体当天上涨了 1.6% 或更多。几乎所有这些行业都至少拥有几家具有非常好的 IBD 评级和出色的图表操作的公司。
+
+
+
+
+---
+
+
+**[Track Industry Group Leaders Here  
+在此处跟踪行业组领导者](https://www.investors.com/ibd-data-tables/)**
+
+
+
+
+---
+
+
+New Stock Market Leaders 新股市场领导者
 --------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/08/MP081924-232x300.jpg)After the Nasdaq edged 0.3% lower by around 10:20 a.m. ET, the composite index soon wiped out that drop and marched higher through the session's close. At 17,876, the Nasdaq led the stock market higher with a 1.4% gain. Since the start of the third quarter, the tech-bolstered index is now positive again, up 0.8% since July 1.
+The groups' action also highlights burgeoning power seen among new issues.  
+这些团体的行动还凸显了新问题中新兴的力量。
 
 
-The Nasdaq composite also closed well above the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/), which is rising again.
+As noted in the Market Pulse above, **Bowhead Specialty** ([BOW](https://research.investors.com/quote.aspx?symbol=BOW)), part of the diversified insurance group, and software firm **Life360** ([LIF](https://research.investors.com/quote.aspx?symbol=LIF)) stood out among companies rising in heavy trade.  
+如上面的 Market Pulse 所述，多元化保险集团旗下的 **Bowhead Specialty** （[BOW](https://research.investors.com/quote.aspx?symbol=BOW)） 和软件公司 **Life360** （[LIF](https://research.investors.com/quote.aspx?symbol=LIF)） 在大额交易中崛起的公司中脱颖而出。
 
 
-The Nasdaq 100 tracker, Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)), rose 1.3%. The two indexes' gains affirmed good breadth. Early data showed 3,047 stocks on the Nasdaq rose while 1,182 fell. That comes to roughly a winning margin of 3-to-1.
+Bowhead, a small cap with a $909 million market value, has not risen much since it cleared an IPO base with a 27.49 buy point. In the past two quarters, the expert in casualty insurance and professional liability products grew earnings 67% and 20% vs. year-ago levels on revenue gains of 54% and 51%.  
+Bowhead 是一家市值为 9.09 亿美元的小盘股，自从以 27.49 的买入点清理 IPO 基础以来，并没有上涨太多。在过去两个季度，这家意外伤害保险和职业责任产品专家的收益与去年同期相比分别增长了 67% 和 20%，收入增长了 54% 和 51%。
 
 
-Small caps performed well. The Russell 2000 rose 1.2%, edging out an almost 1% lift by the S&P 500.
+Life360, which cleared a very narrow consolidation at 36.07 on Aug. 9, is expected to turn a profit of two cents a share this year after years of net losses, then earn 51 cents in 2025. The family locator app firm has a market value of $2.7 billion and 73.4 million shares outstanding.  
+Life360 在 8 月 9 日以 36.07 的微弱收盘整，在经历了多年的净亏损后，预计今年将实现每股 2 美分的利润，然后在 2025 年实现 51 美分的收益。这家家庭定位应用程序公司的市值为 27 亿美元，流通股为 7340 万股。
 
 
-Sector indexes lagged. For instance, the Dow Jones Utility Average gained just 0.4%, trailing a nearly 0.9% move higher by the Dow Jones transportation average.
+In the biotech field, **ADMA Biologics** ([ADMA](https://research.investors.com/quote.aspx?symbol=ADMA)) has ranked [No. 1 within the IBD 50](https://research.investors.com/stock-lists/ibd-50/) recently.  
+在生物技术领域，**ADMA Biologics** （[ADMA）](https://research.investors.com/quote.aspx?symbol=ADMA) 最近在 [IBD 50 中](https://research.investors.com/stock-lists/ibd-50/)排名第一。
 
 
-With no key economic news out on Monday and fewer corporations reporting earnings, volume in the stock market on Monday was understandably below average. Meanwhile, inside the IBD 50, [only 10 of the 50 companies](https://leaderboard.investors.com/#/ibd50/full) saw turnover go above their respective average over the past 50 sessions.
+[Monday's IBD Stock Of The Day](https://www.investors.com/news/technology/tg-therapeutics-stock-briumvi-sales-second-quarter/) highlights **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)), which is advancing the treatment of multiple sclerosis. Also ranking high within the IBD 50, TG Therapeutics cruised past a 23.12 alternative entry Monday.  
+[周一的 IBD 今日股票](https://www.investors.com/news/technology/tg-therapeutics-stock-briumvi-sales-second-quarter/)突出了 **TG Therapeutics** （[TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)），该公司正在推进多发性硬化症的治疗。TG Therapeutics 在 IBD 50 中也排名靠前，周一的替代入场价为 23.12。
 
 
-Beyond the stock market, bond traders did not show much difference in opinion on the extent the Fed could lower short-term interest rates.
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081924.pdf)
 
 
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
----
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[**Stock Market Outlook For The Next 6 Months**](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
-
-
-
-
----
-
-
-Rate Cuts Remain On The Table
------------------------------
-
-
-At CME FedWatch, trading indicated a 77.5% probability that the U.S. central bank will lower the fed funds rate by a quarter point to a range of 5%-5.25%. The chance of a half-point trim has edged lower in recent days to 22.5%. Go back to Aug. 12, and it was a 50-50 bet that the fed funds interest rate would fall to a target zone of 4.75%-5%.
-
-
-Speculation over what the Fed will do remains fever-pitched.
-
-
-In an [interview with the Wall Street Journal](https://www.wsj.com/livecoverage/stock-market-today-dow-sp500-nasdaq-live-08-19-2024/card/fed-s-kashkari-weaker-job-market-should-open-the-door-to-a-september-cut-Hk1iDUIR0gmOdRVlZgHx?mod=Searchresults_pos1&page=1) Neel Kashkari, the head of the Minneapolis Federal Reserve Bank, hinted that he might favor cutting rates at the upcoming Sept. 18 FOMC meeting. The reason? A sharply weakening labor market could have serious consequences for the U.S. economy.
-
-
-
-"The balance of risks has shifted, so the debate about potentially cutting rates in September is an appropriate one to have," Kashkari was quoted as saying in an interview Friday. Back in June, Kashkari had apparently leaned toward no drop in short-term rates until the end of the year.
-
-
-
-On the other hand, Ryan Grabinski, managing director and investment strategist at the Baird-owned research firm Strategas, said in a note delivered to clients and IBD that based on market data, the stock market is now forecasting roughly nine rate cuts, by a quarter point each time, by the end of 2025. "That feels aggressive," Grabinski noted.
-
-
-**To Cut Big Or To Cut Little**
--------------------------------
-
-
-"We expect that the Fed will cut rates next month and begin a gradual path in their cutting cycle. I think the more important thing to keep in mind is that when the Fed does begin cutting rates, we have to be thoughtful about what signal they're trying to send," Grabinski said. "If they are cutting because the economy is weak, that can be a bad sign." He points to the cuts in rates in both 2001 and 2007 as timely examples.
-
-
-Either way, the decision will be historic. The last time the Federal Reserve cut interest rates? March 2020, during the height of the Covid-19 pandemic.
-
-
-Breadth, meanwhile, was also favorable on the NYSE. There, advancers outdistanced decliners by a 3-1 ratio.
-
-
-Looking at IBD's 197 industry groups, leadership on Monday was surely mixed. At the top, the very small dairy products group ran 7.4% higher. Another vastly shrunken group, media periodicals, strode 6.6% ahead.
-
-
-But the true leadership came from industries such as biotech, gold and silver mining, oil and gas royalty trust, travel booking, movies, metal ores, homebuilding, ship transport, leisure services, generic drugs and security software. These groups and others gained 1.6% or more on the day. Virtually all of these industries hold at least a few companies with very good IBD ratings and excellent chart action.
-
-
-
-
----
-
-
-**[Track Industry Group Leaders Here](https://www.investors.com/ibd-data-tables/)**
-
-
-
-
----
-
-
-New Stock Market Leaders
-------------------------
-
-
-The groups' action also highlights burgeoning power seen among new issues.
-
-
-As noted in the Market Pulse above, **Bowhead Specialty** ([BOW](https://research.investors.com/quote.aspx?symbol=BOW)), part of the diversified insurance group, and software firm **Life360** ([LIF](https://research.investors.com/quote.aspx?symbol=LIF)) stood out among companies rising in heavy trade.
-
-
-Bowhead, a small cap with a $909 million market value, has not risen much since it cleared an IPO base with a 27.49 buy point. In the past two quarters, the expert in casualty insurance and professional liability products grew earnings 67% and 20% vs. year-ago levels on revenue gains of 54% and 51%.
-
-
-Life360, which cleared a very narrow consolidation at 36.07 on Aug. 9, is expected to turn a profit of two cents a share this year after years of net losses, then earn 51 cents in 2025. The family locator app firm has a market value of $2.7 billion and 73.4 million shares outstanding.
-
-
-In the biotech field, **ADMA Biologics** ([ADMA](https://research.investors.com/quote.aspx?symbol=ADMA)) has ranked [No. 1 within the IBD 50](https://research.investors.com/stock-lists/ibd-50/) recently.
-
-
-[Monday's IBD Stock Of The Day](https://www.investors.com/news/technology/tg-therapeutics-stock-briumvi-sales-second-quarter/) highlights **TG Therapeutics** ([TGTX](https://research.investors.com/quote.aspx?symbol=TGTX)), which is advancing the treatment of multiple sclerosis. Also ranking high within the IBD 50, TG Therapeutics cruised past a 23.12 alternative entry Monday.
-
-
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_081924.pdf)
-
-
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
-
-
-**YOU MIGHT ALSO LIKE:**
-
-
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
+想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
 
 
 [IBD Live: A New Tool For Daily Stock Market Analysis](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
