--- a/_columns/The_Big_Picture/zh-cn/2024-08-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-26.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Mostly Cools Off, But 2 Indexes Stroke New Highs; Is Value Beating Growth Now?
+  Stock Market Mostly Cools Off, But 2 Indexes Stroke New Highs; Is Value Beating Growth Now?	股市大部分降温，但 2 个指数创下新高;价值现在跑赢了增长吗？
 date: 2024-08-26 18:26 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,82 +10,22 @@ author: DAVID SAITO-CHUNG
 
 
 
-The stock market finished mixed on Monday, but investors appeared to show a fair degree of restraint in their selling. Meanwhile, the Nasdaq proved it cannot be the leader every day in a bull market.
+The stock market finished mixed on Monday, but investors appeared to show a fair degree of restraint in their selling. Meanwhile, the Nasdaq proved it cannot be the leader every day in a bull market.  
+周一股市收盘涨跌互现，但投资者似乎在抛售中表现出相当程度的克制。与此同时，纳斯达克证明它不可能每天都在牛市中成为领导者。
 
 
 
 
-While the Nasdaq composite cooled off, down almost 0.9%, it certainly reflected hesitancy among fund managers to load up further after [Federal Reserve Chair Jerome Powell's decisive statement](https://www.investors.com/news/economy/jackson-hole-federal-reserve-chairman-jerome-powell-rate-cuts-labor-market-sp-500/) Friday on monetary policy.
+While the Nasdaq composite cooled off, down almost 0.9%, it certainly reflected hesitancy among fund managers to load up further after [Federal Reserve Chair Jerome Powell's decisive statement](https://www.investors.com/news/economy/jackson-hole-federal-reserve-chairman-jerome-powell-rate-cuts-labor-market-sp-500/) Friday on monetary policy.  
+虽然纳斯达克综合指数降温，下跌近 0.9%，但这无疑反映出在[美联储主席杰罗姆鲍威尔周五就货币政策发表决定性声明](https://www.investors.com/news/economy/jackson-hole-federal-reserve-chairman-jerome-powell-rate-cuts-labor-market-sp-500/)后，基金经理们不愿进一步加仓。
 
 
-Plus, [one of the largest companies on the U.S. market](https://www.investors.com/news/technology/nvidia-stock-nvda-preview-fiscal-q2-2025-earnings/) and the linchpin of the AI investing theme, Nvidia, is slated to report earnings on Wednesday, alongside beleaguered cybersecurity group leader **CrowdStrike** ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)).
+Plus, [one of the largest companies on the U.S. market](https://www.investors.com/news/technology/nvidia-stock-nvda-preview-fiscal-q2-2025-earnings/) and the linchpin of the AI investing theme, Nvidia, is slated to report earnings on Wednesday, alongside beleaguered cybersecurity group leader **CrowdStrike** ([CRWD](https://research.investors.com/quote.aspx?symbol=CRWD)).  
+此外，[美国市场上最大的公司之一](https://www.investors.com/news/technology/nvidia-stock-nvda-preview-fiscal-q2-2025-earnings/)、人工智能投资主题的关键公司英伟达（Nvidia）定于周三公布财报，与陷入困境的网络安全集团领导者 **CrowdStrike** （[CRWD）](https://research.investors.com/quote.aspx?symbol=CRWD) 一起公布财报。
 
 
-While the Nasdaq failed to reclaim 18,000, a psychologically meaningful price level, it held above the 50-day moving average, another important technical level. Also, the Nasdaq's nearly 0.9% decline Monday was a small portion of a 6.7% advance accomplished in the prior two weeks.
-
-
-
-
----
-
-
-[**Who's Reporting Earnings This Week? Check Here**](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/)
-
-
-
-
----
-
-
-Stock Market Today
-------------------
-
-
-The S&P 500, in contrast, eased just 0.3%. At 5,616, the large-cap benchmark remains in the black for the third quarter, up nearly 2.9% since July 1. On Monday, small caps also faded. The S&P SmallCap 600 reversed off its intraday high of 1,424, squandering an early 0.8% increase. It closed just 0.1% lower for the day.
-
-
-
-![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP082624-249x300.jpg)Decent market breadth helps explain why the S&P 500 and S&P 600 both fared quite well. Early data on the NYSE showed winners beating losers by a nearly 4-3 margin. That's better than on the Nasdaq, where [declining issues outnumbered rising ones 2,410 vs. 1,975](https://www.nasdaq.com/market-activity/daily-market-statistics).
-
-
-(Please go to the General Market Indicators chart page, found as a link at the bottom of every Big Picture column, for the final numbers.)
-
-
-Meanwhile, volume cooled on both main exchanges vs. Friday. So, while the Nasdaq did receive the brunt of the day's selling, it also avoided a [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).
-
-
-As the Market Pulse shows, since the Aug. 13 [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/), [heavy professional selling](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) remains scant.
-
-
-How Now, Shining Dow?
----------------------
-
-
-Monday's stock market action also saw the Dow Jones Industrial Average rise to an all-time high of 41,420. The blue-chip gauge finished at 41,240, up less than 0.2% and off that peak. Nonetheless, the Dow Jones' gain, coupled with another all-time peak by the NYSE Composite, reaffirmed the expanding breadth of the stock market advance.
-
-
-When the breadth of the stock market improves, so do investors' chances of making money going long.
-
-
-[On MarketSurge](https://marketsurge.investors.com/?src=A012BF), subscribers can view a 10-day moving average of the advance-decline lines on both the NYSE and the Nasdaq. On the former, visible by punching in "GMIAA" on a daily chart only, the NYSE's advance-decline line has been ramping higher since the beginning of July. The A-D line has also been leading its 10-day moving average on a bullish upward slope since late last week.
-
-
-Going all the way to early November, the NYSE's A-D line broke a 13-week downtrend and has been stroking higher highs and higher lows since then.
-
-
-That's the kind of technicals you want to see in a bullish stock market.
-
-
-And how about the Nasdaq? The picture is less rosy. Since July of 2023, the Nasdaq's A-D line actually has not cracked its long-term downtrend yet. But, after the advance-decline line hit a nadir for the year amid the early August sell-off, it's been climbing well.
-
-
-Going back to the Dow industrials, it's not often that you see a blue chip such as **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) make the Market Pulse as part of the "Leaders Up In Volume" section. Yet the beverage giant is actually outperforming the S&P 500 year to date. The megacap beverage play has also given recent buyers a smooth ride after shares cleared a flat base at 64.36 on July 17.
-
-
-The 80 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) ranks Coca-Cola within the top third of the Dow industrials. At least seven others headed into Monday's session scored an 80 RS Rating or higher.
-
-
-The Dow Jones' newfound strength raises the question: Is value beginning to surpass growth in the stock market?
+While the Nasdaq failed to reclaim 18,000, a psychologically meaningful price level, it held above the 50-day moving average, another important technical level. Also, the Nasdaq's nearly 0.9% decline Monday was a small portion of a 6.7% advance accomplished in the prior two weeks.  
+虽然纳斯达克指数未能收复 18,000 点，这是一个具有心理意义的价格水平，但它保持在另一个重要的技术水平 50 天移动平均线上方。此外，纳斯达克指数周一下跌近 0.9%，只是前两周上涨 6.7% 的一小部分。
 
 
 
@@ -93,7 +33,8 @@ The Dow Jones' newfound strength raises the question: Is value beginning to surp
 ---
 
 
-[Stock Market Outlook For The Next 6 Months](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+[**Who's Reporting Earnings This Week? Check Here  
+谁将报告本周的收益？在这里查看**](https://www.investors.com/research/earnings-calendar-analyst-estimates-stocks-to-watch/)
 
 
 
@@ -101,35 +42,122 @@ The Dow Jones' newfound strength raises the question: Is value beginning to surp
 ---
 
 
-Battle Between Growth And Value
--------------------------------
+Stock Market Today 今日股市
+-----------------------
 
 
-One way to answer this: Compare the iShares S&P 500 Value ([IVE](https://research.investors.com/quote.aspx?symbol=IVE)) exchange traded fund with iShares S&P 500 Growth ([IVW](https://research.investors.com/quote.aspx?symbol=IVW)).
+The S&P 500, in contrast, eased just 0.3%. At 5,616, the large-cap benchmark remains in the black for the third quarter, up nearly 2.9% since July 1. On Monday, small caps also faded. The S&P SmallCap 600 reversed off its intraday high of 1,424, squandering an early 0.8% increase. It closed just 0.1% lower for the day.  
+相比之下，标准普尔 500 指数仅下跌 0.3%。大盘股基准指数为5,616点，第三季度仍处于亏损状态，自7月1日以来上涨了近2.9%。周一，小盘股也下跌。标准普尔小盘股 600 指数从盘中高点 1,424 点回落，浪费了早盘 0.8% 的涨幅。当天收盘仅下跌 0.1%。
 
 
-Over the past 12 months, the value ETF has lagged the growth ETF (up 21.8% vs. 32.7% since Aug. 25 last year). However, the value fund narrowed the gap over the past three months, up 5.7% vs. a 6.5% lift by its growth counterpart. And, since the start of the third quarter, iShares S&P 500 Value has taken over the race, rising 6.5%, while iShares S&P 500 Growth has mustered only a 0.8% gain.
+
+![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP082624-249x300.jpg)Decent market breadth helps explain why the S&P 500 and S&P 600 both fared quite well. Early data on the NYSE showed winners beating losers by a nearly 4-3 margin. That's better than on the Nasdaq, where [declining issues outnumbered rising ones 2,410 vs. 1,975](https://www.nasdaq.com/market-activity/daily-market-statistics).  
+不错的市场广度有助于解释为什么标准普尔 500 指数和标准普尔 600 指数都表现相当不错。纽约证券交易所的早期数据显示，赢家以近 4-3 的优势击败输家。这比纳斯达克要好，纳斯达克下跌[的股票数量多于上涨的股票数量 2,410 只，纳斯达克股票数量为 1,975](https://www.nasdaq.com/market-activity/daily-market-statistics) 只。
 
 
-Outside the stock market, crude oil futures expiring in October jumped more than 3% to $77.16 a barrel on the Nymex amid oil facility closures in Libya and the ongoing military conflict between Israel and Hamas and Lebanon.
+(Please go to the General Market Indicators chart page, found as a link at the bottom of every Big Picture column, for the final numbers.)  
+（请转到 General Market Indicators 图表页面，该页面位于每个 Big Picture 列底部的链接中，以获取最终数字。
 
 
-[View the General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082624.pdf)
+Meanwhile, volume cooled on both main exchanges vs. Friday. So, while the Nasdaq did receive the brunt of the day's selling, it also avoided a [distribution day](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/).  
+与此同时，与周五相比，两个主要交易所的成交量均有所降温。因此，虽然纳斯达克指数确实在当天的抛售中首当其冲，但它也避免了[分销日](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/)。
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+As the Market Pulse shows, since the Aug. 13 [follow-through day](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/), [heavy professional selling](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/) remains scant.  
+正如 Market Pulse 所显示的那样，自 8 月 13 日[的后续交易日](https://www.investors.com/how-to-invest/investors-corner/follow-through-signals-market-uptrend/)以来，[大量专业抛售](https://www.investors.com/how-to-invest/investors-corner/how-do-you-spot-a-major-market-top-easy-look-for-heavy-distribution/)仍然很少。
 
 
-**YOU MIGHT ALSO LIKE:**
+How Now, Shining Dow? 现在怎么样，Shining Dow？
+----------------------------------------
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+Monday's stock market action also saw the Dow Jones Industrial Average rise to an all-time high of 41,420. The blue-chip gauge finished at 41,240, up less than 0.2% and off that peak. Nonetheless, the Dow Jones' gain, coupled with another all-time peak by the NYSE Composite, reaffirmed the expanding breadth of the stock market advance.  
+周一的股市走势也使道琼斯工业平均指数升至历史新高 41,420 点。蓝筹股指数收于 41,240 点，上涨不到 0.2%，低于该峰值。尽管如此，道琼斯指数的上涨，加上纽约证券交易所综合指数的另一次历史高点，再次证实了股市上涨的广度不断扩大。
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+When the breadth of the stock market improves, so do investors' chances of making money going long.  
+当股市的广度提高时，投资者赚多头的机会也会增加。
 
 
-[Find Best Growth Stocks Via IBD's Most Stringent Screen](https://research.investors.com/stock-lists/sector-leaders)
+[On MarketSurge](https://marketsurge.investors.com/?src=A012BF), subscribers can view a 10-day moving average of the advance-decline lines on both the NYSE and the Nasdaq. On the former, visible by punching in "GMIAA" on a daily chart only, the NYSE's advance-decline line has been ramping higher since the beginning of July. The A-D line has also been leading its 10-day moving average on a bullish upward slope since late last week.  
+[在 MarketSurge 上](https://marketsurge.investors.com/?src=A012BF)，订阅者可以查看纽约证券交易所和纳斯达克涨跌线的 10 天移动平均线。在前者上，只需在日线图上打入“GMIAA”即可看到，纽约证券交易所的涨跌线自 7 月初以来一直在走高。自上周晚些时候以来，A-D 线也一直在看涨上升的斜坡上引领其 10 天移动平均线。
+
+
+Going all the way to early November, the NYSE's A-D line broke a 13-week downtrend and has been stroking higher highs and higher lows since then.  
+一直到 11 月初，纽约证券交易所的 A-D 线打破了 13 周的下跌趋势，此后一直在走高和走高。
+
+
+That's the kind of technicals you want to see in a bullish stock market.  
+这就是您希望在看涨的股市中看到的技术面。
+
+
+And how about the Nasdaq? The picture is less rosy. Since July of 2023, the Nasdaq's A-D line actually has not cracked its long-term downtrend yet. But, after the advance-decline line hit a nadir for the year amid the early August sell-off, it's been climbing well.  
+纳斯达克呢？情况就不那么乐观了。自 2023 年 7 月以来，纳斯达克的 A-D 线实际上尚未打破其长期下跌趋势。但是，在 8 月初的抛售中，涨跌线触及今年的最低点后，它一直在攀升。
+
+
+Going back to the Dow industrials, it's not often that you see a blue chip such as **Coca-Cola** ([KO](https://research.investors.com/quote.aspx?symbol=KO)) make the Market Pulse as part of the "Leaders Up In Volume" section. Yet the beverage giant is actually outperforming the S&P 500 year to date. The megacap beverage play has also given recent buyers a smooth ride after shares cleared a flat base at 64.36 on July 17.  
+回到道琼斯工业股，您并不经常看到**可口可乐** （[KO）](https://research.investors.com/quote.aspx?symbol=KO) 等蓝筹股作为“成交量领先者”部分的一部分出现在市场脉搏中。然而，这家饮料巨头今年迄今的表现实际上优于标准普尔 500 指数。在 7 月 17 日股价收复 64.36 的平底后，大型饮料公司也为最近的买家提供了顺畅的旅程。
+
+
+The 80 [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) ranks Coca-Cola within the top third of the Dow industrials. At least seven others headed into Monday's session scored an 80 RS Rating or higher.  
+80 [相对强弱评级](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)将可口可乐排在道琼斯工业指数的前三分之一。至少有 7 人在周一的会议中获得了 80 RS 或更高的评分。
+
+
+The Dow Jones' newfound strength raises the question: Is value beginning to surpass growth in the stock market?  
+道琼斯指数新发现的强势提出了一个问题：价值股是否开始超过增长股？
+
+
+
+
+---
+
+
+[Stock Market Outlook For The Next 6 Months  
+未来 6 个月的股市展望](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+
+
+
+
+---
+
+
+Battle Between Growth And Value增长与价值之间的较量
+-----------------------------------------
+
+
+One way to answer this: Compare the iShares S&P 500 Value ([IVE](https://research.investors.com/quote.aspx?symbol=IVE)) exchange traded fund with iShares S&P 500 Growth ([IVW](https://research.investors.com/quote.aspx?symbol=IVW)).  
+回答这个问题的一种方法是：将 iShares S&P 500 Value （[IVE](https://research.investors.com/quote.aspx?symbol=IVE)） 交易所交易基金与 iShares S&P 500 Growth （[IVW）](https://research.investors.com/quote.aspx?symbol=IVW) 进行比较。
+
+
+Over the past 12 months, the value ETF has lagged the growth ETF (up 21.8% vs. 32.7% since Aug. 25 last year). However, the value fund narrowed the gap over the past three months, up 5.7% vs. a 6.5% lift by its growth counterpart. And, since the start of the third quarter, iShares S&P 500 Value has taken over the race, rising 6.5%, while iShares S&P 500 Growth has mustered only a 0.8% gain.  
+在过去的 12 个月里，价值 ETF 落后于成长型 ETF（上涨 21.8%，而去年 8 月 25 日以来为 32.7%）。然而，该价值基金在过去三个月缩小了差距，上涨了 5.7%，而其成长型基金上涨了 6.5%。而且，自第三季度开始以来，iShares 标准普尔 500 价值指数已经接管了这场竞赛，上涨了 6.5%，而 iShares 标准普尔 500 增长指数仅上涨了 0.8%。
+
+
+Outside the stock market, crude oil futures expiring in October jumped more than 3% to $77.16 a barrel on the Nymex amid oil facility closures in Libya and the ongoing military conflict between Israel and Hamas and Lebanon.  
+在股市之外，由于利比亚石油设施关闭以及以色列与哈马斯和黎巴嫩之间持续的军事冲突，10 月到期的原油期货在 Nymex 上涨超过 3% 至每桶 77.16 美元。
+
+
+[View the General Market Indicators chart page here.  
+在此处查看 General Market Indicators 图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082624.pdf)
+
+
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+
+
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+
+
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
+想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+
+
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
+
+
+[Find Best Growth Stocks Via IBD's Most Stringent Screen  
+通过 IBD 最严格的筛选找到最佳成长型股票](https://research.investors.com/stock-lists/sector-leaders)
 
 
  
