--- a/_columns/The_Big_Picture/zh-cn/2024-09-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-03.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Takes A Hit On Slowdown Fears; Nvidia Slumps In Record-Setting Fashion
+  Stock Market Takes A Hit On Slowdown Fears; Nvidia Slumps In Record-Setting Fashion	股市因对经济放缓的担忧而受到打击;Nvidia 以创纪录的方式暴跌
 date: 2024-09-03 17:42 -0700
 author: KEN SHREVE
 ---
@@ -10,98 +10,124 @@ author: KEN SHREVE
 
 
 
-A wave of selling hit the stock market on the first day of trading in September as concerns about a slowdown for the U.S. economy went back on the front burner.
+A wave of selling hit the stock market on the first day of trading in September as concerns about a slowdown for the U.S. economy went back on the front burner.  
+随着对美国经济放缓的担忧再次成为人们关注的焦点，股市在 9 月交易的第一天就出现了一波抛售浪潮。
 
 
 
 
-Investors bought bonds, sending the 10-year Treasury yield lower by seven basis points to around 3.84%. At 10 a.m. ET, the ISM Manufacturing index came in at 47.2, above July's reading of 46.8 but slightly below the 47.5 consensus estimate. Readings below 50 signify contraction. Indexes extended losses when the report was released.
+Investors bought bonds, sending the 10-year Treasury yield lower by seven basis points to around 3.84%. At 10 a.m. ET, the ISM Manufacturing index came in at 47.2, above July's reading of 46.8 but slightly below the 47.5 consensus estimate. Readings below 50 signify contraction. Indexes extended losses when the report was released.  
+投资者购买债券，导致 10 年期美国国债收益率下跌 7 个基点至 3.84% 左右。美国东部时间上午 10 点，ISM 制造业指数为 47.2，高于 7 月份的 46.8，但略低于市场预期的 47.5。读数低于 50 表示收缩。报告发布时，指数扩大了损失。
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
-The Russell 2000 small-cap index and the Nasdaq composite fared the worst with losses of 3.1% and 3.3%, respectively. Volume on the Nasdaq exchange rose from Friday, giving the index its fourth [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) since Aug. 22. Of those four days, three showed declines of at least 1.1%.
+The Russell 2000 small-cap index and the Nasdaq composite fared the worst with losses of 3.1% and 3.3%, respectively. Volume on the Nasdaq exchange rose from Friday, giving the index its fourth [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) since Aug. 22. Of those four days, three showed declines of at least 1.1%.  
+罗素 2000 小盘股指数和纳斯达克综合指数表现最差，分别下跌 3.1% 和 3.3%。纳斯达克交易所的成交量从周五开始上升，这是该指数自 8 月 22 日以来的第四[个发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。在这四天中，有三天至少下降了 1.1%。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP090324_2-228x300.jpg)
 
 
-For the Nasdaq, it was the worst start to a month since May 2020, when the index fell 3.2%. It was also the worst first session of September since 2002, when it fell 3.9%.
+For the Nasdaq, it was the worst start to a month since May 2020, when the index fell 3.2%. It was also the worst first session of September since 2002, when it fell 3.9%.  
+纳斯达克指数是自 2020 年 5 月以来最糟糕的一个月开局，当时该指数下跌 3.2%。这也是自 2002 年以来 9 月第一个交易日最糟糕的表现，当时下跌 3.9%。
 
 
-Due to the Nasdaq's weak price action, IBD lowered the recommended invested percentage to 40% to 60% from 60% to 80%.
+Due to the Nasdaq's weak price action, IBD lowered the recommended invested percentage to 40% to 60% from 60% to 80%.  
+由于纳斯达克价格走势疲软，IBD 将建议投资百分比从 60% 降至 80% 至 40% 至 60%。
 
 
-That means it's time to trim some holdings by taking partial profits in some of your winners. You could even take full profits in some stocks that are up at least 20% from your purchase price.
+That means it's time to trim some holdings by taking partial profits in some of your winners. You could even take full profits in some stocks that are up at least 20% from your purchase price.  
+这意味着现在是时候通过从一些赢家中获利来削减一些持股了。您甚至可以在一些比您的购买价格上涨至少 20% 的股票中获得全部利润。
 
 
-And don't be afraid to cut your weakest performers, even if they haven't trigged the [7% loss-cutting rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/).
+And don't be afraid to cut your weakest performers, even if they haven't trigged the [7% loss-cutting rule](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/).  
+不要害怕裁员表现最差的股票，即使他们还没有达到 [7% 的止损规则](https://www.investors.com/how-to-invest/investors-corner/still-the-no-1-rule-for-stock-investors-always-cut-your-losses-short/)。
 
 
-The Nasdaq 100 fell just over 3% in the stock market today, weighed down by a 9.5% drop for **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)). Nvidia shares slumped nearly 8% last week despite another strong [earnings report](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/). Wall Street most likely wanted a bigger beat-and-raise quarter.
+The Nasdaq 100 fell just over 3% in the stock market today, weighed down by a 9.5% drop for **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)). Nvidia shares slumped nearly 8% last week despite another strong [earnings report](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/). Wall Street most likely wanted a bigger beat-and-raise quarter.  
+纳斯达克 100 指数今天在股市下跌略高于 3%，受**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 下跌 9.5% 的拖累。尽管有另一份强劲[的财报](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/)，但英伟达股价上周下跌了近 8%。华尔街很可能希望有一个更大的节拍和加注季度。
 
 
-Declining stocks beat advancers on the Nasdaq by nearly 4-to-1. Besides Nvidia, several other chip stocks came under heavy selling in Nasdaq 100. **KLA** ([KLAC](https://research.investors.com/quote.aspx?symbol=KLAC)), **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)), **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)), **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) and **Advanced Micro Devices** ([AMD](https://research.investors.com/quote.aspx?symbol=AMD)) ended with losses ranging from 7% to 9.5%. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) cratered 7.5%.
+Declining stocks beat advancers on the Nasdaq by nearly 4-to-1. Besides Nvidia, several other chip stocks came under heavy selling in Nasdaq 100. **KLA** ([KLAC](https://research.investors.com/quote.aspx?symbol=KLAC)), **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)), **Marvell Technology** ([MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)), **Arm Holdings** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) and **Advanced Micro Devices** ([AMD](https://research.investors.com/quote.aspx?symbol=AMD)) ended with losses ranging from 7% to 9.5%. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) cratered 7.5%.  
+下跌的股票以近 4 比 1 的比分击败纳斯达克的上涨股票。除了英伟达，其他几只芯片股在纳斯达克 100 指数中也遭到了大量抛售。**KLA** （[KLAC](https://research.investors.com/quote.aspx?symbol=KLAC)）、**Micron Technology** （[MU）、](https://research.investors.com/quote.aspx?symbol=MU)**Marvell Technology** （[MRVL](https://research.investors.com/quote.aspx?symbol=MRVL)）、**Arm Holdings** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)） 和 **Advanced Micro Devices** （[AMD）](https://research.investors.com/quote.aspx?symbol=AMD) 收盘下跌 7% 至 9.5%。VanEck Semiconductor ETF （[SMH](https://research.investors.com/quote.aspx?symbol=SMH)） 下跌 7.5%。
 
 
-According to Dow Jones data, Nvidia lost $278.9 billion in market capitalization today. It was the largest one-day market-cap loss for any U.S. company on record, surpassing the record **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) set in 2022.
+According to Dow Jones data, Nvidia lost $278.9 billion in market capitalization today. It was the largest one-day market-cap loss for any U.S. company on record, surpassing the record **Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) set in 2022.  
+根据道琼斯数据，英伟达今天市值损失了 2789 亿美元。这是有记录以来美国公司单日市值损失最大的一次，超过了 **Meta Platforms** （[META](https://research.investors.com/quote.aspx?symbol=META)） 在 2022 年创下的纪录。
 
 
-Nvidia remains a large position in the [Leaderboard](https://leaderboard.investors.com) model portfolio after first joining the Leaders list in February 2023. We currently have the position hedged with the Tradr 1.5x Short NVDA Daily ETF ([NVDS](https://research.investors.com/quote.aspx?symbol=NVDS)).
+Nvidia remains a large position in the [Leaderboard](https://leaderboard.investors.com) model portfolio after first joining the Leaders list in February 2023. We currently have the position hedged with the Tradr 1.5x Short NVDA Daily ETF ([NVDS](https://research.investors.com/quote.aspx?symbol=NVDS)).  
+Nvidia 在 2023 年 2 月首次加入领导者名单后，在 [Leaderboard](https://leaderboard.investors.com) 模型组合中仍然占据重要地位。我们目前使用 Tradr 1.5 倍空头 NVDA 每日 ETF （[NVDS）](https://research.investors.com/quote.aspx?symbol=NVDS) 对冲头寸。
 
 
-The S&P 500 swooned 2.1% and could be poised for a test of the 5500 level, which happens to correspond to the index's 50-day moving average. Volume fell on the NYSE, so the S&P 500 avoided a distribution day. Losers beat winners on the NYSE by nearly 3-to-1.
+The S&P 500 swooned 2.1% and could be poised for a test of the 5500 level, which happens to correspond to the index's 50-day moving average. Volume fell on the NYSE, so the S&P 500 avoided a distribution day. Losers beat winners on the NYSE by nearly 3-to-1.  
+标准普尔 500 指数下跌 2.1%，可能准备测试 5500 水平，该水平恰好对应于该指数的 50 天移动平均线。纽约证券交易所的成交量下降，因此标准普尔 500 指数避免了派息日。在纽约证券交易所，失败者以近 3 比 1 击败获胜者。
 
 
-The Dow Jones Industrial Average fell 1.5% and looks poised for a test of its 21-day moving average. **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) lagged in the blue-chip index with losses of 7%-9%.
+The Dow Jones Industrial Average fell 1.5% and looks poised for a test of its 21-day moving average. **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) lagged in the blue-chip index with losses of 7%-9%.  
+道琼斯工业平均指数下跌 1.5%，似乎准备测试其 21 天移动平均线。**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 在蓝筹股指数中落后，下跌 7%-9%。
 
 
-Copper And Oil Down
--------------------
+Copper And Oil Down 铜和油
+-----------------------
 
 
-Copper producer **Freeport McMoRan** ([FCX](https://research.investors.com/quote.aspx?symbol=FCX)) was one of the worst performers in the S&P 500, down 6.6%. IBD's Mining-Metal Ores was among the top-10 worst performing groups, with a decline of around 6%.
+Copper producer **Freeport McMoRan** ([FCX](https://research.investors.com/quote.aspx?symbol=FCX)) was one of the worst performers in the S&P 500, down 6.6%. IBD's Mining-Metal Ores was among the top-10 worst performing groups, with a decline of around 6%.  
+铜生产商 **Freeport McMoRan** （[FCX](https://research.investors.com/quote.aspx?symbol=FCX)） 是标准普尔 500 指数中表现最差的股票之一，下跌 6.6%。IBD 的采矿金属矿石是表现最差的 10 个组别之一，下降了约 6%。
 
 
-Copper was down 3% near the stock market close, while West Texas intermediate crude oil futures gave back more than 4% to just over $70 a barrel.
+Copper was down 3% near the stock market close, while West Texas intermediate crude oil futures gave back more than 4% to just over $70 a barrel.  
+铜价在股市收盘前下跌 3%，而西德克萨斯中质原油期货回落超过 4%，至略高于每桶 70 美元。
 
 
-Federal funds futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are still favoring a quarter-point interest rate cut at this month's meeting, with a smaller 34% chance of a 50-basis-point cut. Futures traders think there's a 73% chance of 100 basis points in cuts over the Federal Reserve's remaining three meetings. So that implies a 50-basis-point cut at one of the meetings.
+Federal funds futures traders at [CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) are still favoring a quarter-point interest rate cut at this month's meeting, with a smaller 34% chance of a 50-basis-point cut. Futures traders think there's a 73% chance of 100 basis points in cuts over the Federal Reserve's remaining three meetings. So that implies a 50-basis-point cut at one of the meetings.  
+[CME FedWatch](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html) 的联邦基金期货交易员仍然支持在本月的会议上降息 25 个基点，降息 50 个基点的可能性较小，为 34%。期货交易员认为，在美联储剩余的三次会议上，降息 100 个基点的可能性为 73%。因此，这意味着在其中一次会议上降息 50 个基点。
 
 
-The next big economic report comes Friday with the release of the August jobs report. Nonfarm payrolls are expected to be up 160,000 after the economy created a paltry 114,000 jobs in July, well below expectations of 180,000. Based on the stock market's performance Tuesday, Wall Street doesn't want to see a second straight month of weak job growth.
+The next big economic report comes Friday with the release of the August jobs report. Nonfarm payrolls are expected to be up 160,000 after the economy created a paltry 114,000 jobs in July, well below expectations of 180,000. Based on the stock market's performance Tuesday, Wall Street doesn't want to see a second straight month of weak job growth.  
+下一份重大经济报告将于周五发布 8 月就业报告。非农就业人数预计将增加 160,000 人，此前经济在 7 月份创造了 114,000 个工作岗位，远低于预期的 180,000 人。根据周二的股市表现，华尔街不希望看到就业增长连续第二个月疲软。
 
 
-Argentina bank **Banco Macro** ([BMA](https://research.investors.com/quote.aspx?symbol=BMA)) performed well in the [MarketSurge Growth 250](https://marketsurge.investors.com), up around 3%. It's still trying to clear a cup-with-handle base with a 60.51 buy point.
+Argentina bank **Banco Macro** ([BMA](https://research.investors.com/quote.aspx?symbol=BMA)) performed well in the [MarketSurge Growth 250](https://marketsurge.investors.com), up around 3%. It's still trying to clear a cup-with-handle base with a 60.51 buy point.  
+阿根廷银行 **Banco Macro** （[BMA](https://research.investors.com/quote.aspx?symbol=BMA)） 在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中表现良好，上涨约 3%。它仍在尝试以 60.51 的买入点清除带手柄的杯子底部。
 
 
-Leaderboard stock **Freshpet** ([FRPT](https://research.investors.com/quote.aspx?symbol=FRPT)) outperformed in the stock market early, but a 5.2% afternoon gain faded to less than 1% by the close. Freshpet is today's [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/freshpet-stock-rallies-above-buy-point/).
+Leaderboard stock **Freshpet** ([FRPT](https://research.investors.com/quote.aspx?symbol=FRPT)) outperformed in the stock market early, but a 5.2% afternoon gain faded to less than 1% by the close. Freshpet is today's [IBD Stock of the Day](https://www.investors.com/research/ibd-stock-of-the-day/freshpet-stock-rallies-above-buy-point/).  
+排行榜股票 **Freshpet** （[FRPT）](https://research.investors.com/quote.aspx?symbol=FRPT) 早盘跑赢股市，但午后 5.2% 的涨幅在收盘时回落至不到 1%。Freshpet 是今天的 [IBD 股票](https://www.investors.com/research/ibd-stock-of-the-day/freshpet-stock-rallies-above-buy-point/)。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090324.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090324.pdf)
 
 
-*Follow Ken Shreve On X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+*Follow Ken Shreve On X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*关注 Ken Shreve On X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
+[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)  
+[为什么这个 IBD 工具简化了](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[顶级股票的](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
 
 
-[Catch The Next Big Winning Stock With MarketSurge](https://marketsurge.investors.com/)
+[Catch The Next Big Winning Stock With MarketSurge  
+通过 MarketSurge 捕捉下一只大赢家股票](https://marketsurge.investors.com/)
 
 
-[Best Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
+IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
-[Rally Breaks Expectations As Nvidia Dives; What To Do Now](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-sell-off-market-expectations-breaker/)
+[Rally Breaks Expectations As Nvidia Dives; What To Do Now  
+随着 Nvidia 跳水，反弹超出预期;现在该做什么](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-sell-off-market-expectations-breaker/)
 
 
 
