--- a/_columns/The_Big_Picture/zh-cn/2024-09-06.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-06.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Hit Hard After Weak Jobs Report; Inflation Data On Tap
+  Stock Market Hit Hard After Weak Jobs Report; Inflation Data On Tap	疲软的就业报告后股市遭受重创;通货膨胀数据
 date: 2024-09-06 17:34 -0700
 author: MICHAEL LARKIN
 ---
@@ -10,56 +10,70 @@ author: MICHAEL LARKIN
 
 
 
-The stock market took a pounding on Friday after a pivotal jobs report came in weaker than expected. Now, inflation data and **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) earnings are among noteworthy events in the coming week.
+The stock market took a pounding on Friday after a pivotal jobs report came in weaker than expected. Now, inflation data and **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) earnings are among noteworthy events in the coming week.  
+周五，在关键就业报告弱于预期后，股市遭受重创。现在，通胀数据和**甲骨文** （[ORCL）](https://research.investors.com/quote.aspx?symbol=ORCL) 收益是未来一周值得注意的事件之一。
 
 
 
 
-The Nasdaq composite had the toughest time among the major indexes Friday, plummeting 2.6%. Its weekly decline of 5.8% was its worst since January 2022. It ended the week below the low of the Aug. 13 follow-through day and sits just 2.5% above its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/). While it is well off recent highs, the tech-heavy index remains up 11.2% for the year.
+The Nasdaq composite had the toughest time among the major indexes Friday, plummeting 2.6%. Its weekly decline of 5.8% was its worst since January 2022. It ended the week below the low of the Aug. 13 follow-through day and sits just 2.5% above its [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/). While it is well off recent highs, the tech-heavy index remains up 11.2% for the year.  
+纳斯达克综合指数周五在主要指数中表现最艰难，暴跌 2.6%。其每周跌幅为 5.8%，是自 2022 年 1 月以来的最大跌幅。本周收盘价低于 8 月 13 日后续日的低点，仅比 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/)高出 2.5%。虽然远低于近期高点，但以科技股为主的指数今年仍上涨了 11.2%。
 
 
-The S&P 500 tumbled 1.7% for the day, which slammed it below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It also turned in a painful weekly drop of 4.3%, its worst since last year, while its year-to-date gain has atrophied to 13.4%. The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund fell 1% but held above the 50-day line.
+The S&P 500 tumbled 1.7% for the day, which slammed it below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/). It also turned in a painful weekly drop of 4.3%, its worst since last year, while its year-to-date gain has atrophied to 13.4%. The Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund fell 1% but held above the 50-day line.  
+标准普尔 500 指数当天下跌 1.7%，跌破 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/50-day-moving-average-identifies-buy-sell-signals/)。它还出现了 4.3% 的痛苦周跌幅，这是自去年以来的最大跌幅，而年初至今的涨幅已萎缩至 13.4%。Invesco S&P 500 Equal Weight （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金下跌 1%，但保持在 50 日线上方。
 
 
-Decliners led advancers by more than 3-to-1 on both the New York Stock Exchange and the Nasdaq. Volume came in higher for both, which added fresh distribution days to both major indexes.
+Decliners led advancers by more than 3-to-1 on both the New York Stock Exchange and the Nasdaq. Volume came in higher for both, which added fresh distribution days to both major indexes.  
+纽约证券交易所和纳斯达克的下跌股均以超过 3 比 1 的比分领先上涨。这两个指数的成交量都更高，这为两个主要指数增加了新的发行天数。
 
 
-Stock Market Dip Sparks This Change
------------------------------------
+Stock Market Dip Sparks This Change股市下跌引发了这一变化
+----------------------------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/09/MP090624-272x300.jpg)It wasn't just the S&P 500 and Nasdaq that got clobbered. The Dow Jones Industrial Average skidded closer to its 50-day line as it fell 1% Friday, which accounted for a fair portion of its 2.9% weekly decline.
+![](https://www.investors.com/wp-content/uploads/2024/09/MP090624-272x300.jpg)It wasn't just the S&P 500 and Nasdaq that got clobbered. The Dow Jones Industrial Average skidded closer to its 50-day line as it fell 1% Friday, which accounted for a fair portion of its 2.9% weekly decline.  
+不仅仅是标准普尔 500 指数和纳斯达克指数受到重创。道琼斯工业平均指数周五下跌 1%，跌至 50 日线附近，占其每周 2.9% 跌幅的相当一部分。
 
 
-Insurance stock **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) outperformed while **Amazon.com** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) had the toughest sessions among the Dow components.
+Insurance stock **Travelers** ([TRV](https://research.investors.com/quote.aspx?symbol=TRV)) outperformed while **Amazon.com** ([GS](https://research.investors.com/quote.aspx?symbol=GS)) and **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) had the toughest sessions among the Dow components.  
+保险股**旅行者** （[TRV](https://research.investors.com/quote.aspx?symbol=TRV)） 跑赢大盘，而 **Amazon.com** （[GS）](https://research.investors.com/quote.aspx?symbol=GS) 和美国**运通** （[AXP](https://research.investors.com/quote.aspx?symbol=AXP)） 在道琼斯指数成分股中表现最艰难。
 
 
-Small caps also took a hard blow, with the Russell 2000 falling 1.9%. Growth stocks did not escape the wrath of the bears either, with the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) plunging 1.7% Friday.
+Small caps also took a hard blow, with the Russell 2000 falling 1.9%. Growth stocks did not escape the wrath of the bears either, with the Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) plunging 1.7% Friday.  
+小盘股也受到沉重打击，罗素 2000 指数下跌 1.9%。成长型股票也未能逃脱空头的愤怒，Innovator IBD 50 ETF （[FFTY）](https://research.investors.com/quote.aspx?symbol=FFTY) 周五暴跌 1.7%。
 
 
-Sharp declines across the indexes have prompted a reduction in Investor's Business Daily's recommended exposure levels to the 20% to 40% range. Given the sharp stock market pullback, being at the lower end of this band makes sense.
+Sharp declines across the indexes have prompted a reduction in Investor's Business Daily's recommended exposure levels to the 20% to 40% range. Given the sharp stock market pullback, being at the lower end of this band makes sense.  
+指数的大幅下跌促使《投资者商业日报》将建议的风险敞口水平下调至 20% 至 40% 的范围内。鉴于股市大幅回调，处于该区间的低端是有道理的。
 
 
-Make sure to reduce in a measured fashion though. Start by selling your weakest performing stocks first and take action on holdings that are triggering sell signals, such as breaches of the 50-day moving average.
+Make sure to reduce in a measured fashion though. Start by selling your weakest performing stocks first and take action on holdings that are triggering sell signals, such as breaches of the 50-day moving average.  
+不过，请确保以有节制的方式减少。首先卖出表现最差的股票，然后对触发卖出信号的持仓采取行动，例如突破 50 天移动平均线。
 
 
-Jobs Report Weak, Inflation Data Next
--------------------------------------
+Jobs Report Weak, Inflation Data Next就业报告疲软，通胀数据 下一个
+----------------------------------------------------
 
 
-Stocks got a spanking after the release of the pivotal jobs report for August. The U.S. economy added 142,000, well below economist views for 161,000, while the unemployment rate of 4.2% matched expectations. There were also big downward revisions to job growth in June and July.
+Stocks got a spanking after the release of the pivotal jobs report for August. The U.S. economy added 142,000, well below economist views for 161,000, while the unemployment rate of 4.2% matched expectations. There were also big downward revisions to job growth in June and July.  
+在 8 月份关键就业报告发布后，股市受到了重创。美国经济增加了 142,000 人，远低于经济学家预期的 161,000 人，而 4.2% 的失业率符合预期。6 月和 7 月的就业增长也出现了大幅下调。
 
 
-An interest-rate cut looms at the Sept. 18 Fed meeting, with the stock market seeing a 69% chance of a 25-basis-point cut and a 31% chance for a 50-basis-point cut. The likelihood of the bigger trim actually declined, [according to the CME FedWatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html). But many expect more cuts heading into the end of 2024.
+An interest-rate cut looms at the Sept. 18 Fed meeting, with the stock market seeing a 69% chance of a 25-basis-point cut and a 31% chance for a 50-basis-point cut. The likelihood of the bigger trim actually declined, [according to the CME FedWatch Tool](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html). But many expect more cuts heading into the end of 2024.  
+美联储将在 9 月 18 日的会议上降息，股市降息 25 个基点的可能性为 69%，降息 50 个基点的可能性为 31%。[根据 CME FedWatch 工具](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/countdown-to-fomc.html)，更大幅度削减的可能性实际上有所下降。但许多人预计，到 2024 年底，将有更多降息。
 
 
-There are a few noteworthy events on the economic calendar in the coming week, with wholesale inventories and consumer credit data both scheduled for Monday. A smattering of inflation data is also due.
+There are a few noteworthy events on the economic calendar in the coming week, with wholesale inventories and consumer credit data both scheduled for Monday. A smattering of inflation data is also due.  
+未来一周经济日历上将发生一些值得注意的事件，批发库存和消费者信贷数据均定于周一公布。一些通胀数据也即将公布。
 
 
-First, Consumer Price Index data for August comes Wednesday, with a year-over-year rise of 2.9% seen. Economists see core CPI turning in a 3.2% annualized lift. Producer Price Index data for the same month drops Thursday, where experts predict a 3.3% rise from the year-ago period.
+First, Consumer Price Index data for August comes Wednesday, with a year-over-year rise of 2.9% seen. Economists see core CPI turning in a 3.2% annualized lift. Producer Price Index data for the same month drops Thursday, where experts predict a 3.3% rise from the year-ago period.  
+首先，8 月份消费者价格指数数据将于周三公布，同比增长 2.9%。经济学家预计核心 CPI 年化增长 3.2%。同月生产者价格指数数据周四下降，专家预测较上年同期上涨 3.3%。
 
 
-And while earnings season has tailed off, there are a few [noteworthy reports in the coming week](https://www.investors.com/research/earnings-preview/adobe-adbe-oracle-orcl-show-strength-earnings/). Big Tech names **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **Adobe** ([ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)) are set to post earnings while meme stock **GameStop** ([GME](https://research.investors.com/quote.aspx?symbol=GME)) and supermarket giant **Kroger** ([KR](https://research.investors.com/quote.aspx?symbol=KR)) are also due.
+And while earnings season has tailed off, there are a few [noteworthy reports in the coming week](https://www.investors.com/research/earnings-preview/adobe-adbe-oracle-orcl-show-strength-earnings/). Big Tech names **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)) and **Adobe** ([ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)) are set to post earnings while meme stock **GameStop** ([GME](https://research.investors.com/quote.aspx?symbol=GME)) and supermarket giant **Kroger** ([KR](https://research.investors.com/quote.aspx?symbol=KR)) are also due.  
+虽然财报季已经结束，但未来一周将发布一些[值得注意的报告](https://www.investors.com/research/earnings-preview/adobe-adbe-oracle-orcl-show-strength-earnings/)。大型科技公司**甲骨文** （[ORCL）](https://research.investors.com/quote.aspx?symbol=ORCL) 和 **Adobe** （[ADBE](https://research.investors.com/quote.aspx?symbol=ADBE)） 将公布财报，而模因股票 **GameStop** （[GME](https://research.investors.com/quote.aspx?symbol=GME)） 和超市巨头**克罗格** （[KR）](https://research.investors.com/quote.aspx?symbol=KR) 也将公布财报。
 
 
 
@@ -67,7 +81,8 @@ And while earnings season has tailed off, there are a few [noteworthy reports in
 ---
 
 
-**[Futures: iPhone 16 Due, Palantir Jumps On S&P 500 News](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-iphone-16-palantir-dell-jump-sp-500-news-tesla-xai/)**
+**[Futures: iPhone 16 Due, Palantir Jumps On S&P 500 News  
+期货：iPhone 16 到期，Palantir 上涨标准普尔 500 指数新闻](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-apple-iphone-16-palantir-dell-jump-sp-500-news-tesla-xai/)**
 
 
 
@@ -75,48 +90,60 @@ And while earnings season has tailed off, there are a few [noteworthy reports in
 ---
 
 
-Broadcom Results Hurt This Stock Market Group
----------------------------------------------
+Broadcom Results Hurt This Stock Market Group博通的业绩伤害了这个股市集团
+-----------------------------------------------------------
 
 
-Each of the [S&P 500 sectors ended Friday lower](https://www.investors.com/category/etfs-and-funds/sectors/). Communications services, technology and consumer discretionary absorbed the hardest blows while real estate and consumer staples suffered the smallest declines.
+Each of the [S&P 500 sectors ended Friday lower](https://www.investors.com/category/etfs-and-funds/sectors/). Communications services, technology and consumer discretionary absorbed the hardest blows while real estate and consumer staples suffered the smallest declines.  
+[标准普尔 500 指数板块周五均收低](https://www.investors.com/category/etfs-and-funds/sectors/)。通信服务、科技和非必需消费品受到的打击最为严重，而房地产和必需消费品的跌幅最小。
 
 
 
-Investors could get a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the relative performance of the 197 IBD industry groups.
+Investors could get a deeper insight into the action on [the stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/) by examining the relative performance of the 197 IBD industry groups.  
+投资者可以通过检查 197 个 IBD 行业组的相对表现来更深入地了解[当今股市](https://www.investors.com/news/stock-market-today-stock-market-news/)的行动。
 
 
-Department stores, office supplies retailers, alcoholic beverage makers and confectionary firms were among the top performers.
+Department stores, office supplies retailers, alcoholic beverage makers and confectionary firms were among the top performers.  
+百货公司、办公用品零售商、酒精饮料制造商和糖果公司是表现最好的公司之一。
 
 
-On the flip side, many more groups closed in negative territory. The worst performers included automakers, computer hardware stocks and fiber-optics plays.
+On the flip side, many more groups closed in negative territory. The worst performers included automakers, computer hardware stocks and fiber-optics plays.  
+另一方面，更多的群组收盘为负值。表现最差的股票包括汽车制造商、计算机硬件股和光纤股。
 
 
-IBD's Fabless-Semiconductor group was also hit hard on the stock market after **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) fell sharply on a disappointing quarterly revenue outlook despite a top- and bottom-line beat.
+IBD's Fabless-Semiconductor group was also hit hard on the stock market after **Broadcom** ([AVGO](https://research.investors.com/quote.aspx?symbol=AVGO)) fell sharply on a disappointing quarterly revenue outlook despite a top- and bottom-line beat.  
+IBD 的 Fabless-Semiconductor 集团在博**通** （[AVGO）](https://research.investors.com/quote.aspx?symbol=AVGO) 尽管营收和利润均超出预期，但季度收入前景令人失望，但股价大幅下跌后，IBD 的 Fabless-Semiconductor 集团也在股市上受到沉重打击。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090624.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090624.pdf)
 
 
-*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.*
+*Please follow Michael Larkin on X, formerly known as Twitter, at [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) for more analysis of growth stocks.  
+请在 X 上关注 Michael Larkin，前身为 Twitter，网址为 [@IBD\_MLarkin](https://twitter.com/IBD_MLarkin) 对成长型股票的更多分析。*
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[These Biotech Stocks Rally Toward Buy Points As Funds Load Up](https://www.investors.com/stock-lists/ibd-50/eli-lilly-stock-lly-biotech-stocks/)
+[These Biotech Stocks Rally Toward Buy Points As Funds Load Up  
+随着基金充实，这些生物技术股向买入点反弹](https://www.investors.com/stock-lists/ibd-50/eli-lilly-stock-lly-biotech-stocks/)
 
 
-[These Are The Five Best Stocks To Buy And Watch Now](https://www.investors.com/research/best-stocks-to-buy-now/)
+[These Are The Five Best Stocks To Buy And Watch Now  
+这些是现在购买和观看的五只最佳股票](https://www.investors.com/research/best-stocks-to-buy-now/)
 
 
-[Stock Market Forecast: AI Investing And Four More Predictions](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
+[Stock Market Forecast: AI Investing And Four More Predictions  
+股市预测：AI 投资和其他四个预测](https://www.investors.com/news/stock-market-forecast-next-decade-ai-investing/)
 
 
-[Join IBD Live Each Morning For Stock Tips Before The Open](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
+[Join IBD Live Each Morning For Stock Tips Before The Open  
+每天早上加入 IBD Live，在开盘前获取股票提示](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=invstcntnartcls%7Ccms%7Cibdlive%7C2020%7C07%7Cibdlive%7Cna%7C%7C727112&src=A00433A)
 
 
-[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
+[This Is The Ultimate Warren Buffett Stock, But Should You Buy It?  
+这是沃伦·巴菲特 （Warren Buffett） 的终极股票，但您应该购买它吗？](https://www.investors.com/research/berkshire-hathaway-stock-buy-now-warren-buffett-stock/)
 
 
 
