--- a/_columns/The_Big_Picture/zh-cn/2024-09-09.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-09.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Blue Chips, Techs Lead Stock Market Rebound But Face These Tests; These Industries Mask Solid Leadership
+  Blue Chips, Techs Lead Stock Market Rebound But Face These Tests; These Industries Mask Solid Leadership	蓝筹股、科技股引领股市反弹，但面临这些考验;这些行业掩盖了坚实的领导力
 date: 2024-09-09 18:01 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,63 +10,30 @@ author: DAVID SAITO-CHUNG
 
 
 
-The stock market was likely viewed as oversold after Friday's closing bell. So, Monday's gains likely surprised few. But while most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) rebounded, tech stocks certainly did not rally alone.
+The stock market was likely viewed as oversold after Friday's closing bell. So, Monday's gains likely surprised few. But while most of the [Magnificent Seven stocks](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) rebounded, tech stocks certainly did not rally alone.  
+周五收盘后，股市可能被视为超卖。因此，周一的上涨可能很少有人感到意外。但是，尽管 [Magnificent Seven 的大部分股票](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/)都出现了反弹，但科技股肯定并非独自反弹。
 
 
 
 
-In fact, Monday's action seemed to underline the ongoing process of money shifting more into industries and sectors that showed weak action vs. megacap techs in 2022 and 2023.
+In fact, Monday's action seemed to underline the ongoing process of money shifting more into industries and sectors that showed weak action vs. megacap techs in 2022 and 2023.  
+事实上，周一的行动似乎突显了资金更多地转移到 2022 年和 2023 年与大型科技股相比表现疲软的行业和领域的持续过程。
 
 
-The Dow Jones Industrial Average on Monday finished 1.2% higher, barely half a step ahead of the Nasdaq composite's rounded-up 1.2% rise. The latter slid nearly 6% last week.
+The Dow Jones Industrial Average on Monday finished 1.2% higher, barely half a step ahead of the Nasdaq composite's rounded-up 1.2% rise. The latter slid nearly 6% last week.  
+道琼斯工业平均指数周一收盘上涨 1.2%，仅比纳斯达克综合指数上涨 1.2% 高出半步。后者上周下跌近 6%。
 
 
-The S&P 500 matched the Nasdaq's rise, up 1.16%. Large caps outpaced gains by the Russell 2000, up less than 0.3%, and the S&P MidCap 400, which moved less than 0.5% higher.
+The S&P 500 matched the Nasdaq's rise, up 1.16%. Large caps outpaced gains by the Russell 2000, up less than 0.3%, and the S&P MidCap 400, which moved less than 0.5% higher.  
+标准普尔 500 指数与纳斯达克指数的涨幅持平，上涨 1.16%。大盘股的涨幅超过了罗素 2000 指数的涨幅，上涨不到 0.3%，标准普尔中型股 400 指数上涨了不到 0.5%。
 
 
-With the exception of the Dow Jones, all of the above indexes are trading below their respective [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). That's not a healthy sign for the stock market today. You want to see the indexes hold above their 50-day lines and lead them higher.
+With the exception of the Dow Jones, all of the above indexes are trading below their respective [50-day moving averages](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). That's not a healthy sign for the stock market today. You want to see the indexes hold above their 50-day lines and lead them higher.  
+除道琼斯指数外，上述所有指数的交易价格均低于各自的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)。对于今天的股市来说，这不是一个健康的迹象。您希望看到指数保持在 50 天线上方并带领它们走高。
 
 
-Volume fell modestly on the Nasdaq vs. Friday and was virtually unchanged on the NYSE.
-
-
-
-
----
-
-
-[**Stock Market Today: This Diabetes Care Firm Breaks Out**](https://www.investors.com/market-trend/stock-market-today/nasdaq-sp500-djia-nvidia-stock-warren-buffett/)
-
-
-
-
----
-
-
-Stock Market Today
-------------------
-
-
-
-As a daily chart of the Nasdaq composite shows, Monday's rebound was a classic inside day. That is, the session's high and low were both within Friday's high and low. So while Monday's gain was decent, it does not at all cover over the ugliness of the index's sharp slide since its failed attempt to recover the 18,000 level amid the August rally.
-
-
-The 50-day moving average of the Nasdaq is also in its third week of a gentle decline. The longer-term 200-day line continues to rise. For chartists, an index trading in between the two moving averages arguably makes the near-term price trend opaque.
-
-
-A look at the [top industry groups on Monday](https://www.investors.com/ibd-data-tables/) finds a few technology groups among the 17 that rose 2% or more. Computer hardware, media software, fabless semiconductors and computer networking stocks rallied well. But so did dairy, steel alloy, drugstore, nonalcoholic beverage, superregional bank and shoe stocks. The [Monday episode of "IBD Live"](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A) offered a detailed look at industry group and sector action over the past week.
-
-
-![](https://www.investors.com/wp-content/uploads/2024/09/MP090924-240x300.jpg)Look again at the points-based Dow industrials, and the top four advancers all came from the finance sector. Among these four, **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) has the best combination of Earnings Per Share and Relative Strength ratings (93 and 90, respectively). AmEx has made only a little progress since its latest breakout. However, the credit and charge card services titan has rolled 43% higher since it surpassed a [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) and its 175.31 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) in December.
-
-
-Chip stocks had been an important part of the stock market strength during the last two months of 2023 and the first half 2024. Today, many are struggling to bottom out after deep declines in July and August.
-
-
-Van Eck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) represents the latest fortunes of many in the chip sector. The ETF rallied 2.3%, much higher than the indexes' rebound on Monday. However, the fund had tumbled 12% over the prior four sessions. The ETF failed to climb back above its own 50-day moving average in the middle of August, a negative sign. Today, it's still trying to bottom out. VanEck Semiconductor's current test of the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/) is critical.
-
-
-That said, despite the big summer slide, VanEck Semiconductor still boasts a stout 25.7% gain year to date, vs. an 8.3% advance by the Dow Jones industrials.
+Volume fell modestly on the Nasdaq vs. Friday and was virtually unchanged on the NYSE.  
+与周五相比，纳斯达克的成交量小幅下降，纽约证券交易所的成交量几乎没有变化。
 
 
 
@@ -74,7 +41,8 @@ That said, despite the big summer slide, VanEck Semiconductor still boasts a sto
 ---
 
 
-[**Costco Leads In This Growth Screen**](https://www.investors.com/research/costco-stock-flashes-bullish-chart-pattern/)
+[**Stock Market Today: This Diabetes Care Firm Breaks Out  
+今日股市：这家糖尿病护理公司爆发**](https://www.investors.com/market-trend/stock-market-today/nasdaq-sp500-djia-nvidia-stock-warren-buffett/)
 
 
 
@@ -82,30 +50,37 @@ That said, despite the big summer slide, VanEck Semiconductor still boasts a sto
 ---
 
 
-Are These Stocks And Industry Groups The New Leaders?
------------------------------------------------------
-
-
-But nontech sectors are catching up with techs in the stock market. The Dow Jones utility average, a 1.1% gainer on Monday, extended its year-to-date advance to 17.9%. In 2023, the Dow utilities fell 8.9%, excluding dividends.
-
-
-**American Electric Power** ([AEP](https://research.investors.com/quote.aspx?symbol=AEP)) rose 1.6% and served as a showcase in one of [IBD's daily newsletters](https://www.investors.com/).
-
-
-The restaurant group has seen its year-to-date gain shrink to under 15% in recent days. Hence, headed into Monday's action, the group (symbol G5812 in [MarketSurge](https://marketsurge.investors.com/?src=A012BF)) ranked a lowly [144th among 197 industries for six-month relative performance](https://www.investors.com/data-tables/industry-group-rankings-sep-06-2024/). However, the restaurant group also disguises the fact that **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)) represents the group as a [true stock market leader](https://leaderboard.investors.com/#/leaders/watchlist) and among [newer issues in the stock market](https://research.investors.com/stock-lists/ipo-leaders/).
+Stock Market Today 今日股市
+-----------------------
 
 
 
-Cava has gained 45% since it burst above both the 50-day moving average and 10-week line on Aug. 9, delivering an [aggressive follow-on entry point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/). Ten sessions later, shares soared 19% on a solid Q2 report that saw earnings nearly treble to 17 cents a share, up 183% vs. a year earlier. Sales ramped up 35% to $234 million, the second-highest amount of quarterly sales in company history.
+As a daily chart of the Nasdaq composite shows, Monday's rebound was a classic inside day. That is, the session's high and low were both within Friday's high and low. So while Monday's gain was decent, it does not at all cover over the ugliness of the index's sharp slide since its failed attempt to recover the 18,000 level amid the August rally.  
+正如纳斯达克综合指数的日线图所示，周一的反弹是典型的内盘。也就是说，该交易日的高点和低点都在周五的高点和低点之间。因此，尽管周一的涨幅还算不错，但它根本无法掩盖该指数自 8 月反弹中试图收复 18,000 点水平失败以来急剧下滑的丑陋之处。
 
 
-Watch to see if the stock makes a test of the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). For active traders, a bullish bounce off the 21-day line could provide a secondary entry.
+The 50-day moving average of the Nasdaq is also in its third week of a gentle decline. The longer-term 200-day line continues to rise. For chartists, an index trading in between the two moving averages arguably makes the near-term price trend opaque.  
+纳斯达克的 50 天移动平均线也已进入小幅下跌的第三周。长期 200 日线继续上升。对于图表专家来说，在两条移动平均线之间交易的指数可以说使近期价格趋势变得不透明。
 
 
-As a weekly chart shows, Cava has nearly tripled since it crossed a nearly six-month trendline near 44 during the week ended Jan. 19.
+A look at the [top industry groups on Monday](https://www.investors.com/ibd-data-tables/) finds a few technology groups among the 17 that rose 2% or more. Computer hardware, media software, fabless semiconductors and computer networking stocks rallied well. But so did dairy, steel alloy, drugstore, nonalcoholic beverage, superregional bank and shoe stocks. The [Monday episode of "IBD Live"](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A) offered a detailed look at industry group and sector action over the past week.  
+周一，我们来看一下[排名靠前的行业组态](https://www.investors.com/ibd-data-tables/)，就会发现 17 个行业组中有一些科技组上涨了 2% 或更多。计算机硬件、媒体软件、无晶圆厂半导体和计算机网络股票上涨良好。但乳制品、钢合金、药店、非酒精饮料、超区域银行和鞋类股票也是如此。[周一的“IBD Live”节目](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)详细介绍了过去一周的行业团体和行业行动。
 
 
-Looking more broadly at retail, Placer.ai notes in its latest August report on back-to-school spending among the nation's top indoor malls, open-air shopping centers (OASCs) and outlet malls that foot traffic stepped higher. At indoor malls, foot traffic grew a healthy 7.3% vs. August 2023. Outlet malls saw visits rise 6.1%, while OASCs experienced a 5.8% increase. Strong foot traffic could help boost sales at adjacent eateries.
+![](https://www.investors.com/wp-content/uploads/2024/09/MP090924-240x300.jpg)Look again at the points-based Dow industrials, and the top four advancers all came from the finance sector. Among these four, **American Express** ([AXP](https://research.investors.com/quote.aspx?symbol=AXP)) has the best combination of Earnings Per Share and Relative Strength ratings (93 and 90, respectively). AmEx has made only a little progress since its latest breakout. However, the credit and charge card services titan has rolled 43% higher since it surpassed a [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/) and its 175.31 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/) in December.  
+再看看以点数为基础的道琼斯工业指数，前四名的涨幅都来自金融板块。在这四项中，**美国运通** （[AXP）](https://research.investors.com/quote.aspx?symbol=AXP) 的每股收益和相对强弱评级的最佳组合（分别为 93 和 90）。AmEx 自最近一次突破以来，只取得了一点进展。然而，信用卡和签账卡服务巨头自 12 月超过[带手柄](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)杯和 175.31 [买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)以来，已经上涨了 43%。
+
+
+Chip stocks had been an important part of the stock market strength during the last two months of 2023 and the first half 2024. Today, many are struggling to bottom out after deep declines in July and August.  
+在 2023 年的最后两个月和 2024 年上半年，芯片股一直是股市实力的重要组成部分。如今，许多公司在 7 月和 8 月的大幅下跌后正在努力触底反弹。
+
+
+Van Eck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) represents the latest fortunes of many in the chip sector. The ETF rallied 2.3%, much higher than the indexes' rebound on Monday. However, the fund had tumbled 12% over the prior four sessions. The ETF failed to climb back above its own 50-day moving average in the middle of August, a negative sign. Today, it's still trying to bottom out. VanEck Semiconductor's current test of the [200-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/) is critical.  
+Van Eck Semiconductor （[SMH）](https://research.investors.com/quote.aspx?symbol=SMH) 代表了芯片领域许多人的最新财富。该 ETF 上涨 2.3%，远高于周一指数的反弹。然而，该基金在前四个交易日下跌了 12%。该 ETF 未能在 8 月中旬回升至其自己的 50 天移动平均线上方，这是一个负面信号。今天，它仍在努力触底反弹。VanEck Semiconductor 目前对 [200 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-a-winning-stock-spot-a-breach-of-200-day-line/)的测试至关重要。
+
+
+That said, despite the big summer slide, VanEck Semiconductor still boasts a stout 25.7% gain year to date, vs. an 8.3% advance by the Dow Jones industrials.  
+也就是说，尽管夏季大幅下滑，但 VanEck Semiconductor 今年迄今仍上涨了 25.7%，而道琼斯工业股上涨了 8.3%。
 
 
 
@@ -113,7 +88,8 @@ Looking more broadly at retail, Placer.ai notes in its latest August report on b
 ---
 
 
-[**Options Strategies: Buy Robinhood Stock At A Discount; Here's How**](https://www.investors.com/research/options/robinhood-stock-today-why-this-cash-secured-put-could-deliver-a-53-annualized-gain/)
+[**Costco Leads In This Growth Screen  
+Costco 在这个增长屏幕中处于领先地位**](https://www.investors.com/research/costco-stock-flashes-bullish-chart-pattern/)
 
 
 
@@ -121,32 +97,86 @@ Looking more broadly at retail, Placer.ai notes in its latest August report on b
 ---
 
 
-New Issues Watch
-----------------
+Are These Stocks And Industry Groups The New Leaders?这些股票和行业组是新的领导者吗？
+---------------------------------------------------------------------
 
 
-Among other new issues, keep an eye on **Lineage** ([LINE](https://research.investors.com/quote.aspx?symbol=LINE)). The expert in cold storage is trading at the low end of its trading range, but remains above its IPO pricing at $78 a share. Also, the new issue is part of a property REIT group that ranks much more highly than restaurants and many technology industries. It stands at No. 33 among 197 industry groups, according to MarketSurge.
+But nontech sectors are catching up with techs in the stock market. The Dow Jones utility average, a 1.1% gainer on Monday, extended its year-to-date advance to 17.9%. In 2023, the Dow utilities fell 8.9%, excluding dividends.  
+但非科技行业正在股市中赶上科技行业。道琼斯公用事业平均指数周一上涨 1.1%，延续年初至今的涨幅至 17.9%。2023 年，道琼斯公用事业指数下跌 8.9%，不包括股息。
 
 
-In the same group, **American Healthcare** ([AHR](https://research.investors.com/quote.aspx?symbol=AHR)) has been on a big spurt since it rallied off its 10-week line at 14.52 in early July. Shares have gotten way extended. The owner and operator of an array of health care facilities shows an annualized dividend yield of 4.5%. The company went public in February at $12 a share.
+**American Electric Power** ([AEP](https://research.investors.com/quote.aspx?symbol=AEP)) rose 1.6% and served as a showcase in one of [IBD's daily newsletters](https://www.investors.com/).  
+**美国电力** （[AEP](https://research.investors.com/quote.aspx?symbol=AEP)） 上涨 1.6%，并在 [IBD 的一份每日时事通讯](https://www.investors.com/)中展示。
 
 
-Outside the stock market, the yield on the 10-year benchmark U.S. government note edged down 1 basis point to 3.69%.
+The restaurant group has seen its year-to-date gain shrink to under 15% in recent days. Hence, headed into Monday's action, the group (symbol G5812 in [MarketSurge](https://marketsurge.investors.com/?src=A012BF)) ranked a lowly [144th among 197 industries for six-month relative performance](https://www.investors.com/data-tables/industry-group-rankings-sep-06-2024/). However, the restaurant group also disguises the fact that **Cava** ([CAVA](https://research.investors.com/quote.aspx?symbol=CAVA)) represents the group as a [true stock market leader](https://leaderboard.investors.com/#/leaders/watchlist) and among [newer issues in the stock market](https://research.investors.com/stock-lists/ipo-leaders/).  
+最近几天，该餐饮集团年初至今的涨幅已缩小至 15% 以下。因此，在周一的行动中，该集团（[MarketSurge](https://marketsurge.investors.com/?src=A012BF) 代码 G5812）[的六个月相对表现在 197 个行业中排名第 144 位](https://www.investors.com/data-tables/industry-group-rankings-sep-06-2024/)。然而，该餐饮集团也掩盖了 **Cava** （[CAVA）](https://research.investors.com/quote.aspx?symbol=CAVA) 代表该集团作为[真正的股票市场领导者](https://leaderboard.investors.com/#/leaders/watchlist)和[股票市场新问题](https://research.investors.com/stock-lists/ipo-leaders/)的事实。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090924.pdf)
+
+Cava has gained 45% since it burst above both the 50-day moving average and 10-week line on Aug. 9, delivering an [aggressive follow-on entry point](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/). Ten sessions later, shares soared 19% on a solid Q2 report that saw earnings nearly treble to 17 cents a share, up 183% vs. a year earlier. Sales ramped up 35% to $234 million, the second-highest amount of quarterly sales in company history.  
+自 8 月 9 日突破 50 天移动平均线和 10 周线以来，卡瓦酒已上涨 45%，提供了一个[激进的后续切入点](https://www.investors.com/how-to-invest/investors-corner/how-to-buy-stocks-why-the-10-week-moving-average-offers-new-entry-points/)。十个交易日后，股价飙升 19%，第二季度报告表现稳健，收益几乎翻了三倍，达到每股 17 美分，与去年同期相比增长了 183%。销售额增长 35% 至 2.34 亿美元，创下公司历史上第二高的季度销售额。
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+Watch to see if the stock makes a test of the [21-day exponential moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/). For active traders, a bullish bounce off the 21-day line could provide a secondary entry.  
+观察该股是否测试 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。对于活跃的交易者来说，从 21 天线看涨反弹可能会提供第二个入场点。
 
 
-**YOU MIGHT ALSO LIKE:**
+As a weekly chart shows, Cava has nearly tripled since it crossed a nearly six-month trendline near 44 during the week ended Jan. 19.  
+正如周线图所示，自从在截至 1 月 19 日的一周内突破近 44 附近的近六个月趋势线以来，卡瓦酒已经上涨了近两倍。
 
 
-[Why The 21-Day Exponential Moving Average Matters](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+Looking more broadly at retail, Placer.ai notes in its latest August report on back-to-school spending among the nation's top indoor malls, open-air shopping centers (OASCs) and outlet malls that foot traffic stepped higher. At indoor malls, foot traffic grew a healthy 7.3% vs. August 2023. Outlet malls saw visits rise 6.1%, while OASCs experienced a 5.8% increase. Strong foot traffic could help boost sales at adjacent eateries.  
+更广泛地审视零售业，Placer.ai 在其最新的 8 月份报告中指出，美国顶级室内购物中心、露天购物中心 （OASC） 和奥特莱斯购物中心的返校支出增加了客流量。与 2023 年 8 月相比，室内购物中心的客流量增长了 7.3%。奥特莱斯购物中心的访问量增长了 6.1%，而 OASC 的访问量增长了 5.8%。强劲的客流量有助于促进邻近餐馆的销售。
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+
+
+---
+
+
+[**Options Strategies: Buy Robinhood Stock At A Discount; Here's How  
+期权策略：以折扣价购买 Robinhood 股票;方法如下**](https://www.investors.com/research/options/robinhood-stock-today-why-this-cash-secured-put-could-deliver-a-53-annualized-gain/)
+
+
+
+
+---
+
+
+New Issues Watch 新股发行观察
+-----------------------
+
+
+Among other new issues, keep an eye on **Lineage** ([LINE](https://research.investors.com/quote.aspx?symbol=LINE)). The expert in cold storage is trading at the low end of its trading range, but remains above its IPO pricing at $78 a share. Also, the new issue is part of a property REIT group that ranks much more highly than restaurants and many technology industries. It stands at No. 33 among 197 industry groups, according to MarketSurge.  
+在其他新问题中，请密切关注 **Lineage** （[LINE）。](https://research.investors.com/quote.aspx?symbol=LINE)这家冷藏专家的交易价格处于其交易区间的低端，但仍高于其每股 78 美元的 IPO 定价。此外，新发行的股票是房地产投资信托基金集团的一部分，该集团的排名远高于餐馆和许多科技行业。根据 MarketSurge 的数据，它在 197 个行业组中排名第 33 位。
+
+
+In the same group, **American Healthcare** ([AHR](https://research.investors.com/quote.aspx?symbol=AHR)) has been on a big spurt since it rallied off its 10-week line at 14.52 in early July. Shares have gotten way extended. The owner and operator of an array of health care facilities shows an annualized dividend yield of 4.5%. The company went public in February at $12 a share.  
+在同一组中，**American Healthcare** （[AHR）](https://research.investors.com/quote.aspx?symbol=AHR) 自 7 月初从 10 周线 14.52 反弹以来一直处于高速增长状态。股票已经扩大了。一系列医疗保健设施的所有者和运营商的年化股息收益率为 4.5%。该公司于 2 月以每股 12 美元的价格上市。
+
+
+Outside the stock market, the yield on the 10-year benchmark U.S. government note edged down 1 basis point to 3.69%.  
+在股市之外，10 年期基准美国政府债券收益率小幅下跌 1 个基点至 3.69%。
+
+
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_090924.pdf)
+
+
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+
+
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+
+
+[Why The 21-Day Exponential Moving Average Matters  
+为什么 21 天指数移动平均线很重要](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+
+
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
 
 
 [Here's The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
