--- a/_columns/The_Big_Picture/zh-cn/2024-09-16.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-16.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones, Midcaps Lead Stock Market Gains; What This Index's New High Means For Traders
+  Dow Jones, Midcaps Lead Stock Market Gains; What This Index's New High Means For Traders	道琼斯、中型股领涨股市;该指数的新高对交易者意味着什么
 date: 2024-09-16 18:20 -0700
 author: DAVID SAITO-CHUNG
 ---
@@ -10,98 +10,82 @@ author: DAVID SAITO-CHUNG
 
 
 
-A somewhat broad stock market rally on Monday helped fortify the argument that investors should stay invested ahead of a pivotal meeting on U.S. interest rates.
+A somewhat broad stock market rally on Monday helped fortify the argument that investors should stay invested ahead of a pivotal meeting on U.S. interest rates.  
+周一股市略有波动，有助于强化投资者应该在美国利率关键会议之前保持投资的论点。
 
 
 
 
-The S&P 500 strutted its way to a sixth straight advance. Yet its 0.1% gain on Monday was trifling compared with advances of nearly 0.6% by the Dow Jones Industrial Average and the SPDR S&P Mid Cap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) exchange traded fund.
+The S&P 500 strutted its way to a sixth straight advance. Yet its 0.1% gain on Monday was trifling compared with advances of nearly 0.6% by the Dow Jones Industrial Average and the SPDR S&P Mid Cap 400 ([MDY](https://research.investors.com/quote.aspx?symbol=MDY)) exchange traded fund.  
+标准普尔 500 指数连续第六次上涨。然而，与道琼斯工业平均指数和 SPDR S&P MID CAP 400 （[MDY](https://research.investors.com/quote.aspx?symbol=MDY)） 交易所交易基金近 0.6% 的涨幅相比，其周一 0.1% 的涨幅微不足道。
 
 
-The Russell 2000 rose 0.3% for its fourth up day in a row.
+The Russell 2000 rose 0.3% for its fourth up day in a row.  
+罗素 2000 指数连续第四天上涨 0.3%。
 
 
-Compared with the S&P 500, however, the Nasdaq composite felt a bigger thorn in its side.
+Compared with the S&P 500, however, the Nasdaq composite felt a bigger thorn in its side.  
+然而，与标准普尔 500 指数相比，纳斯达克综合指数感觉有更大的刺。
 
 
-Sharp declines in the semiconductor field dragged on the market-cap-weighted Nasdaq, pushing it down 0.5%. That prevented the Nasdaq from joining the S&P 500 in a sixth up day in a row.
+Sharp declines in the semiconductor field dragged on the market-cap-weighted Nasdaq, pushing it down 0.5%. That prevented the Nasdaq from joining the S&P 500 in a sixth up day in a row.  
+半导体领域的大幅下跌拖累了市值加权的纳斯达克指数，使其下跌 0.5%。这阻止了纳斯达克指数连续第六天上涨加入标准普尔 500 指数。
 
 
-On the bright side, the Nasdaq respected its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) and finished well in the upper half of its intraday trading range.
+On the bright side, the Nasdaq respected its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/) and finished well in the upper half of its intraday trading range.  
+从好的方面来看，纳斯达克指数守住了其 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)，并在盘中交易区间的上半部分收盘。
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP091624-240x300.jpg)
 
 
-A good stock market reveals both key indexes and leading stocks spending their days and weeks above their 50-day lines, not below.
+A good stock market reveals both key indexes and leading stocks spending their days and weeks above their 50-day lines, not below.  
+一个好的股市会发现，关键指数和领先股票的天数和周数都在 50 天线上方，而不是低于 50 天线下方。
 
 
-Nasdaq volume fell less than 3% to 4.68 billion shares, according to Dow Jones Data. So, the Nasdaq composite avoided a fresh distribution day.
+Nasdaq volume fell less than 3% to 4.68 billion shares, according to Dow Jones Data. So, the Nasdaq composite avoided a fresh distribution day.  
+根据道琼斯数据，纳斯达克交易量下降不到 3% 至 46.8 亿股。因此，纳斯达克综合指数避免了新的分配日。
 
 
-On the NYSE, turnover dipped less than 2% lower vs. Friday to 3.44 billion.
+On the NYSE, turnover dipped less than 2% lower vs. Friday to 3.44 billion.  
+在纽约证券交易所，成交量较上周五下降不到 2% 至 34.4 亿。
 
 
-The iShares Semiconductor ETF ([SOXX](https://research.investors.com/quote.aspx?symbol=SOXX)) lost 1.3%. It's trading in an increasingly narrow space between the 50- and 200-day moving averages. VanEck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) matched that drop.
+The iShares Semiconductor ETF ([SOXX](https://research.investors.com/quote.aspx?symbol=SOXX)) lost 1.3%. It's trading in an increasingly narrow space between the 50- and 200-day moving averages. VanEck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) matched that drop.  
+iShares Semiconductor ETF （[SOXX）](https://research.investors.com/quote.aspx?symbol=SOXX) 下跌 1.3%。它在 50 天和 200 天移动平均线之间的交易空间越来越窄。VanEck Semiconductor （[SMH）](https://research.investors.com/quote.aspx?symbol=SMH) 的跌幅也达到了这一水平。
 
 
-Meanwhile, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund also outperformed the Nasdaq with a 0.7% gain to 176.28. The fund also underscored the decent strength of the current stock market by posting a new high.
+Meanwhile, the Invesco S&P 500 Equal Weight ([RSP](https://research.investors.com/quote.aspx?symbol=RSP)) exchange traded fund also outperformed the Nasdaq with a 0.7% gain to 176.28. The fund also underscored the decent strength of the current stock market by posting a new high.  
+与此同时，景顺标准普尔 500 等权重 （[RSP](https://research.investors.com/quote.aspx?symbol=RSP)） 交易所交易基金的表现也优于纳斯达克指数，上涨 0.7% 至 176.28。该基金还创下新高，突显了当前股市的不错实力。
 
 
-When an equal-weighted version of the S&P 500 does well, take that as a sign that institutions are putting more money to work outside of technology, which for the past few years has done the heavy lifting for large-cap indexes.
+When an equal-weighted version of the S&P 500 does well, take that as a sign that institutions are putting more money to work outside of technology, which for the past few years has done the heavy lifting for large-cap indexes.  
+当标准普尔 500 指数的等权重版本表现良好时，请将其视为机构将更多资金投入到技术之外的工作的迹象，在过去几年中，技术为大盘股指数承担了繁重的工作。
 
 
-On Monday, more than 40 of [IBD's 197 industry groups](https://www.investors.com/ibd-data-tables/) advanced 1% or more, early data showed. Utility, bank, travel, energy, insurance and retail dominated this list. Among the groups related to tech, only tech services, internet networking and design software made the cut.
+On Monday, more than 40 of [IBD's 197 industry groups](https://www.investors.com/ibd-data-tables/) advanced 1% or more, early data showed. Utility, bank, travel, energy, insurance and retail dominated this list. Among the groups related to tech, only tech services, internet networking and design software made the cut.  
+早盘数据显示，周一，[IBD 的 197 个行业组中](https://www.investors.com/ibd-data-tables/)有 40 多个上涨 1% 或更多。公用事业、银行、旅游、能源、保险和零售在这份名单中占据主导地位。在与技术相关的组中，只有技术服务、互联网网络和设计软件入围。
 
 
-A Meandering Nasdaq?
---------------------
+A Meandering Nasdaq? 蜿蜒曲折的纳斯达克？
+-------------------------------
 
 
-Going back to the Nasdaq, a closer look at its daily chart reveals the composite index trading both above and below its own 50-day moving average for weeks at a time since the July peak.
-
-
-
-In other words, the trend in price has actually been weaker compared with the smooth bullish runs seen from mid-April through the beginning of June.
-
-
-Stock market action over the past few months has likely taken into consideration the growing concern that the Federal Reserve has perhaps kept the cost of money at an elevated level for too long. Some talking heads have repeatedly said the Fed — which in 2021 was too late in beginning to remove its hugely accommodative monetary policy to support the Covid-19-battered economy — is now behind the curve in loosening its tight policy to avoid a recession.
-
-
-
-
----
-
-
-[**Stocks On The Move: Look For Leaders Here**](https://research.investors.com/stocksonthemove.aspx)
+Going back to the Nasdaq, a closer look at its daily chart reveals the composite index trading both above and below its own 50-day moving average for weeks at a time since the July peak.  
+回到纳斯达克，仔细观察其日线图会发现，自 7 月见顶以来，综合指数连续数周在自己的 50 天移动平均线上方和下方交易。
 
 
 
-
----
-
-
-Here Comes The Fed Meeting
---------------------------
+In other words, the trend in price has actually been weaker compared with the smooth bullish runs seen from mid-April through the beginning of June.  
+换句话说，与 4 月中旬至 6 月初的平稳看涨相比，价格趋势实际上更弱。
 
 
-This question will burn more brightly each day in the stock market until Wednesday afternoon, when the two-day Federal Reserve meeting ends and Chair Jerome Powell announces what the bank will do about the fed funds rate, which has been in the [5.25%-5.50% range](https://www.federalreserve.gov/monetarypolicy/openmarket.htm) for more than a year.
-
-
-At the stock market close, the CME FedWatch survey of bond traders showed a 65% probability that the Fed will cut the fed funds rate by half a percentage point to a 4.75%-5% range on Wednesday. Last week, the probability stood at 30%. CME also highlights only a 30% chance that the U.S. central bank will trim short-term rates by a quarter point.
-
-
-"Ultimately, though, the 25 bps (basis points) vs 50 bps decision is less important than the fact Wednesday will mark the beginning of the cutting cycle, with the Fed likely signaling that a string of rate cuts is in the pipeline," Seema Shah, chief global strategist at Principal Asset Management, told IBD via email.
-
-
-"Although the U.S. labor market is clearly slowing, the continued strength of household and corporate balance sheets suggests that there is nothing broken about the U.S. economy that a sequence of Fed cuts cannot fix," Shah added. "Risks around the FOMC forecast are elevated, but recession risk remains low."
-
-
-Meanwhile, the [homepage of MarketSurge](https://marketsurge.investors.com/?src=A012BF) showed 242 stocks rising in above-average volume while only 105 fell in fierce turnover. Plus, a screen showed eight stocks breaking out on Monday and 17 near a buy point.
+Stock market action over the past few months has likely taken into consideration the growing concern that the Federal Reserve has perhaps kept the cost of money at an elevated level for too long. Some talking heads have repeatedly said the Fed — which in 2021 was too late in beginning to remove its hugely accommodative monetary policy to support the Covid-19-battered economy — is now behind the curve in loosening its tight policy to avoid a recession.  
+过去几个月的股市走势可能考虑到人们越来越担心美联储可能将货币成本保持在高位太久了。一些谈话领袖一再表示，美联储在 2021 年开始取消其大幅宽松的货币政策以支持受 Covid-19 重创的经济为时已晚，现在在放松紧缩政策以避免经济衰退方面落后了。
 
 
 
@@ -109,7 +93,8 @@ Meanwhile, the [homepage of MarketSurge](https://marketsurge.investors.com/?src=
 ---
 
 
-[**Econoday Calendar: Watch For Retail Sales On Tuesday**](https://research.investors.com/economic-calendar/)
+[**Stocks On The Move: Look For Leaders Here  
+股票移动：在这里寻找领导者**](https://research.investors.com/stocksonthemove.aspx)
 
 
 
@@ -117,42 +102,90 @@ Meanwhile, the [homepage of MarketSurge](https://marketsurge.investors.com/?src=
 ---
 
 
-Going Beneath The Stock Market Hood
------------------------------------
+Here Comes The Fed Meeting美联储会议来了
+---------------------------------
 
 
-Despite the poor showing by the Nasdaq, not all techs did badly. Some leading names in the enterprise software industry group flourished.
+This question will burn more brightly each day in the stock market until Wednesday afternoon, when the two-day Federal Reserve meeting ends and Chair Jerome Powell announces what the bank will do about the fed funds rate, which has been in the [5.25%-5.50% range](https://www.federalreserve.gov/monetarypolicy/openmarket.htm) for more than a year.  
+这个问题将在股市上每天燃烧得更加明亮，直到周三下午，为期两天的美联储会议结束，主席杰罗姆鲍威尔宣布该银行将如何处理联邦基金利率，该利率已经在 [5.25%-5.50%](https://www.federalreserve.gov/monetarypolicy/openmarket.htm) 的范围内一年多了。
+
+
+At the stock market close, the CME FedWatch survey of bond traders showed a 65% probability that the Fed will cut the fed funds rate by half a percentage point to a 4.75%-5% range on Wednesday. Last week, the probability stood at 30%. CME also highlights only a 30% chance that the U.S. central bank will trim short-term rates by a quarter point.  
+股市收盘时，CME FedWatch 对债券交易员的调查显示，美联储周三将联邦基金利率下调半个百分点至 4.75%-5% 区间的可能性为 65%。上周，概率为 30%。CME 还强调，美国央行将短期利率下调四分之一个百分点的可能性仅为 30%。
+
+
+"Ultimately, though, the 25 bps (basis points) vs 50 bps decision is less important than the fact Wednesday will mark the beginning of the cutting cycle, with the Fed likely signaling that a string of rate cuts is in the pipeline," Seema Shah, chief global strategist at Principal Asset Management, told IBD via email.  
+“不过，归根结底，25 个基点与 50 个基点的决定不如周三将标志着降息周期开始的事实重要，美联储可能暗示一系列降息正在进行中，”Principal Asset Management 首席全球策略师 Seema Shah 通过电子邮件告诉 IBD。
+
+
+"Although the U.S. labor market is clearly slowing, the continued strength of household and corporate balance sheets suggests that there is nothing broken about the U.S. economy that a sequence of Fed cuts cannot fix," Shah added. "Risks around the FOMC forecast are elevated, but recession risk remains low."  
+“尽管美国劳动力市场明显放缓，但家庭和企业资产负债表的持续强劲表明，美国经济没有什么是美联储一系列降息无法解决的，”Shah 补充道。“围绕 FOMC 预测的风险很高，但衰退风险仍然很低。”
+
+
+Meanwhile, the [homepage of MarketSurge](https://marketsurge.investors.com/?src=A012BF) showed 242 stocks rising in above-average volume while only 105 fell in fierce turnover. Plus, a screen showed eight stocks breaking out on Monday and 17 near a buy point.  
+与此同时，[MarketSurge 的主页](https://marketsurge.investors.com/?src=A012BF)显示，242 只股票的成交量高于平均水平，而只有 105 只股票的成交量大幅下跌。此外，屏幕显示周一有 8 只股票爆发，17 只股票接近买入点。
 
 
 
-[Leaderboard member](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)) rose 1.5% and marked a new high of 897.99, good for a fifth gain in six sessions. Earnings at the leader in digital transformation for large organizations and businesses have grown 49%, 36%, 44% and 32% vs. year-ago levels in the past four quarters. The megacap is getting extended from a new [base-on-base pattern](https://www.investors.com/how-to-invest/investors-corner/charts-101-how-the-base-on-base-etches-superb-stock-gains/) showing an 850.33 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).
+
+---
 
 
-ServiceNow is up 26% year to date. The Santa Clara, Calif., firm has also rallied 165% from its 2022 bear-market low. The S&P 500 has advanced 61% from its 2022 low of 3,491.
+[**Econoday Calendar: Watch For Retail Sales On Tuesday  
+Econoday 日历：关注周二的零售销售**](https://research.investors.com/economic-calendar/)
 
 
-Other companies to watch in the enterprise software space? **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)), **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)), **Veeva Systems** ([VEEV](https://research.investors.com/quote.aspx?symbol=VEEV)) and **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)).
 
 
-Oracle is acting bullishly after an earnings gap-up last week. Wall Street sees Oracle's earnings rising 13% in fiscal 2025 (ending in May that year) to $6.28 a share, then adding 14% in fiscal 2026.
+---
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091624.pdf)
+Going Beneath The Stock Market Hood揭秘股市
+---------------------------------------
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+Despite the poor showing by the Nasdaq, not all techs did badly. Some leading names in the enterprise software industry group flourished.  
+尽管纳斯达克指数表现不佳，但并非所有科技股都表现不佳。企业软件行业组中的一些领军企业蓬勃发展。
 
 
-**YOU MIGHT ALSO LIKE:**
+
+[Leaderboard member](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint) **ServiceNow** ([NOW](https://research.investors.com/quote.aspx?symbol=NOW)) rose 1.5% and marked a new high of 897.99, good for a fifth gain in six sessions. Earnings at the leader in digital transformation for large organizations and businesses have grown 49%, 36%, 44% and 32% vs. year-ago levels in the past four quarters. The megacap is getting extended from a new [base-on-base pattern](https://www.investors.com/how-to-invest/investors-corner/charts-101-how-the-base-on-base-etches-superb-stock-gains/) showing an 850.33 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
+[排行榜成员](https://leaderboard.investors.com/#/leaders/leadersnearabuypoint)**ServiceNow** （[NOW](https://research.investors.com/quote.aspx?symbol=NOW)） 上涨 1.5% 并创下 897.99 的新高，这是六个交易日内的第五次上涨。在过去四个季度中，大型组织和企业数字化转型领导者的收益与去年同期相比增长了 49%、36%、44% 和 32%。大型股从显示 850.33 [买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)的新基地[模式](https://www.investors.com/how-to-invest/investors-corner/charts-101-how-the-base-on-base-etches-superb-stock-gains/)扩展。
 
 
-[Want To Learn How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
+ServiceNow is up 26% year to date. The Santa Clara, Calif., firm has also rallied 165% from its 2022 bear-market low. The S&P 500 has advanced 61% from its 2022 low of 3,491.  
+ServiceNow 今年迄今增长了 26%。这家位于加利福尼亚州圣克拉拉的公司也从 2022 年的熊市低点上涨了 165%。标准普尔 500 指数从 2022 年的低点 3,491 点上涨了 61%。
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+Other companies to watch in the enterprise software space? **Monday.com** ([MNDY](https://research.investors.com/quote.aspx?symbol=MNDY)), **Oracle** ([ORCL](https://research.investors.com/quote.aspx?symbol=ORCL)), **Veeva Systems** ([VEEV](https://research.investors.com/quote.aspx?symbol=VEEV)) and **Workday** ([WDAY](https://research.investors.com/quote.aspx?symbol=WDAY)).  
+企业软件领域值得关注的其他公司？**Monday.com** （[MNDY）、](https://research.investors.com/quote.aspx?symbol=MNDY)**Oracle** （[ORCL）、](https://research.investors.com/quote.aspx?symbol=ORCL)**Veeva Systems** （[VEEV）](https://research.investors.com/quote.aspx?symbol=VEEV) 和 **Workday** （[WDAY）。](https://research.investors.com/quote.aspx?symbol=WDAY)
 
 
-[Stock Market Outlook For The Next 6 Months](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
+Oracle is acting bullishly after an earnings gap-up last week. Wall Street sees Oracle's earnings rising 13% in fiscal 2025 (ending in May that year) to $6.28 a share, then adding 14% in fiscal 2026.  
+甲骨文在上周财报跳空上涨后表现乐观。华尔街预计，甲骨文在 2025 财年（截至当年 5 月）的收益将增长 13%，达到每股 6.28 美元，然后在 2026 财年增长 14%。
+
+
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091624.pdf)
+
+
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+
+
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
+
+
+[Want To Learn How To Pick Great Stocks? Read Investor's Corner  
+想学习如何挑选优质股票吗？阅读投资者专区](https://www.investors.com/category/how-to-invest/investors-corner/)
+
+
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
+
+
+[Stock Market Outlook For The Next 6 Months  
+未来 6 个月的股市展望](https://www.investors.com/news/stock-market-forecast-next-6-months-magnificent-seven-tech-sp500-nasdaq/)
 
 
 
