--- a/_columns/The_Big_Picture/zh-cn/2024-09-17.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-09-17.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Pares Gains Ahead Of Major Fed Rate Decision; 3 Biotech Stocks To Watch
+  Stock Market Pares Gains Ahead Of Major Fed Rate Decision; 3 Biotech Stocks To Watch	股市在美联储做出重大利率决定之前回吐涨幅;值得关注的 3 只生物科技股
 date: 2024-09-17 17:45 -0700
 author: KEN SHREVE
 ---
@@ -10,95 +10,120 @@ author: KEN SHREVE
 
 
 
-Early gains faded in the stock market Tuesday as investors weighed mixed retail sales and the start of the two-day Federal Reserve meeting.
+Early gains faded in the stock market Tuesday as investors weighed mixed retail sales and the start of the two-day Federal Reserve meeting.  
+周二，由于投资者权衡喜忧参半的零售销售和为期两天的美联储会议的开始，股市早盘涨幅消退。
 
 
 
 
-Overall, [retail sales](https://www.investors.com/news/economy/retail-sales-august-fed-meeting-rate-cut-sp-500/) rose 0.1% in August, better than the consensus estimate for a decline of 0.3%. Excluding autos, sales also rose 0.1%, but that was below the 0.3% consensus forecast.
+Overall, [retail sales](https://www.investors.com/news/economy/retail-sales-august-fed-meeting-rate-cut-sp-500/) rose 0.1% in August, better than the consensus estimate for a decline of 0.3%. Excluding autos, sales also rose 0.1%, but that was below the 0.3% consensus forecast.  
+总体而言，8 月份[零售额](https://www.investors.com/news/economy/retail-sales-august-fed-meeting-rate-cut-sp-500/)增长 0.1%，好于市场预期的下降 0.3%。不包括汽车，销售额也增长了 0.1%，但低于 0.3% 的普遍预测。
 
 
-The Fed policy statement is due Wednesday at 2 p.m. ET. Market expectations are for the Fed to cut its key lending rate by 50 basis points to a range of 4.75% to 5%. But it's far from a sure thing. As of 4 p.m. ET, fed funds futures put the chances of a 50-basis-point cut at 63%.
+The Fed policy statement is due Wednesday at 2 p.m. ET. Market expectations are for the Fed to cut its key lending rate by 50 basis points to a range of 4.75% to 5%. But it's far from a sure thing. As of 4 p.m. ET, fed funds futures put the chances of a 50-basis-point cut at 63%.  
+美联储政策声明将于美国东部时间周三下午 2 点公布。市场预期美联储将关键贷款利率下调 50 个基点至 4.75% 至 5% 的区间。但这远非一件确定的事情。截至美国东部时间下午 4 点，联邦基金期货将降息 50 个基点的可能性为 63%。
 
 
-Just after the stock market close, the 10-year yield was trading around 3.64%, up two basis points. The yield hit a low of 3.60%, the lowest since June 2023, as the Fed gets ready to embark on a rate-cutting campaign.
+Just after the stock market close, the 10-year yield was trading around 3.64%, up two basis points. The yield hit a low of 3.60%, the lowest since June 2023, as the Fed gets ready to embark on a rate-cutting campaign.  
+股市收盘后，10 年期国债收益率在 3.64% 左右交易，上涨了 2 个基点。收益率触及 3.60% 的低点，为 2023 年 6 月以来的最低水平，因为美联储准备开始降息活动。
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
-The Russell 2000 index extended its winning streak to five sessions but failed to hold the 2,200 level. The small-cap index rallied surged 1.8% early and came close to taking out its Aug. 26 high. But the gain faded to 0.7% by the close.
+The Russell 2000 index extended its winning streak to five sessions but failed to hold the 2,200 level. The small-cap index rallied surged 1.8% early and came close to taking out its Aug. 26 high. But the gain faded to 0.7% by the close.  
+罗素 2000 指数将连胜纪录扩大到五个交易日，但未能守住 2,200 点的水平。小盘股指数上涨，早盘飙升 1.8%，接近突破 8 月 26 日的高点。但收盘时涨幅回落至 0.7%。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/09/MP091724.jpg)
 
 
-The S&P 500 hit an all-time high early in the session, but the index pared a 0.7% gain and closed fractionally higher. The [stalling action](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/) in higher volume qualified as a distribution day, raising the S&P 500's count to four.
+The S&P 500 hit an all-time high early in the session, but the index pared a 0.7% gain and closed fractionally higher. The [stalling action](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/) in higher volume qualified as a distribution day, raising the S&P 500's count to four.  
+标准普尔 500 指数在盘中早盘创下历史新高，但该指数回吐了 0.7% 的涨幅并小幅收高。较高成交量的[停滞行为](https://www.investors.com/how-to-invest/investors-corner/stalling-signals-an-early-warning-for-stock-market-heres-how-to-find-this-insidious-signal/)有资格作为分配日，使标准普尔 500 指数的数量增加到四个。
 
 
-The Nasdaq composite also showed stalling action in the stock market today after the index shaved a 1.1% morning gain to 0.2% in higher volume.
+The Nasdaq composite also showed stalling action in the stock market today after the index shaved a 1.1% morning gain to 0.2% in higher volume.  
+纳斯达克综合指数今天也显示出股市的停滞，此前该指数早盘上涨 1.1% 至 0.2%。
 
 
-Winners beat losers on both main exchanges by less than 2-to-1.
+Winners beat losers on both main exchanges by less than 2-to-1.  
+在两个主要交易所，赢家以不到 2 比 1 的比分击败输家。
 
 
-IBD's recommended invested percentage stays at 60%-80%. If you're closer to 80%, there's nothing wrong with managing risk and trimming some of your winners ahead of Wednesday's Fed decision.
+IBD's recommended invested percentage stays at 60%-80%. If you're closer to 80%, there's nothing wrong with managing risk and trimming some of your winners ahead of Wednesday's Fed decision.  
+IBD 的建议投资百分比保持在 60%-80%。如果您接近 80%，那么在周三美联储决定之前管理风险并削减一些赢家并没有错。
 
 
-Tuesday's weakness came after the Nasdaq turned in a strong showing Monday, cutting a 1.1% intraday loss to 0.5% by the close. Buyers pushed the Nasdaq off lows even as semiconductor stocks underperformed. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) slumped 1.3% Monday as **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) and **Arm Holding** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) lagged in the Nasdaq 100.
+Tuesday's weakness came after the Nasdaq turned in a strong showing Monday, cutting a 1.1% intraday loss to 0.5% by the close. Buyers pushed the Nasdaq off lows even as semiconductor stocks underperformed. The VanEck Semiconductor ETF ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) slumped 1.3% Monday as **Micron Technology** ([MU](https://research.investors.com/quote.aspx?symbol=MU)) and **Arm Holding** ([ARM](https://research.investors.com/quote.aspx?symbol=ARM)) lagged in the Nasdaq 100.  
+周二的疲软是在纳斯达克周一表现强劲之后出现的，收盘时下跌 1.1% 至 0.5%。买家将纳斯达克指数从低点推低，尽管半导体股票表现不佳。VanEck Semiconductor ETF （[SMH](https://research.investors.com/quote.aspx?symbol=SMH)） 周一下跌 1.3%，美**光科技** （[MU）](https://research.investors.com/quote.aspx?symbol=MU) 和 **Arm Holding** （[ARM](https://research.investors.com/quote.aspx?symbol=ARM)） 在纳斯达克 100 指数中落后。
 
 
-A few Nasdaq-listed biotechs outperformed Tuesday. Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), **Exelixis** ([EXEL](https://research.investors.com/quote.aspx?symbol=EXEL)) added 0.5% and closed just above a 27.53 buy point. Meanwhile, **Alnylam Pharmaceuticals** ([ALNY](https://research.investors.com/quote.aspx?symbol=ALNY)) continued to get support at its 10-week moving average. Shares surged in late June, when its experimental drug vutrisiran reduced deaths and cardiovascular events by a third in patients with a rare heart disease.
+A few Nasdaq-listed biotechs outperformed Tuesday. Inside the [MarketSurge Growth 250](https://marketsurge.investors.com), **Exelixis** ([EXEL](https://research.investors.com/quote.aspx?symbol=EXEL)) added 0.5% and closed just above a 27.53 buy point. Meanwhile, **Alnylam Pharmaceuticals** ([ALNY](https://research.investors.com/quote.aspx?symbol=ALNY)) continued to get support at its 10-week moving average. Shares surged in late June, when its experimental drug vutrisiran reduced deaths and cardiovascular events by a third in patients with a rare heart disease.  
+一些在纳斯达克上市的生物技术公司周二表现出色。在 [MarketSurge Growth 250](https://marketsurge.investors.com) 中，**Exelixis** （[EXEL](https://research.investors.com/quote.aspx?symbol=EXEL)） 上涨 0.5%，收盘价略高于 27.53 个买入点。与此同时，**Alnylam Pharmaceuticals** （[ALNY）](https://research.investors.com/quote.aspx?symbol=ALNY) 继续在其 10 周移动平均线获得支撑。股价在 6 月下旬飙升，当时其实验药物 vutrisiran 将罕见心脏病患者的死亡和心血管事件减少了三分之一。
 
 
-Elsewhere, [IBD 50](https://research.investors.com/stock-lists/ibd-50/) firm **Rhythm Pharmaceuticals** ([RYTM](https://research.investors.com/quote.aspx?symbol=RYTM)) jumped 7% and reclaimed a 50.22 buy point after the stock tried to clear a cup-with-handle base early last week.
+Elsewhere, [IBD 50](https://research.investors.com/stock-lists/ibd-50/) firm **Rhythm Pharmaceuticals** ([RYTM](https://research.investors.com/quote.aspx?symbol=RYTM)) jumped 7% and reclaimed a 50.22 buy point after the stock tried to clear a cup-with-handle base early last week.  
+在其他地方，[IBD 50](https://research.investors.com/stock-lists/ibd-50/) 公司 **Rhythm Pharmaceuticals** （[RYTM](https://research.investors.com/quote.aspx?symbol=RYTM)） 上涨 7% 并收复 50.22 个买入点，此前该股上周早些时候试图清理带柄杯子底部。
 
 
-After an all-time closing high Monday, the Dow Jones Industrial Average reversed fractionally lower. The blue-chip index hit another all-time high early Tuesday, helped by strong starts for **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)). Intel shares closed off highs but still rallied nearly 3% after the company announced a [big chip deal](https://www.investors.com/news/technology/intel-stock-foundry-plans-amazon-ai-deal-federal-funding/) with **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) Web Services cloud unit in which Intel will design and produce at least two different AI chips.
+After an all-time closing high Monday, the Dow Jones Industrial Average reversed fractionally lower. The blue-chip index hit another all-time high early Tuesday, helped by strong starts for **Intel** ([INTC](https://research.investors.com/quote.aspx?symbol=INTC)) and **Microsoft** ([MSFT](https://research.investors.com/quote.aspx?symbol=MSFT)). Intel shares closed off highs but still rallied nearly 3% after the company announced a [big chip deal](https://www.investors.com/news/technology/intel-stock-foundry-plans-amazon-ai-deal-federal-funding/) with **Amazon.com**'s ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) Web Services cloud unit in which Intel will design and produce at least two different AI chips.  
+在周一创下历史收盘高点后，道琼斯工业平均指数小幅下跌。蓝筹股指数周二早盘再创历史新高，得益于**英特尔** （[INTC](https://research.investors.com/quote.aspx?symbol=INTC)） 和**Microsoft** （[MSFT）](https://research.investors.com/quote.aspx?symbol=MSFT) 的强劲开盘。英特尔股价收于高点，但仍上涨近 3%，此前该公司宣布与 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 的 Web Services 云部门达成[一项重大芯片交易](https://www.investors.com/news/technology/intel-stock-foundry-plans-amazon-ai-deal-federal-funding/)，英特尔将设计和生产至少两种不同的 AI 芯片。
 
 
-Microsoft jumped more than 2% early in the session after the company raised its dividend by 10% and also announced a new $60 billion share buyback program. But the gain faded to 0.9% by the close.
+Microsoft jumped more than 2% early in the session after the company raised its dividend by 10% and also announced a new $60 billion share buyback program. But the gain faded to 0.9% by the close.  
+Microsoft 在将股息提高 10% 并宣布一项新的 600 亿美元股票回购计划后，盘中早盘上涨超过 2%。但收盘时涨幅回落至 0.9%。
 
 
-Financials Join The Party
--------------------------
+Financials Join The Party金融 加入派对
+--------------------------------
 
 
-Despite Tuesday's fade, the stock market continues to show signs of underlying strength. Market breadth has improved as leadership has expanded well beyond the Magnificent 7 stocks. Financial stocks are acting much better in the stock market, including [several stocks in the Finance-Investment Bank/Brokers group](https://www.investors.com/research/ibd-industry-themes/interactive-brokers-ibkr-investment-banks/).
+Despite Tuesday's fade, the stock market continues to show signs of underlying strength. Market breadth has improved as leadership has expanded well beyond the Magnificent 7 stocks. Financial stocks are acting much better in the stock market, including [several stocks in the Finance-Investment Bank/Brokers group](https://www.investors.com/research/ibd-industry-themes/interactive-brokers-ibkr-investment-banks/).  
+尽管周二的情绪消退，但股市继续显示出潜在强势的迹象。随着领导层的影响力远远超出 Magnificent 7 股票，市场广度有所提高。金融股在股市中的表现要好得多，包括 [Finance-Investment Bank/Brokers 组中的几只股票](https://www.investors.com/research/ibd-industry-themes/interactive-brokers-ibkr-investment-banks/)。
 
 
-Among online brokers, **Robinhood** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)) extended its winning streak to seven sessions. It's now just past the 5% buy zone from a 21.54 handle entry. **Interactive Brokers** ([IBKR](https://research.investors.com/quote.aspx?symbol=IBKR)), meanwhile, rallied 2.5% and is still in the buy zone from a 128.98 handle entry.
+Among online brokers, **Robinhood** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)) extended its winning streak to seven sessions. It's now just past the 5% buy zone from a 21.54 handle entry. **Interactive Brokers** ([IBKR](https://research.investors.com/quote.aspx?symbol=IBKR)), meanwhile, rallied 2.5% and is still in the buy zone from a 128.98 handle entry.  
+在线券商中，**Robinhood** （[HOOD）](https://research.investors.com/quote.aspx?symbol=HOOD) 将连胜纪录延长至 7 个交易日。它现在刚刚从 21.54 手柄入场点越过 5% 的买入区域。与此同时，**盈透证券** （[IBKR）](https://research.investors.com/quote.aspx?symbol=IBKR) 上涨 2.5%，仍处于买入区，距离 128.98 关口。
 
 
-Among investment banks, **Evercore** ([EVR](https://research.investors.com/quote.aspx?symbol=EVR)) is near the top of an eight-week consolidation. Same with group peer **Moelis** ([MC](https://research.investors.com/quote.aspx?symbol=MC)) and **Piper Sandler** ([PIPR](https://research.investors.com/quote.aspx?symbol=PIPR)).
+Among investment banks, **Evercore** ([EVR](https://research.investors.com/quote.aspx?symbol=EVR)) is near the top of an eight-week consolidation. Same with group peer **Moelis** ([MC](https://research.investors.com/quote.aspx?symbol=MC)) and **Piper Sandler** ([PIPR](https://research.investors.com/quote.aspx?symbol=PIPR)).  
+在投资银行中，**Evercore** （[EVR](https://research.investors.com/quote.aspx?symbol=EVR)） 接近为期八周的盘整的顶部。与集团同行 **Moelis** （[MC）](https://research.investors.com/quote.aspx?symbol=MC) 和 **Piper Sandler** （[PIPR）](https://research.investors.com/quote.aspx?symbol=PIPR) 相同。
 
 
-In the investment management group, **KKR** ([KKR](https://research.investors.com/quote.aspx?symbol=KKR)) extended gains and followed through after Monday's breakout over a 124.20 entry. KKR, discussed in [today's IBD 50 Stocks to Watch](https://www.investors.com/research/kkr-stock-private-equity-firm/), is still in the 5% buy zone.
+In the investment management group, **KKR** ([KKR](https://research.investors.com/quote.aspx?symbol=KKR)) extended gains and followed through after Monday's breakout over a 124.20 entry. KKR, discussed in [today's IBD 50 Stocks to Watch](https://www.investors.com/research/kkr-stock-private-equity-firm/), is still in the 5% buy zone.  
+在投资管理组，**KKR** （[KKR](https://research.investors.com/quote.aspx?symbol=KKR)） 扩大了涨幅，并在周一突破 124.20 后继续上涨。[在今天的 IBD 50 只值得关注的股票](https://www.investors.com/research/kkr-stock-private-equity-firm/)中讨论的 KKR 仍处于 5% 的买入区域。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091724.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/09/DailyGMI_091724.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy  
+了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders  
+与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
 
 
-[Check Out IBD's New Exposure Levels To Gauge Market Health](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+[Check Out IBD's New Exposure Levels To Gauge Market Health  
+查看 IBD 的新风险敞口水平以衡量市场健康状况](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
 
 
-[Futures: Fed Rate Cut Looms, But Here's What Matters](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fed-rate-cut-looms-what-to-expect/)
+[Futures: Fed Rate Cut Looms, But Here's What Matters  
+期货：美联储降息迫在眉睫，但关键在于此](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-fed-rate-cut-looms-what-to-expect/)
 
 
 
