--- a/_columns/The_Big_Picture/zh-cn/2024-08-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-20.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Pauses After Impressive Run; Watch For New Setups But Avoid This Pitfall
+  Stock Market Pauses After Impressive Run; Watch For New Setups But Avoid This Pitfall	股市在令人印象深刻的上涨后暂停;注意新设置，但要避免这个陷阱
 date: 2024-08-20 17:34 -0700
 author: KEN SHREVE
 ---
@@ -10,34 +10,42 @@ author: KEN SHREVE
 
 
 
-The Nasdaq composite and S&P 500 stepped back in orderly fashion in the stock market Tuesday after eight up sessions in a row.
+The Nasdaq composite and S&P 500 stepped back in orderly fashion in the stock market Tuesday after eight up sessions in a row.  
+纳斯达克综合指数和标准普尔 500 指数在连续八个交易日上涨后，周二在股市有序回落。
 
 
 
 
-For stock market bulls, it was another encouraging session after follow-through days for the Nasdaq and S&P 500 early last week. The Nasdaq traded in a tight range and barely budged from Monday's close, down just 0.3%.
+For stock market bulls, it was another encouraging session after follow-through days for the Nasdaq and S&P 500 early last week. The Nasdaq traded in a tight range and barely budged from Monday's close, down just 0.3%.  
+对于股市多头来说，这是上周初纳斯达克和标准普尔 500 指数继后续几天之后的又一个令人鼓舞的交易日。纳斯达克指数窄幅震荡，与周一收盘价相比几乎没有变化，仅下跌 0.3%。
 
 
-A distribution day was taking shape on the Nasdaq composite in the morning when the index was down nearly 0.7% in higher volume. But the tech-heavy index pared losses and volume came in lower than at Monday's levels.
+A distribution day was taking shape on the Nasdaq composite in the morning when the index was down nearly 0.7% in higher volume. But the tech-heavy index pared losses and volume came in lower than at Monday's levels.  
+纳斯达克综合指数上午开始形成一个分发日，当时该指数下跌近 0.7%，成交量增加。但以科技股为主的指数收复了损失，成交量低于周一的水平。
 
 
-On the Nasdaq exchange, declining stocks beat advancers by nearly 2-to-1.
+On the Nasdaq exchange, declining stocks beat advancers by nearly 2-to-1.  
+在纳斯达克交易所，下跌的股票以近 2 比 1 的比分跑赢上涨的股票。
 
 
-Lower-volume declines and higher-volume gains in the indexes from here would be ideal price action for the bulls. But if higher-volume declines, or distribution days, start to cluster, that would be a sign to get defensive. For now, the nascent uptrend looks solid.
+Lower-volume declines and higher-volume gains in the indexes from here would be ideal price action for the bulls. But if higher-volume declines, or distribution days, start to cluster, that would be a sign to get defensive. For now, the nascent uptrend looks solid.  
+从这里开始，指数的较低成交量下跌和较高成交量上涨将是多头的理想价格走势。但是，如果更高的销量下降或分销日开始聚集，那将是一个开始防御的迹象。目前，新生的上升趋势看起来很稳固。
 
 
-Stock Market: Chip Stocks Lag
------------------------------
+Stock Market: Chip Stocks Lag股市：芯片股滞后
+-------------------------------------
 
 
-Several chip stocks lagged in the Nasdaq 100, including **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) as well as chip-equipment stocks like **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)) and **Lam Research** ([LRCX](https://research.investors.com/quote.aspx?symbol=LRCX)).
+Several chip stocks lagged in the Nasdaq 100, including **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) as well as chip-equipment stocks like **Applied Materials** ([AMAT](https://research.investors.com/quote.aspx?symbol=AMAT)) and **Lam Research** ([LRCX](https://research.investors.com/quote.aspx?symbol=LRCX)).  
+纳斯达克 100 指数中，包括**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 在内的几只芯片股以及**应用材料** （[AMAT）](https://research.investors.com/quote.aspx?symbol=AMAT) 和 **Lam Research** （[LRCX](https://research.investors.com/quote.aspx?symbol=LRCX)） 等芯片设备股。
 
 
-But the weakness was offset by a strong performance for **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)). Late Monday, Palo Alto reported another quarter of [slowing earnings and revenue growth](https://www.investors.com/news/technology/palo-alto-stock-palo-alto-earnings-news-q4-2024/), but investors focused on the company's outlook and strong annual recurring revenue from cloud computing products, which jumped 43% to $4.22 billion.
+But the weakness was offset by a strong performance for **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)). Late Monday, Palo Alto reported another quarter of [slowing earnings and revenue growth](https://www.investors.com/news/technology/palo-alto-stock-palo-alto-earnings-news-q4-2024/), but investors focused on the company's outlook and strong annual recurring revenue from cloud computing products, which jumped 43% to $4.22 billion.  
+但 **Palo Alto Networks** （[PANW）](https://research.investors.com/quote.aspx?symbol=PANW) 的强劲表现抵消了这一疲软。周一晚些时候，Palo Alto 报告称，[另一个季度的收益和收入增长放缓](https://www.investors.com/news/technology/palo-alto-stock-palo-alto-earnings-news-q4-2024/)，但投资者关注的是该公司的前景和强劲的云计算产品年度经常性收入，该收入跃升 43% 至 42.2 亿美元。
 
 
-It was a solid performance for the Nasdaq index even as the VanEck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) exchange traded fund shed 1.3%. After a bounce off the 200-day moving average, the ETF's 50-day moving average is still a potential resistance level to watch.
+It was a solid performance for the Nasdaq index even as the VanEck Semiconductor ([SMH](https://research.investors.com/quote.aspx?symbol=SMH)) exchange traded fund shed 1.3%. After a bounce off the 200-day moving average, the ETF's 50-day moving average is still a potential resistance level to watch.  
+纳斯达克指数表现稳健，尽管 VanEck Semiconductor （[SMH](https://research.investors.com/quote.aspx?symbol=SMH)） 交易所交易基金下跌 1.3%。在从 200 天移动平均线反弹后，ETF 的 50 天移动平均线仍然是一个值得关注的潜在阻力位。
 
 
 
@@ -45,7 +53,8 @@ It was a solid performance for the Nasdaq index even as the VanEck Semiconductor
 ---
 
 
-**[Stay In Sync With The Market With IBD's ETF Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
+**[Stay In Sync With The Market With IBD's ETF Strategy  
+通过 IBD 的 ETF 策略与市场保持同步](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)**
 
 
 
@@ -53,89 +62,112 @@ It was a solid performance for the Nasdaq index even as the VanEck Semiconductor
 ---
 
 
-Further, Palo Alto's strong breakout helped fuel IBD's security software group to a gain of around 2%. **CyberArk Software** ([CYBR](https://research.investors.com/quote.aspx?symbol=CYBR)) tried to break out of a consolidation again, but a 2.9% intraday gain faded to a loss of 0.3% by the close.
+Further, Palo Alto's strong breakout helped fuel IBD's security software group to a gain of around 2%. **CyberArk Software** ([CYBR](https://research.investors.com/quote.aspx?symbol=CYBR)) tried to break out of a consolidation again, but a 2.9% intraday gain faded to a loss of 0.3% by the close.  
+此外，Palo Alto 的强劲突破帮助 IBD 的安全软件组实现了约 2% 的收益。**CyberArk Software** （[CYBR）](https://research.investors.com/quote.aspx?symbol=CYBR) 试图再次打破盘整，但盘中 2.9% 的涨幅在收盘时回落至 0.3% 的损失。
 
 
-The stock showed similar price action on July 16 after an initial breakout attempt. Even though CyberArk topped a buy point early Tuesday, it was a risky buy after a strong move over a short period of time.
+The stock showed similar price action on July 16 after an initial breakout attempt. Even though CyberArk topped a buy point early Tuesday, it was a risky buy after a strong move over a short period of time.  
+该股在最初的突破尝试后于 7 月 16 日显示出类似的价格走势。尽管 CyberArk 周二早些时候突破了一个买入点，但在短时间内强劲波动后，这是一个冒险的买入。
 
 
-**![](https://www.investors.com/wp-content/uploads/2024/08/MP082024.jpg)Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)) also topped a buy point Tuesday after the company cited strong ad sales trends. But the stock needs a breather after 10 gains in 11 trading sessions.
+**![](https://www.investors.com/wp-content/uploads/2024/08/MP082024.jpg)Netflix** ([NFLX](https://research.investors.com/quote.aspx?symbol=NFLX)) also topped a buy point Tuesday after the company cited strong ad sales trends. But the stock needs a breather after 10 gains in 11 trading sessions.  
+**![](https://www.investors.com/wp-content/uploads/2024/08/MP082024.jpg)Netflix** （[NFLX）](https://research.investors.com/quote.aspx?symbol=NFLX) 周二也突破了买入点，此前该公司引用了强劲的广告销售趋势。但该股在 11 个交易日中上涨 10 次后需要喘口气。
 
 
-As always, be careful not to chase extended stocks. Instead, focus on the true stock market leaders that are pulling back in light volume and finding support at key levels.
+As always, be careful not to chase extended stocks. Instead, focus on the true stock market leaders that are pulling back in light volume and finding support at key levels.  
+与往常一样，小心不要追逐延长的股票。相反，请关注真正的股市领导者，这些股票市场正在以低交易量回落并在关键水平上找到支撑。
 
 
-Eli Lilly Leads S&P 500
------------------------
+Eli Lilly Leads S&P 500礼来领涨标普 500 指数
+------------------------------------
 
 
-The S&P 500 slipped 0.2% in lower volume. But **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)) was a top gainer in the index, up around 3%.
+The S&P 500 slipped 0.2% in lower volume. But **Eli Lilly** ([LLY](https://research.investors.com/quote.aspx?symbol=LLY)) was a top gainer in the index, up around 3%.  
+标准普尔 500 指数下跌 0.2%，成交量较低。但**礼来** （[LLY](https://research.investors.com/quote.aspx?symbol=LLY)） 是该指数中涨幅最大的股票，上涨约 3%。
 
 
-The drug giant said a three-year study of tirzepatide — the active ingredient in Lilly's weight-loss drug Zepbound and diabetes treatment Mounjaro —  lowered obese and overweight patients' risk of developing Type 2 diabetes by 94%. Eli Lilly is a [Leaderboard](https://leaderboard.investors.com) stock after rejoining the list last week.
+The drug giant said a three-year study of tirzepatide — the active ingredient in Lilly's weight-loss drug Zepbound and diabetes treatment Mounjaro —  lowered obese and overweight patients' risk of developing Type 2 diabetes by 94%. Eli Lilly is a [Leaderboard](https://leaderboard.investors.com) stock after rejoining the list last week.  
+这家制药巨头表示，一项为期三年的 tirzepatide（礼来减肥药 Zepbound 和糖尿病治疗药物 Mounjaro 中的活性成分）的研究将肥胖和超重患者患 2 型糖尿病的风险降低了 94%。礼来 （Eli Lilly） 在上周重新加入榜单后成为[排行榜](https://leaderboard.investors.com)股票。
 
 
-Meanwhile, breadth was nearly 2-to-1 negative on the New York Stock Exchange.
+Meanwhile, breadth was nearly 2-to-1 negative on the New York Stock Exchange.  
+与此同时，纽约证券交易所的广度几乎是 2 比 1 的负面。
 
 
-After gapping above its 50-day moving average last week, the Russell 2000 lagged with a loss of 1.2%. But the small-cap index is still holding above all of its moving averages.
+After gapping above its 50-day moving average last week, the Russell 2000 lagged with a loss of 1.2%. But the small-cap index is still holding above all of its moving averages.  
+在上周跳空突破其 50 天移动平均线后，罗素 2000 指数下跌 1.2%。但小盘股指数仍高于其所有移动平均线。
 
 
-Oil and gas stocks were among the worst performers amid a modest decline in the price of oil. West Texas Intermediate crude oil futures settled at $73.82 a barrel, down 0.7%.
+Oil and gas stocks were among the worst performers amid a modest decline in the price of oil. West Texas Intermediate crude oil futures settled at $73.82 a barrel, down 0.7%.  
+在油价小幅下跌的情况下，石油和天然气股是表现最差的股票之一。西德克萨斯中质原油期货收于每桶 73.82 美元，下跌 0.7%。
 
 
-Stock Market: Dow Snaps Win Streak
-----------------------------------
+Stock Market: Dow Snaps Win Streak股市：道琼斯指数连续上涨
+----------------------------------------------
 
 
-The Dow Jones Industrial Average snapped a five-session win streak with a decline of nearly 0.2%.
+The Dow Jones Industrial Average snapped a five-session win streak with a decline of nearly 0.2%.  
+道琼斯工业平均指数结束了连续五个交易日的上涨，下跌了近 0.2%。
 
 
-**Matson** ([MATX](https://research.investors.com/quote.aspx?symbol=MATX)) and **Kirby** ([KEX](https://research.investors.com/quote.aspx?symbol=KEX)) were a drag on shipping stocks, with the group down 2.5%. But **Navios Maritime Partners** ([NMM](https://research.investors.com/quote.aspx?symbol=NMM)) was a bright spot, soaring 16% after reporting earnings.
+**Matson** ([MATX](https://research.investors.com/quote.aspx?symbol=MATX)) and **Kirby** ([KEX](https://research.investors.com/quote.aspx?symbol=KEX)) were a drag on shipping stocks, with the group down 2.5%. But **Navios Maritime Partners** ([NMM](https://research.investors.com/quote.aspx?symbol=NMM)) was a bright spot, soaring 16% after reporting earnings.  
+**Matson** （[MATX](https://research.investors.com/quote.aspx?symbol=MATX)） 和 **Kirby** （[KEX](https://research.investors.com/quote.aspx?symbol=KEX)） 拖累了航运股，该集团下跌 2.5%。但 **Navios Maritime Partners** （[NMM）](https://research.investors.com/quote.aspx?symbol=NMM) 是一个亮点，在公布财报后飙升 16%。
 
 
-Navios gapped out of a short consolidation with a conventional entry of 53.83. But just like CyberArk and Netflix, the stock has run up quickly in a short amount of time.
+Navios gapped out of a short consolidation with a conventional entry of 53.83. But just like CyberArk and Netflix, the stock has run up quickly in a short amount of time.  
+Navios 在短暂的盘整中跳空跳空，常规入场价为 53.83。但就像 CyberArk 和 Netflix 一样，该股在短时间内迅速上涨。
 
 
 
-**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) continues to trade tightly near highs with its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) also near highs. The stock remains a breakout candidate after a breakout attempt on July 5 soured quickly.
+**Meta Platforms** ([META](https://research.investors.com/quote.aspx?symbol=META)) continues to trade tightly near highs with its [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) also near highs. The stock remains a breakout candidate after a breakout attempt on July 5 soured quickly.  
+**Meta Platforms** （[META）](https://research.investors.com/quote.aspx?symbol=META) 继续在高点附近紧紧交易，其[相对强弱线](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/)也在高点附近。在 7 月 5 日的突破尝试迅速恶化后，该股仍然是一个突破候选者。
 
 
-Bond Yields Slip As Interest Ruling Nears
------------------------------------------
+Bond Yields Slip As Interest Ruling Nears随着利率裁决的临近，债券收益率下滑
+----------------------------------------------------------
 
 
-The 10-year Treasury yield was trading around 3.81% just after the stock market close, down five basis points, as investors prepare for an expected interest rate cut by the Federal Reserve at the September meeting.
+The 10-year Treasury yield was trading around 3.81% just after the stock market close, down five basis points, as investors prepare for an expected interest rate cut by the Federal Reserve at the September meeting.  
+10 年期美国国债收益率在股市收盘后交易于 3.81% 左右，下跌 5 个基点，因为投资者为美联储在 9 月会议上预期的降息做准备。
 
 
-The Invesco DB U.S. Dollar Bullish ETF ([UUP](https://research.investors.com/quote.aspx?symbol=UUP)), basically a long dollar fund, fell sharply for the third straight session. The fund  hit its lowest level since March.
+The Invesco DB U.S. Dollar Bullish ETF ([UUP](https://research.investors.com/quote.aspx?symbol=UUP)), basically a long dollar fund, fell sharply for the third straight session. The fund  hit its lowest level since March.  
+Invesco DB 美元看涨 ETF （[UUP），](https://research.investors.com/quote.aspx?symbol=UUP)基本上是一只多头美元基金，连续第三个交易日大幅下跌。该基金触及 3 月以来的最低水平。
 
 
-Traders think there's a 68% chance that the federal funds rate will be at 4.25% to 4.5% by year's end. At its current level of 5.25% to 5.5%, that implies 100 basis points of cuts at the next three meetings.
+Traders think there's a 68% chance that the federal funds rate will be at 4.25% to 4.5% by year's end. At its current level of 5.25% to 5.5%, that implies 100 basis points of cuts at the next three meetings.  
+交易员认为，到今年年底，联邦基金利率有 68% 的可能性在 4.25% 至 4.5% 之间。按照目前 5.25% 至 5.5% 的水平，这意味着在接下来的三次会议上将降息 100 个基点。
 
 
-But Ed Yardeni from Yardeni Research isn't so sure. In a CNBC interview Monday, Yardeni called for a "one and done" rate cut in September as inflation continues to moderate despite a strong jobs market.
+But Ed Yardeni from Yardeni Research isn't so sure. In a CNBC interview Monday, Yardeni called for a "one and done" rate cut in September as inflation continues to moderate despite a strong jobs market.  
+但 Yardeni Research 的 Ed Yardeni 并不那么确定。在周一的 CNBC 采访中，Yardeni 呼吁在 9 月份“一劳永逸”地降息，因为尽管就业市场强劲，但通胀继续放缓。
 
 
-Fed Chairman Jerome Powell is set to give a key speech on monetary policy Friday at the Jackson Hole Economic Symposium Friday at 10 a.m. ET. Before that, the minutes from the late-July Fed meeting will be released Wednesday at 2 p.m. ET.
+Fed Chairman Jerome Powell is set to give a key speech on monetary policy Friday at the Jackson Hole Economic Symposium Friday at 10 a.m. ET. Before that, the minutes from the late-July Fed meeting will be released Wednesday at 2 p.m. ET.  
+美联储主席杰罗姆·鲍威尔（Jerome Powell）将于美国东部时间周五上午 10 点在杰克逊霍尔经济研讨会上就货币政策发表重要讲话。在此之前，美联储 7 月下旬的会议纪要将于美国东部时间周三下午 2 点公布。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082024.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082024.pdf)
 
 
-*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.
+*Follow Ken Shreve on X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) for more stock market analysis and insight*.  
+*在 X [@IBD\_KShreve](https://www.x.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
 
 
-**YOU MAY ALSO LIKE:**
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
 
 
-[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
+[Why This IBD Tool Simplifies The](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [For Top Stocks](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)  
+[为什么这个 IBD 工具简化了](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[顶级股票的](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/) [Sear](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)[ch](https://www.investors.com/how-to-invest/investors-corner/how-to-research-growth-stocks/)
 
 
-[Best Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
+[Best Growth Stocks To Buy And Watch  
+最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/best-growth-stocks-buy-watch-ibd-stock-lists/)
 
 
-[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
+[IBD Digital: Unlock IBD's Premium Stock Lists, Tools And Analysis Today  
+IBD Digital：立即解锁 IBD 的优质股票列表、工具和分析](https://www.investors.com/product/ibd-digital/?artProdLink=IBD_Digital)
 
 
 [Nvidia Made Investors $764 Billion Richer In Just 8 Days](https://www.investors.com/etfs-and-funds/sectors/sp500-nvidia-stock-made-investors-billion-richer-in-just-days/)
