--- a/_columns/The_Big_Picture/zh-cn/2024-08-28.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-08-28.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stocks Fall Sharply As Market Pause Drags On; Futures Extend Losses After Nvidia Earnings
+  Stocks Fall Sharply As Market Pause Drags On; Futures Extend Losses After Nvidia Earnings	随着市场暂停的拖延，股市大幅下跌;英伟达财报后期货扩大跌幅
 date: 2024-08-28 17:31 -0700
 author: JUAN CARLOS ARANCIBIA
 ---
@@ -10,112 +10,139 @@ author: JUAN CARLOS ARANCIBIA
 
 
 
-The stock market fell sharply Wednesday as a nervous vibe set in on a session that preceded one of the most consequential earnings reports in **Nvidia**'s ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) quarterly results after the close.
+The stock market fell sharply Wednesday as a nervous vibe set in on a session that preceded one of the most consequential earnings reports in **Nvidia**'s ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) quarterly results after the close.  
+周三股市大幅下跌，因为在英**伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 收盘后季度业绩中最重要的收益报告之一之前，市场气氛紧张。
 
 
 
 
-The Nasdaq composite slid 1.1% and closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/), which had been a footrest for the index over the past couple of weeks. Weakness in tech stocks contributed to the Nasdaq's loss.
+The Nasdaq composite slid 1.1% and closed below its [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/), which had been a footrest for the index over the past couple of weeks. Weakness in tech stocks contributed to the Nasdaq's loss.  
+纳斯达克综合指数下跌 1.1%，收于其 [50 天移动平均线下方，该移动平均线](https://www.investors.com/how-to-invest/investors-corner/moving-averages-help-understand-stock-markets-direction-heres-how-to-use-them/)在过去几周一直是该指数的立足点。科技股的疲软导致纳斯达克指数下跌。
 
 
-Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) slid 1.4%, easily the worst performing of the S&P major sector indexes. The index closed below the 50-day moving average. To be sure, techs weren't the only weak sector as most S&P sector indexes fell Wednesday. Financials and health care had minor gains.
+Technology Select Sector SPDR ([XLK](https://research.investors.com/quote.aspx?symbol=XLK)) slid 1.4%, easily the worst performing of the S&P major sector indexes. The index closed below the 50-day moving average. To be sure, techs weren't the only weak sector as most S&P sector indexes fell Wednesday. Financials and health care had minor gains.  
+科技精选行业 SPDR （[XLK](https://research.investors.com/quote.aspx?symbol=XLK)） 下跌 1.4%，轻松成为标准普尔主要行业指数中表现最差的。该指数收于 50 天移动平均线下方。可以肯定的是，科技股并不是唯一疲软的板块，因为大多数标准普尔板块指数周三下跌。金融和医疗保健小幅上涨。
 
 
-The S&P 500 lost 0.6%, extending a sideways trend that has developed over the past couple of weeks. The Nasdaq also has moderated the past two weeks, as the stock market uptrend takes what seems like a normal pause from a solid run.
+The S&P 500 lost 0.6%, extending a sideways trend that has developed over the past couple of weeks. The Nasdaq also has moderated the past two weeks, as the stock market uptrend takes what seems like a normal pause from a solid run.  
+标准普尔 500 指数下跌 0.6%，延续了过去几周形成的横盘整理趋势。纳斯达克指数在过去两周也有所缓和，因为股市的上涨趋势似乎从稳健的运行中恢复了正常的暂停。
 
 
-Volume rose on the New York Stock Exchange and the Nasdaq exchange, although an increase was almost assured following quiet trading Tuesday. In fact, market volume Tuesday was the lightest so far this year, excluding half sessions.
+Volume rose on the New York Stock Exchange and the Nasdaq exchange, although an increase was almost assured following quiet trading Tuesday. In fact, market volume Tuesday was the lightest so far this year, excluding half sessions.  
+纽约证券交易所和纳斯达克交易所的成交量有所上升，尽管在周二平静的交易之后几乎可以保证增长。事实上，周二的市场成交量是今年迄今为止最低的，不包括半个交易日。
 
 
-Distribution Day For S&P
-------------------------
-
-
-The combination of losses in higher volume Wednesday gave the major indexes a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), including the first for the S&P 500 of the current market cycle.
-
-
-![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP082824.jpg)The Dow Jones Industrial Average fell 0.4%. **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) accounted for almost 35 of the Dow's 159-point loss as shares fell 2%. But the stock bounced back 3.5% after hours following the company's earnings report.
-
-
-Small caps didn't fare much better, with the Russell 2000 down nearly 0.7% for its third straight decline.
-
-
-Declining stocks outnumbered advancers by roughly an 8-5 ratio on the NYSE and by 9-to-4 on the Nasdaq.
-
-
-Still, there were many more new 52-week highs than new lows, and market breadth in general continues to be positive. The 10-day moving average of stocks up in volume vs. down in volume has been positive for about two weeks, corresponding with a sharp decline in the new lows.
-
-
-Nvidia Lower After The Close
-----------------------------
-
-
-After Wednesday's close, Nvidia reported July-quarter sales and earnings that topped expectations and the company boosted its outlook.
-
-
-But in the stock market's initial reaction, Nvidia shares fell 5% in extended trading. That came despite the fact the artificial intelligence leader set a new $50 billion stock buyback.
-
-
-Stocks weakened overnight, too. Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) was down 0.7% around 5 p.m. ET, while SPDR S&P 500 Trust ([SPY](https://research.investors.com/quote.aspx?symbol=SPY)) lost 0.4%.
-
-
-
-
----
-
-
-**Check live coverage of [Nvidia's earnings report](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/).**
-
-
-
-
----
-
-
-Even in a group of stocks that accounts for much of the stock market's performance, Nvidia stands out. The stock has outperformed the Magnificent Seven this year, up more than 150% compared with a 31% increase for the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund. Nvidia also has more than tripled the ETF's performance from the Aug. 5 market bottom.
-
-
-But Investor's Business Daily's IBD 50 index, which includes Nvidia, fell 1.3% Wednesday. The index is testing resistance at its 50-day moving average. It would have performed better if not for a sell-off for index newcomer **Harrow** ([HROW](https://research.investors.com/quote.aspx?symbol=HROW)), which slid nearly 9%, and **Powell Industries** ([POWL](https://research.investors.com/quote.aspx?symbol=POWL)), which was down 10%.
-
-
-Stock Market Opportunities Ahead?
+Distribution Day For S&P S&P 的分发日
 ---------------------------------
 
 
-Other IBD tools suggest investors will find more buying opportunities if the stock market holds up. The Relative Strength Blue Dot screen in [MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) — which identifies stocks with RS lines at highs while they form or break out of bases — has nearly 100 stocks.
+The combination of losses in higher volume Wednesday gave the major indexes a new [distribution day](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/), including the first for the S&P 500 of the current market cycle.  
+周三成交量增加的损失为主要指数带来了新的发行日，包括当前市场周期标准普尔 500 指数的第一个[发行日](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)。
 
 
-Although some of those are extended from breakouts, keep an eye on **TJX Cos.** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)), **NetApp** ([NTAP](https://research.investors.com/quote.aspx?symbol=NTAP)), **Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) and **SPX Technologies** ([SPXC](https://research.investors.com/quote.aspx?symbol=SPXC)). NetApp reported quarterly results after the close and was little changed in extended trading.
+![market pulse](https://www.investors.com/wp-content/uploads/2024/08/MP082824.jpg)The Dow Jones Industrial Average fell 0.4%. **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) accounted for almost 35 of the Dow's 159-point loss as shares fell 2%. But the stock bounced back 3.5% after hours following the company's earnings report.  
+道琼斯工业平均指数下跌 0.4%。**Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 占道琼斯指数 159 点下跌的近 35 点，股价下跌 2%。但在公司财报发布后，该股在盘后反弹了 3.5%。
 
 
-From a broad perspective, the stock market is behaving the way investors might expect. Indexes rebounded from their August lows and nothing in the current pause seems excessively bearish. Distribution days remain low and benign. Thus, IBD continues to recommend a stock exposure level of 60% to 80%.
+Small caps didn't fare much better, with the Russell 2000 down nearly 0.7% for its third straight decline.  
+小盘股的表现也好不到哪里去，罗素 2000 指数连续第三次下跌近 0.7%。
 
 
-Keep in mind that market's reaction to Nvidia with a full day of trading Thursday is likely to impact the tech sector and beyond.
+Declining stocks outnumbered advancers by roughly an 8-5 ratio on the NYSE and by 9-to-4 on the Nasdaq.  
+在纽约证券交易所，下跌的股票数量大约比上涨的股票多 8：5，在纳斯达克多多 9：4。
 
 
-Turning to the bond market, traders continue to price in lower interest rates. The 10-year Treasury yield is near its lowest levels of the year, at 3.84% late Wednesday. The two-year Treasury yield, at 3.866%, is at the lowest since May 2023, according to Dow Jones Market Data.
+Still, there were many more new 52-week highs than new lows, and market breadth in general continues to be positive. The 10-day moving average of stocks up in volume vs. down in volume has been positive for about two weeks, corresponding with a sharp decline in the new lows.  
+尽管如此，52 周新高远多于新低，而且市场广度总体上继续保持积极。大约两周以来，成交量上升与成交量下降的 10 天移动平均线一直为正，与新低的急剧下跌相对应。
 
 
-[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082824.pdf).
+Nvidia Lower After The Close英伟达收盘后走低
+------------------------------------
 
 
-**YOU MAY ALSO LIKE:**
+After Wednesday's close, Nvidia reported July-quarter sales and earnings that topped expectations and the company boosted its outlook.  
+周三收盘后，英伟达公布的 7 月季度销售额和收益超出预期，该公司上调了前景。
 
 
-[The Four Pillars Of The IBD Methodology](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+But in the stock market's initial reaction, Nvidia shares fell 5% in extended trading. That came despite the fact the artificial intelligence leader set a new $50 billion stock buyback.  
+但在股市的最初反应中，英伟达股价在延长交易中下跌了 5%。尽管这家人工智能领导者设定了 500 亿美元的新股票回购。
 
 
-[Risk Management In The Stock Market: How Much Money To Invest](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+Stocks weakened overnight, too. Invesco QQQ Trust ([QQQ](https://research.investors.com/quote.aspx?symbol=QQQ)) was down 0.7% around 5 p.m. ET, while SPDR S&P 500 Trust ([SPY](https://research.investors.com/quote.aspx?symbol=SPY)) lost 0.4%.  
+股市隔夜也走软。Invesco QQQ Trust （[QQQ）](https://research.investors.com/quote.aspx?symbol=QQQ) 在美国东部时间下午 5 点左右下跌 0.7%，而 SPDR S&P 500 Trust （[SPY](https://research.investors.com/quote.aspx?symbol=SPY)） 下跌 0.4%。
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
 
 
-[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
+---
 
 
-[Futures: Nvidia Earnings Fail To Wow; Dow Giant Rises](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-guidance-salesforce-crowdstrike/)
+**Check live coverage of [Nvidia's earnings report](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/).  
+查看 [Nvidia 收益报告的](https://www.investors.com/news/technology/nvidia-stock-fiscal-q2-2025-earnings-nvda-stock/)现场报道。**
+
+
+
+
+---
+
+
+Even in a group of stocks that accounts for much of the stock market's performance, Nvidia stands out. The stock has outperformed the Magnificent Seven this year, up more than 150% compared with a 31% increase for the Roundhill Magnificent Seven ([MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)) exchange traded fund. Nvidia also has more than tripled the ETF's performance from the Aug. 5 market bottom.  
+即使在占股市表现大部分的一组股票中，英伟达也脱颖而出。该股今年的表现优于 Magnificent Seven，上涨了 150% 以上，而 Roundhill Magnificent Seven （[MAGS](https://research.investors.com/quote.aspx?symbol=MAGS)） 交易所交易基金的涨幅为 31%。Nvidia 还将 ETF 的表现从 8 月 5 日的市场底部提高了两倍多。
+
+
+But Investor's Business Daily's IBD 50 index, which includes Nvidia, fell 1.3% Wednesday. The index is testing resistance at its 50-day moving average. It would have performed better if not for a sell-off for index newcomer **Harrow** ([HROW](https://research.investors.com/quote.aspx?symbol=HROW)), which slid nearly 9%, and **Powell Industries** ([POWL](https://research.investors.com/quote.aspx?symbol=POWL)), which was down 10%.  
+但包括英伟达在内的投资者商业日报 IBD 50 指数周三下跌 1.3%。该指数正在测试其 50 天移动平均线的阻力位。如果不是指数新人**哈罗** （[HROW）](https://research.investors.com/quote.aspx?symbol=HROW) 下跌近 9% 和鲍**威尔工业** （[POWL）](https://research.investors.com/quote.aspx?symbol=POWL) 下跌 10% 的抛售，它的表现会更好。
+
+
+Stock Market Opportunities Ahead?未来的股市机会？
+-----------------------------------------
+
+
+Other IBD tools suggest investors will find more buying opportunities if the stock market holds up. The Relative Strength Blue Dot screen in [MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) — which identifies stocks with RS lines at highs while they form or break out of bases — has nearly 100 stocks.  
+其他 IBD 工具表明，如果股市保持稳定，投资者将找到更多买入机会。[MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 中的相对强弱蓝点屏幕——识别 RS 线在形成或突破基地时处于高位的股票——有近 100 只股票。
+
+
+Although some of those are extended from breakouts, keep an eye on **TJX Cos.** ([TJX](https://research.investors.com/quote.aspx?symbol=TJX)), **NetApp** ([NTAP](https://research.investors.com/quote.aspx?symbol=NTAP)), **Costco** ([COST](https://research.investors.com/quote.aspx?symbol=COST)) and **SPX Technologies** ([SPXC](https://research.investors.com/quote.aspx?symbol=SPXC)). NetApp reported quarterly results after the close and was little changed in extended trading.  
+尽管其中一些是从突破扩展而来的，但请密切关注 **TJX Cos.** （[TJX）、](https://research.investors.com/quote.aspx?symbol=TJX)**NetApp** （[NTAP](https://research.investors.com/quote.aspx?symbol=NTAP)）、**Costco** （[COST）](https://research.investors.com/quote.aspx?symbol=COST) 和 **SPX Technologies** （[SPXC](https://research.investors.com/quote.aspx?symbol=SPXC)）。NetApp 在收盘后公布了季度业绩，在延长交易中几乎没有变化。
+
+
+From a broad perspective, the stock market is behaving the way investors might expect. Indexes rebounded from their August lows and nothing in the current pause seems excessively bearish. Distribution days remain low and benign. Thus, IBD continues to recommend a stock exposure level of 60% to 80%.  
+从广义上讲，股市的表现符合投资者的预期。股指从 8 月的低点反弹，目前的暂停似乎并不过分看跌。分发天数仍然很低且良性。因此，IBD 继续建议股票敞口水平为 60% 至 80%。
+
+
+Keep in mind that market's reaction to Nvidia with a full day of trading Thursday is likely to impact the tech sector and beyond.  
+请记住，市场对英伟达周四全天交易的反应可能会影响科技行业及其他行业。
+
+
+Turning to the bond market, traders continue to price in lower interest rates. The 10-year Treasury yield is near its lowest levels of the year, at 3.84% late Wednesday. The two-year Treasury yield, at 3.866%, is at the lowest since May 2023, according to Dow Jones Market Data.  
+转向债券市场，交易员继续为较低的利率定价。10 年期美国国债收益率接近今年的最低水平，周三晚些时候为 3.84%。根据道琼斯市场数据，两年期美国国债收益率为 3.866%，处于 2023 年 5 月以来的最低水平。
+
+
+[View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082824.pdf).  
+[在此处查看 General Market Indicators 图表页面](https://www.investors.com/wp-content/uploads/2024/08/DailyGMI_082824.pdf)。
+
+
+**YOU MAY ALSO LIKE: 您可能还喜欢：**
+
+
+[The Four Pillars Of The IBD Methodology  
+IBD 方法的四大支柱](https://www.investors.com/how-to-invest/investors-corner/stock-market-investing-ibd-methodology/)
+
+
+[Risk Management In The Stock Market: How Much Money To Invest  
+股票市场的风险管理：投资多少钱](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)
+
+
+[IBD Live: Learn And Analyze Growth Stocks With The Pros  
+IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg|cms|ibdlive|2019|11|ibdlive|na|707596&src=A00387A)
+
+
+[Get Free IBD Newsletters: Market Prep \| Tech Report \| How To Invest  
+获取免费的 IBD 时事通讯：市场准备 |技术报告 |如何投资](https://shop.investors.com/offer/splashresponsive.aspx?id=newsletters-howtoinvest)
+
+
+[Futures: Nvidia Earnings Fail To Wow; Dow Giant Rises  
+期货：Nvidia 财报未能令人惊喜;道琼斯巨人指数上涨](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nvidia-earnings-guidance-salesforce-crowdstrike/)
 
 
 
